edit number format

--- a/home/cv.html
+++ b/home/cv.html
@@ -304,7 +304,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
     <li>Thiết-kế Meridian Terminal Emulator chạy trên MS Windows (WINMTE), dùng Borland C++.</li>
     <li>Thiết-kế Translation Tool Kit (TTK) dùng để dịch các câu/chữ trong chương-trình Meridian MAX của Nortel sang các ngôn-ngữ khác (gồm cả chữ Nhật), dùng Borland C++.</li>
     <li>Chuyển từ bản Đức-ngữ sang Việt-ngữ phần PC của hệ-thống-thanh-toán-bù-trừ-tự-động cho Ngân-hàng-nhà-nước-Việt-Nam.</li>
-    <li>Thiết-kế và thực-hiện lớp 2 và 3 của giao-thức X25, dùng ngôn-ngữ C.</li>
+    <li>Thiết-kế và thực-hiện lớp hai và ba của giao-thức X25, dùng ngôn-ngữ C.</li>
     <li>Thiết-kế, thực-hiện và nâng-cấp hệ-thống hỗ-trợ-lập-kế-hoạch và theo-dõi các dây-chuyền-tự-động-lắp-ráp-mạch-điện-tử tại nhà-máy Bosch, Đức. Hệ-thống chạy trên máy DEC Ultrix.</li>
   </ul>
 
@@ -320,7 +320,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <h3>Từ Tháng Ba năm 1987 đến Tháng Tư năm 1988 Cinotec, Viet Nam</h3>
   <p>Lập-trình</p>
   <ul>
-    <li>Thiết-kế lại và nâng-cấp nhiều bộ-công-cụ-phân-tích-giao-thức, dùng để thu-thập và phân-tích thông-tin truyền trong đường-nối-tiếp (với các giao-thức X25 lớp 2 và 3, ISDN).</li>
+    <li>Thiết-kế lại và nâng-cấp nhiều bộ-công-cụ-phân-tích-giao-thức, dùng để thu-thập và phân-tích thông-tin truyền trong đường-nối-tiếp (với các giao-thức X25 lớp hai và ba, ISDN).</li>
     <li>Phát-triển thư-viện giao-tiếp với cổng-nối-tiếp.</li>
   </ul>
 
@@ -345,6 +345,8 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <ul>
     <li><a href="https://vietrace365.vn/certificate/60d187a4b8a3be98581657ac" target='_blank'>Decathlon Race</a></li>
     <li><a href="https://vietrace365.vn/certificate/60d18960bd736b99e050503e" target='_blank'>We Care Run 2021</a></li>
+    <li><a href="https://vietrace365.vn/certificate/6163eaa811e3917748d97035" target='_blank'>Run  For Future 2021</a></li>
+    <li><a href="https://vietrace365.vn/certificate/615d0ffae1076e7b92b95249" target='_blank'>Run Around the World - Brunei</a></li>
     <li><a href="https://vietrace365.vn/certificate/610a59f7db00df9fc7be2c7b" target='_blank'>Run Around the World - Vietnam</a></li>
     <li><a href="https://vietrace365.vn/certificate/60dd1c8635ddf6b27ddf1106" target='_blank'>Run Around the World - Cambodia</a></li>
     <li><a href="https://vietrace365.vn/certificate/60f0ff23260a1a4df583fb46" target='_blank'>Run Around the World - Laos</a></li>
@@ -369,9 +371,10 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -400,6 +403,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
