--- a/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
+++ b/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
@@ -229,13 +229,13 @@ data-ad-slot="5275186684">
   <p>Tôi cho rằng nhiều người đã quên mất những bài học phổ thông và đến khi cần dùng kiến thức đó thì không có để dùng và luôn nghĩ rằng kiến thức phổ thông <i>không dùng được</i> trong cuộc sống. Đúng ra thì kiến thức <i>không được dùng</i> trong cuộc sống, không được dùng vì không biết cách dùng.</p>
   <p>Nếu thời xưa chương trình học lịch sử được biên soạn đầy đủ, và tướng Ô Mã Nhi của Mông Cổ được học (hoặc chịu học) kỹ môn lịch sử thế giới như học sinh phổ thông Việt Nam thì có thể đã tránh bị bắt sống trên <a href="https://vi.wikipedia.org/wiki/Tr%E1%BA%ADn_B%E1%BA%A1ch_%C4%90%E1%BA%B1ng_(1288)" target='_blank'>sông Bạch Đằng</a> và sau đó bị chết. Nếu học kỹ, hẳn Ô Mã Nhi phải biết rằng sông Bạch Đằng là nơi quân xăm lăng Nam Hán và Tống đã bị tiêu diệt.</p>
   <p>Thêm một vài ví dụ nữa về dùng kiến thức phổ thông.
-  <br>Ví dụ 1: giả sử hiện nay bạn 25 tuổi, mỗi tháng tiêu hết 5 triệu đồng, hỏi năm 60 tuổi bạn sẽ tốn bao nhiêu tiền mỗi tháng để được chi tiêu như hiện nay nếu mức trượt giá là 6% mỗi năm?<br>
+  <br>Ví dụ 1: giả sử hiện nay bạn 25 tuổi, mỗi tháng tiêu hết năm triệu đồng, hỏi năm 60 tuổi bạn sẽ tốn bao nhiêu tiền mỗi tháng để được chi tiêu như hiện nay nếu mức trượt giá là 6% mỗi năm?<br>
 Bài toán này rất đơn giản, chỉ cần dùng phép toán luỹ thừa: 5.000.000 nhân với (1 + 6%) luỹ thừa 35. Bạn có thể dùng nút xy trên máy tính bỏ túi (calculator) hoặc hàm power trong chương trình bảng tính để tính. Kết quả đã được làm tròn là 38.430.000 đồng.
   <br>Ví dụ 2: giả sử bạn sống đến năm 85 tuổi, hỏi trong 25 năm cuối đời bạn tiêu hết bao nhiêu tiền nếu mức trượt giá và mức chi tiêu hàng tháng giống như trong ví dụ 1?
-  <br>Đây là bài toán tìm tổng 25 số hạng đầu tiên của <a href="https://vi.wikipedia.org/wiki/C%E1%BA%A5p_s%E1%BB%91_nh%C3%A2n" target='_blank'>cấp số nhân</a>, số hạng thứ 1 là tổng chi tiêu trong năm 61 tuổi: 38.430.000 * 12 * 1,06 ≈ 488.835.000 đồng, công bội của cấp số nhân là 1 + 6%. Kết quả đã được làm tròn là 26.819.700.000 đồng.</p>
+  <br>Đây là bài toán tìm tổng 25 số hạng đầu tiên của <a href="https://vi.wikipedia.org/wiki/C%E1%BA%A5p_s%E1%BB%91_nh%C3%A2n" target='_blank'>cấp số nhân</a>, số hạng thứ nhất là tổng chi tiêu trong năm 61 tuổi: 38.430.000 * 12 * 1,06 ≈ 488.835.000 đồng, công bội của cấp số nhân là (1 + 6%). Kết quả đã được làm tròn là 26.819.700.000 đồng.</p>
 
 
-  <p>Khi đang tiêu mỗi tháng 5 triệu đồng bạn có nghĩ rằng một lúc nào đó mình sẽ tiêu ròng 26 tỉ đồng và có nghĩ đến việc làm sao để có 26 tỉ đồng không? Nếu bạn chưa nghĩ ra thì hãy xem tiếp <a href="/huu-ich/tich-luy">trang này</a>.</p>
+  <p>Khi đang tiêu mỗi tháng năm triệu đồng bạn có nghĩ rằng một lúc nào đó mình sẽ tiêu ròng 26 tỉ đồng và có nghĩ đến việc làm sao để có 26 tỉ đồng không? Nếu bạn chưa nghĩ ra thì hãy xem tiếp <a href="/huu-ich/tich-luy">trang này</a>.</p>
   <p>Do thiếu kiến thức phổ thông mà cả đoàn chiến thuyền bị tiêu diệt. Do thiếu kiến thức phổ thông mà <a href="http://web.archive.org/web/20130731094951/http://t5g.org.vn/?u=dt&id=3026" target='_blank'>70% người già</a> ở Việt Nam phải làm việc cực khổ và sống thiếu thốn.</p>
 
   <div class="todiscuss">
@@ -257,9 +257,10 @@ Bài toán này rất đơn giản, chỉ cần dùng phép toán luỹ thừa: 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -288,6 +289,7 @@ Bài toán này rất đơn giản, chỉ cần dùng phép toán luỹ thừa: 
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
