--- a/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
+++ b/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
@@ -230,15 +230,15 @@ data-ad-slot="5275186684">
   <p>Gần đây, William Cowie đã đặt câu hỏi này với tôi, tôi sẽ chọn bên nào để độc lập tài chính. Câu trả lời của tôi: tôi sẽ đầu tư cho tương lai và bỏ qua căn nhà ở New York. Hãy xem tại sao tôi nghĩ vậy.</p>
   <h2>Kết quả trong quá khứ, từ năm 1940 tới bây giờ</h2>
   <p>Trong lịch sử, giá nhà tăng theo thời gian. Vì vậy người đầu tư địa ốc hay chủ nhà đều gia tăng tài sản dễ dàng khi bỏ vốn vào nhà hay bất động sản.
-  <br>Theo ước lượng của Cơ quan Điều tra dân số Hoa Kỳ thì giá trị căn nhà tăng trung bình 4 lần (đã tính đến lạm phát) sau 60 năm, kể từ lần điều tra đầu tiên vào năm 1940. Ví dụ, căn nhà giá 30.600USD năm 1940 sẽ có giá khoảng 119.600USD trong năm 2000.
-  <br>Từ năm 2000, giá nhà tăng chậm hơn đáng kể, trong các năm 2007 tới 2011 còn giảm giá nữa. Nhưng các gì xuống rồi cũng sẽ lên. Chỉ riêng trong năm 2014, giá nhà tăng trung bình 6,84%, 5,52%, 4,55% trong 3 quý đầu tiên.
+  <br>Theo ước lượng của Cơ quan Điều tra dân số Hoa Kỳ thì giá trị căn nhà tăng trung bình bốn lần (đã tính đến lạm phát) sau 60 năm, kể từ lần điều tra đầu tiên vào năm 1940. Ví dụ, căn nhà giá 30.600 USD năm 1940 sẽ có giá khoảng 119.600 USD trong năm 2000.
+  <br>Từ năm 2000, giá nhà tăng chậm hơn đáng kể, trong các năm 2007 tới 2011 còn giảm giá nữa. Nhưng các gì xuống rồi cũng sẽ lên. Chỉ riêng trong năm 2014, giá nhà tăng trung bình 6,84%, 5,52%, 4,55% trong ba quý đầu tiên.
   <br>Ý của tôi là gì? Mặc dù bất động sản phồng lên rồi xẹp xuống, giá nhà có khuynh hướng tăng theo thời gian. Và người mua nhà đúng lúc có thể trở nên rất giàu chỉ bằng cách mua rồi để yên đó.</p>
   <p>Nhưng thực tế là, bất động sản không phải là con đường duy nhất để gia tăng tài sản; <a href="nhung-quyet-dinh-tot-cho-tuoi-gia">đầu tư đều đặn</a> là chìa khoá để trở nên giàu. Tổng cộng 500 công ty lớn nhất thị trường chứng khoán New York S&amp;P 500 lời 1104,264% từ năm 1940 đến 2015, nghĩa là 7,42% mỗi năm.
-  <br>Thử tưởng tượng một người đầu tư 30.600USD trong năm 1940 và để yên đó. Lãi kép 7,42%/năm trong 60 năm sẽ cho ra số tiền 2.243.005,35USD!</p>
+  <br>Thử tưởng tượng một người đầu tư 30.600 USD trong năm 1940 và để yên đó. Lãi kép 7,42%/năm trong 60 năm sẽ cho ra số tiền 2.243.005,35 USD!</p>
 
 
   <h2>Logic cá nhân thích đầu tư hơn</h2>
-  <p>Tất nhiên tính như trên là đơn giản hoá quá mức. Có những yếu tố như là người tìm mua nhà năm 1940 chưa chắc có ngay 30.600USD để đưa vào cổ phiếu và mặt khác cũng cần chỗ để ở. Nhưng ít ra thì con số trên cho thấy sức mạnh của lãi kép, một trong những điều kỳ diệu trên đời.
+  <p>Tất nhiên tính như trên là đơn giản hoá quá mức. Có những yếu tố như là người tìm mua nhà năm 1940 chưa chắc có ngay 30.600 USD để đưa vào cổ phiếu và mặt khác cũng cần chỗ để ở. Nhưng ít ra thì con số trên cho thấy sức mạnh của lãi kép, một trong những điều kỳ diệu trên đời.
   <br>Nhưng có những lý do khác khiến tôi nghĩ rằng nên đầu tư vào cổ phiếu và trái phiếu hơn là mua nhà.</p>
   <ul>
     <li><b>Tiền sửa và nâng cấp nhà</b>
@@ -246,7 +246,7 @@ data-ad-slot="5275186684">
     <br>Khi bạn đi thuê nhà, bạn không chịu trách nhiệm về những thứ trên. Hơn nữa, khi cần phải sửa thì đã có chủ nhà trả tiền nên không ảnh hưởng đến ngân sách của bạn.</li>
     <li><b>Chi phí khi mua nhà và bán nhà</b>
     <br>Theo con số gần đây của Cơ quan Điều tra dân số Hoa Kỳ, trung bình một người Mỹ dời nhà 11,7 lần trong đời. Và từ 18 tuổi trở đi, một người dời nhà 9,1 lần. Những lần dời nhà đó có thể là dời từ nhà thuê này sang nhà thuê khác, cũng có thể là mua nhà này bán nhà kia.<br />
-Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ nhà bán. Nhưng bán nhà thì có những chi phí khác, bên môi giới bán nhà có thể đòi 3 tới 7 phần trăm giá căn nhà (ở Việt Nam thì 0,5 tới 1 phần trăm), bạn còn có thể tốn thêm phí khi vay tiền mua căn nhà mới, có khi bạn còn phải trả phí sang tên khi bán nhà, tuỳ theo thoả thuận. Còn khi đi thuê nhà mới, bạn chỉ tốn tiền đặt cọc (lấy lại được).</li>
+Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ nhà bán. Nhưng bán nhà thì có những chi phí khác, bên môi giới bán nhà có thể đòi 3% tới 7% giá căn nhà (ở Việt Nam thì 0,5% tới 1%), bạn còn có thể tốn thêm phí khi vay tiền mua căn nhà mới, có khi bạn còn phải trả phí sang tên khi bán nhà, tuỳ theo thoả thuận. Còn khi đi thuê nhà mới, bạn chỉ tốn tiền đặt cọc (lấy lại được).</li>
     <li><b>Mua bán không đúng lúc</b>
     <br>Bạn có quen ai mua nhà trong các năm 2006-2007 và bán trước năm 2012 (thời điểm biến động thị trường bất động sản Mỹ, cũng hơi giống ở Việt Nam)! Dường như ai cũng có người quen bị lỗ vì mua nhà giá cao và bán giá thấp. Nếu bạn cũng trong số đó thì bạn thấy bất động sản không phải là một nơi tốt để đưa những đồng tiền kiếm được một cách cực khổ vào.
     <br>Khi bạn đi thuê nhà, những biến động của thị trường bất động sản không ảnh hưởng nhiều. Giá cho thuê chắc chắn là có tăng theo thời gian, nhưng bạn không bị lỗ khi phải bán nhà không đúng lúc. Thêm nữa, nếu giá cho thuê tăng quá, bạn có thể tìm nơi khác để thuê.</li>
@@ -257,7 +257,7 @@ Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ 
   <p>Nếu sở hữu hoàn toàn một ngôi nhà lúc về hưu thì thật lý tưởng, tôi tin rằng nó cũng lý tưởng ngang với một đống tiền trong ngân hàng. Tại sao? Vì tôi thích có nhiều lựa chọn. Càng có nhiều lựa chọn càng tốt.
   <br>Khi bạn không sở hữu nhà, bạn có thể ở đâu trên thế giới cũng được, có thể kiếm việc làm mới và thú vị ở bất kỳ nơi đâu. Bạn có thể sống du cư từ nơi này sang nơi khác. Thêm nữa, nếu nơi bạn đang sống trở nên đắt đỏ, bạn có thể dời đi nơi khác trong cùng một nước hoặc thậm chí khác nước. Ngược lại với căn nhà sở hữu, bạn có thể ở và hưởng thụ cuộc sống không nợ.</p>
   <h2>Hãy hướng tới một thế giới hoàn hảo</h2>
-  <p>Bạn nên đầu tư cho quỹ hưu trí hay là nên mua nhà để sống mãi mãi? Trong một thế giới hoàn hảo, bạn không phải chọn. Tốt nhất thì nên có cả hai: sở hữu một căn nhà và một tài khoản hưu trí hậu hĩnh.
+  <p>Bạn nên đầu tư cho quỹ hưu trí hay là nên mua nhà để sống mãi mãi? Trong một thế giới hoàn hảo, bạn không cần phải chọn. Tốt nhất thì nên có cả hai: sở hữu một căn nhà và một tài khoản hưu trí hậu hĩnh.
   <br>Tôi cho rằng chúng ta nên cân nhắc việc này thật cẩn thận. Mua nhà là tốt đối với một số người, nhưng lại không tốt đối với một số người khác.
   <br>Chúng ta đều giống nhau ở chỗ là phải tích luỹ cho tương lai và trở nên giàu có để cuộc sống càng ngày càng dễ chịu hơn. Đối với tôi, một tài khoản đầu tư đầy ắp để có thể làm bất cứ điều gì thì thích hơn một căn nhà.
   <br>Bởi vì đối với tôi, căn nhà không chỉ là một tài sản mà còn là một trách nhiệm phải mang. Còn có tiền thì có nhiều lựa chọn.</p>
@@ -297,9 +297,10 @@ Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -328,6 +329,7 @@ Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
