--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -228,8 +228,8 @@ data-ad-slot="5275186684">
   <p>Bài dưới đây dịch lại từ <a href="http://www.msn.com/en-us/money/news/how-this-couple-retired-in-their-30s-to-travel-the-world/ar-AAacOgr?ocid=iehp" target="_blank">bài báo trên MSN</a>.</p>
   <p><b>Một cặp vợ chồng đủ tiền về hưu và đi du lịch quanh thế giới trước tuổi 40 bằng cách nào?</b></p>
   <div class="flright"><amp-img alt="Jeremy - Winnie" src="/images/JeremyWinnie.jpg" width="728" height="504" layout="responsive"></amp-img></div>
-  <p>Jeremy tốt nghiệp đại học xong là bắt đầu làm cho bộ phận thiết kế điện thoại di động của Motorola ngay, làm 80 giờ mỗi tuần trong 4-5 năm. Động cơ của tinh thần làm việc đó là món nợ 40 ngàn đô-la, trong đó 35 ngàn đô-la là tiền vay để học và 5 ngàn đô-la là tiền chi tiêu bằng thẻ tín dụng.
-  <br>Với mức lương 40 ngàn đô-la mỗi năm mà anh ta còn mua một xe hơi mới và một căn nhà 3 phòng ngủ, để cho bằng bạn bè; vì nhà mới mua ở xa chỗ làm nên anh không còn đi làm bằng xe đạp được nữa mà phải lái xe hơi hết 40 phút. Khoản nợ mua nhà và xe cộng với nợ cũ làm anh ta phải chú ý đến tình hình tài chính của mình, và anh bắt đầu lập kế hoạch để trả hết nợ và về hưu ở tuổi 65, rồi bắt đầu đầu tư. Anh ta dùng những khoản vay miễn lãi trong 12 tháng để trả phần lớn nợ tiền học và tiền mua xe.
+  <p>Jeremy tốt nghiệp đại học xong là bắt đầu làm cho bộ phận thiết kế điện thoại di động của Motorola ngay, làm 80 giờ mỗi tuần trong 4-5 năm. Động cơ của tinh thần làm việc đó là món nợ 40 ngàn đô-la, trong đó 35 ngàn đô-la là tiền vay để học và năm ngàn đô-la là tiền chi tiêu bằng thẻ tín dụng.
+  <br>Với mức lương 40 ngàn đô-la mỗi năm mà anh ta còn mua một xe hơi mới và một căn nhà ba phòng ngủ, để cho bằng bạn bè; vì nhà mới mua ở xa chỗ làm nên anh không còn đi làm bằng xe đạp được nữa mà phải lái xe hơi hết 40 phút. Khoản nợ mua nhà và xe cộng với nợ cũ làm anh ta phải chú ý đến tình hình tài chính của mình, và anh bắt đầu lập kế hoạch để trả hết nợ và về hưu ở tuổi 65, rồi bắt đầu đầu tư. Anh ta dùng những khoản vay miễn lãi trong 12 tháng để trả phần lớn nợ tiền học và tiền mua xe.
   <br>Khi anh dọn nhà từ Chicago sang Seattle, chuyển sang làm cho Microsoft, lương tăng lên đến 85 ngàn đô-la mỗi năm, anh ta lại lặp lại những quyết định cũ (bây giờ anh ta gọi đó là những sai lầm): mua nhà, nhà ở xa chỗ làm, không đi nghỉ. Sau ba năm, một bạn gái khuyên anh nên đi nghỉ dài ngày tới Philippines. Anh ta dành tuần đầu tiên cho công việc, xem email. Nhưng trái cây và biển nhiệt đới bắt đầu có tác dụng, đến tuần thứ ba anh ta nghĩ xem làm sao để có thể sống cuộc sống dễ chịu như vậy quanh năm.
   <br>Anh bán căn nhà đi, thuê nhà ở gần chỗ làm, đi làm bằng xe đạp. Chi tiêu giảm xuống, anh ta có thể để dành được. Trong một kỳ hội thảo ở Bắc Kinh, anh gặp người vợ tương lai của mình, Winnie, đến từ Đài Loan, đang để dành được đến 50% thu nhập để đi du lịch. Bây giờ Jeremy 40 tuổi, Winnie 36 tuổi đã tự chủ tài chính, đi du lịch quanh thế giới, viết blog về cuộc sống đáng ghen tị của họ trên <a href="http://gocurrycracker.com/" target="_blank">GoCurryCracker.com</a>.
   <br>Dưới đây là câu chuyện về cách họ để dành đủ tiền để về hưu trước 40 tuổi (khi về hưu Jeremy 38 tuổi và Winnie 33 tuổi) và cách họ tiêu tiền và dùng thời gian sau đó.</p>
@@ -239,11 +239,11 @@ data-ad-slot="5275186684">
   <p><u>Jeremy</u>: Khi tôi làm ở Motorola, mỗi xu của tôi đều dùng để trả nợ. Nếu tháng nào tôi dư 10$, tôi sẽ trả thêm 10$ vào khoản nợ tiền học. Tôi có để dành quỹ hưu trí tự nguyện <a href="/huu-ich/tich-luy#luonghuu">401(k)</a> nhưng tôi lại vay từ đó để mua nhà, khi tôi bán nhà để chuyển đến Seattle thì tôi trả món nợ đó.
   <br>Khi tôi đổi chỗ làm, tôi vẫn chưa có nhiều tiền tiết kiệm, nhưng tôi sắp sạch nợ. Ở Microsoft, tôi bắt đầu tiết kiệm nhiều hơn. Tôi đóng vào quỹ 401(k) tối đa và tiết kiệm ngoài quỹ nữa. Sau khi tôi gặp Winnie, chúng tôi quyết định về hưu sớm, chúng tôi bắt đầu đọc nhưng cuốn sách như là "Your Money or Your Life" và tăng dần lên tới mức tiết kiệm 70% thu nhập. Trong hai năm làm việc cuối cùng, chúng tôi hầu như chuyển hết thu nhập vào tài khoản đầu tư vì chúng tôi có cổ tức và lãi để sống.
   <br>Chúng tôi sống gần khu đại học nên có thể đi bộ đến mọi nơi cần thiết, vì vậy chúng tôi không cần xe hơi. Tôi đi làm bằng xe đạp, 8-20 dặm mỗi ngày. Chúng tôi mua thực phẩm từ chợ nông dân và mạng tiêu thụ nông sản. Chi tiêu lớn nhất của người ta thường là tiền nhà, tiền đi lại và thực phẩm, chúng tôi đã cắt giảm mạnh ba thứ đó nên chi tiêu hàng tháng của chúng tôi dưới 2000 đô-la.
-  <br>Có lẽ tôi đã làm việc nhiều hơn kế hoạch 3 năm, hoặc là chúng tôi đã tiết kiệm quá nhiều. Mục tiêu luôn luôn là đi du lịch, sau khi nghỉ việc, chúng tôi sẽ để một năm rưỡi đi quanh Mexico và Trung Mỹ, sau đó về Đài Loan để sinh con.</p>
+  <br>Có lẽ tôi đã làm việc nhiều hơn kế hoạch ba năm, hoặc là chúng tôi đã tiết kiệm quá nhiều. Mục tiêu luôn luôn là đi du lịch, sau khi nghỉ việc, chúng tôi sẽ để một năm rưỡi đi quanh Mexico và Trung Mỹ, sau đó về Đài Loan để sinh con.</p>
   <b>Mức lương của anh chị là bao nhiêu?</b>
   <p><u>Jeremy</u>: Khi tôi mới tốt nghiệp, tôi kiếm được chừng 40 ngàn đô-la mỗi năm, trước khi tôi chuyển đi thì đã lên được hơn 50 ngàn. Tôi bắt đầu ở Microsoft với mức 85 ngàn mỗi năm và sau 12 năm thì tôi có mức 140 ngàn.
   <br><u>Winnie</u>: Tôi làm cùng ngành: điện thoại và máy tính, công việc cuối cùng của tôi là quản lý dự án ở Dell. Tôi kiếm được 32 ngàn đô-la ở Đài Loan.
-  <br><u>Jeremy</u>: Chúng tôi cưới được 5 năm rồi, Winnie nghỉ làm và dọn đến Seattle sau khi cưới, nên khoảng 3-4 năm trước khi chúng tôi về hưu, lúc lương tôi đạt đến cao nhất thì cô ấy không đi làm.
+  <br><u>Jeremy</u>: Chúng tôi cưới được năm năm rồi, Winnie nghỉ làm và dọn đến Seattle sau khi cưới, nên khoảng 3-4 năm trước khi chúng tôi về hưu, lúc lương tôi đạt đến cao nhất thì cô ấy không đi làm.
   <br><u>Winnie</u>: Tôi là người ăn bám.</p>
 
 
@@ -254,7 +254,7 @@ data-ad-slot="5275186684">
   <b>Vậy là chị có đầu tư?</b>
   <p>Vâng</p>
   <b>Anh chị có tính ra một số tiền cụ thể cần để dành đủ để về hưu không?</b>
-  <p><u>Winnie</u>: Ý tưởng ban đầu khi chúng tôi cưới là sẽ nghỉ ngay và đi du lịch, cho nên tôi nghỉ làm. Nhưng Jeremy nói rằng nên chờ 3 năm. Anh ấy thích dự án đang làm.
+  <p><u>Winnie</u>: Ý tưởng ban đầu khi chúng tôi cưới là sẽ nghỉ ngay và đi du lịch, cho nên tôi nghỉ làm. Nhưng Jeremy nói rằng nên chờ ba năm. Anh ấy thích dự án đang làm.
   <br><u>Jeremy</u>: Tôi không muốn rời dự án giữa chừng. Kế hoạch đầu tiên xoay quanh việc lặn, du lịch đến những khu du lịch có lặn biển và kiếm tiền bằng cách dạy lặn.
   <br><u>Winnie</u>: Chúng tôi đã cố nghĩ cách kiếm tiền khi đi du lịch.
   <br><u>Jeremy</u>: Sau đó, chúng tôi nói chuyện với những huấn luyện viên lặn bị sa lầy ở các nước đang phát triển vì không kiếm đủ tiền để mua vé về nước.
@@ -273,14 +273,14 @@ data-ad-slot="5275186684">
   <b>Khi khủng hoảng tài chính, kế hoạch của anh chị bị ảnh hưởng thế nào?</b>
   <p><u>Jeremy</u>: Trên giấy tờ thì chúng tôi lỗ mất 400 ngàn đô-la, nhưng tôi buồn là lúc đó không có nhiều tiền để mua thêm. Lúc đó tôi thấy cổ phiếu như là bán đổ bán tháo, và tôi muốn mua thêm. Lúc đó tôi vét hết tiền để mua, tôi còn nghĩ có nên vay tiền để mua không. Hai năm sau, chúng tôi giàu hơn nhiều so với lúc đầu. Bạn đừng sợ hãi bán hết cổ phiếu ở đáy để rút ra khỏi thị trường thì thị trường không ảnh hưởng đến bạn nhiều. Thậm chí, chúng ta còn mạnh hơn nữa. Có thể khủng hoảng có ảnh hưởng đến quyết định làm việc lâu hơn vài năm, một phần là dự án lúc đó cũng hay, một phần là tôi muốn vượt qua lúc thị trường xấu và tiết kiệm nhiều hơn.</p>
   <b>Khi nào anh chị biết là đã đủ để nghỉ hẳn? Lúc đó anh chị có bao nhiêu?</b>
-  <p><u>Jeremy</u>: Chúng tôi thấy đủ sau khi khủng hoảng 3 năm. Chúng tôi có thể sống suốt đời với một triệu đô-la. Chúng tôi tiêu 40 ngàn đô-la mỗi năm, trừ lúc chuẩn bị có con năm ngoái.</p>
+  <p><u>Jeremy</u>: Chúng tôi thấy đủ sau khi khủng hoảng ba năm. Chúng tôi có thể sống suốt đời với một triệu đô-la. Chúng tôi tiêu 40 ngàn đô-la mỗi năm, trừ lúc chuẩn bị có con năm ngoái.</p>
   <b>Anh chị có cần chuyển đến những nước ít tốn kém hơn để đủ sống?</b>
   <p><u>Winnie</u>: Ở Seattle chúng tôi cũng chỉ tiêu 40 ngàn mỗi năm.
-  <br><u>Jeremy</u>: Chúng tôi tiêu ít hơn 3 ngàn mỗi tháng khi ở Mexico. Chúng tôi ở trong căn nhà 3 phòng ngủ ở trung tâm San Miguel de Allende. Chúng tôi suýt mua một căn nhà ở đó. Chúng tôi ăn tiệm hai-ba lần mỗi ngày, đi uống với bạn bè, thuê người làm vườn và dọn nhà, tất cả chỉ hết 2500 đô-la. Nếu sống như vậy ở Mỹ thì sẽ tốn hơn nhiều, nên chúng tôi phải thay đổi, không ra ngoài uống nữa. Không nên trả 15$ để uống một ly rượu, bạn có thể uống trong sân nhà. Nếu sống như vậy ở Manhattan thì còn tốn hơn nữa.</p>
+  <br><u>Jeremy</u>: Chúng tôi tiêu ít hơn ba ngàn mỗi tháng khi ở Mexico. Chúng tôi ở trong căn nhà ba phòng ngủ ở trung tâm San Miguel de Allende. Chúng tôi suýt mua một căn nhà ở đó. Chúng tôi ăn tiệm hai-ba lần mỗi ngày, đi uống với bạn bè, thuê người làm vườn và dọn nhà, tất cả chỉ hết 2500 đô-la. Nếu sống như vậy ở Mỹ thì sẽ tốn hơn nhiều, nên chúng tôi phải thay đổi, không ra ngoài uống nữa. Không nên trả 15$ để uống một ly rượu, bạn có thể uống trong sân nhà. Nếu sống như vậy ở Manhattan thì còn tốn hơn nữa.</p>
 
 
   <b>Bây giờ anh chị có một thu nhập nào không?</b>
-  <p>Năm ngoái, thu được từ trang blog 2000 đô-la. Đó là tiền quảng cáo, đủ để trả tiền thuê server. Ngoài ra, tất cả thu nhập của chúng tôi chỉ từ cổ tức và lãi. Chúng tôi sống hoàn toàn từ các khoản đó. Tôi quản lý thuế rất kỹ cho các tài sản đó, nhờ vậy năm 2013 và 2014, không phải trả đồng thuế nào mà mỗi năm còn chuyển 20 ngàn đô-la sang tài khoản hưu Roth IRA để được miễn thuế. Tôi đã đưa các báo cáo thuế lên blog để mọi người thấy thực tế như thế nào. Kế hoạch của chúng tôi là trong 30 năm tới sẽ chuyển hết tiền từ tài khoản hưu 401(k) sang tài khoản hưu Roth IRA để không chịu thuế, tóm lại là chúng tôi sẽ có 3 triệu đô-la trong 30 năm tới mà không phải đóng thuế.
+  <p>Năm ngoái, thu được từ trang blog 2000 đô-la. Đó là tiền quảng cáo, đủ để trả tiền thuê server. Ngoài ra, tất cả thu nhập của chúng tôi chỉ từ cổ tức và lãi. Chúng tôi sống hoàn toàn từ các khoản đó. Tôi quản lý thuế rất kỹ cho các tài sản đó, nhờ vậy năm 2013 và 2014, không phải trả đồng thuế nào mà mỗi năm còn chuyển 20 ngàn đô-la sang tài khoản hưu Roth IRA để được miễn thuế. Tôi đã đưa các báo cáo thuế lên blog để mọi người thấy thực tế như thế nào. Kế hoạch của chúng tôi là trong 30 năm tới sẽ chuyển hết tiền từ tài khoản hưu 401(k) sang tài khoản hưu Roth IRA để không chịu thuế, tóm lại là chúng tôi sẽ có ba triệu đô-la trong 30 năm tới mà không phải đóng thuế.
   <br>Chúng tôi ghi chép chi tiêu rất cẩn thận, chỉ nhằm để đưa vào blog với mục đích thông tin giáo dục. Chúng tôi không quá dè xẻn. Nếu cần gì thì mua, muốn tiêu cho việc gì thì tiêu.</p>
   <b>Từ khi về hưu, anh chị đã làm gì?</b>
   <p><u>Jeremy</u>: Chúng tôi đi Mexico với ý nghĩ rằng có thể học tiếng Tây-ban-nha và du lịch quanh Trung Mỹ, Nam Mỹ. Chúng tôi nghĩ rằng chỉ ở Mexico hai tháng, nhưng lại ở đến chín tháng.
@@ -334,9 +334,10 @@ Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết đ
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -365,6 +366,7 @@ Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết đ
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
