--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -230,15 +230,15 @@ data-ad-slot="5275186684">
   <p>Bạn 25 tuổi, mới vào đời với hai bàn tay trắng, lương đủ sống. Bạn ước mơ có một tỉ đồng. Làm thế nào để có?
   <br>Rất dễ! Đồng minh của bạn là thời gian, thời gian sẽ giúp bạn trở thành tỉ phú một cách dễ dàng, hãy luôn đồng hành với đồng minh đó. Chỉ cần <b>để dành 33 ngàn đồng mỗi ngày</b>, thời gian sẽ đem đến <b>một tỉ đồng</b> cho bạn. Thời gian không bao giờ ngừng, đừng để thời gian bỏ rơi.
 <br style="clear:both">
-  Giả sử trượt giá 5%/năm. Sau 35 năm thì 5,516 tỉ đồng mới tương đương 1 tỉ đồng hiện tại. Để có 5,516 tỉ đồng vào lúc đó, bạn hãy để 1,017 triệu đồng mỗi tháng vào nơi nào <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi 10% mỗi năm</a>, năm sau phải để nhiều hơn năm trước 5%.</p>
+  Giả sử trượt giá 5%/năm. Sau 35 năm thì 5,516 tỉ đồng mới tương đương một tỉ đồng hiện tại. Để có 5,516 tỉ đồng vào lúc đó, bạn hãy để 1,017 triệu đồng mỗi tháng vào nơi nào <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi 10% mỗi năm</a>, năm sau phải để nhiều hơn năm trước 5%.</p>
 
 
   <p>Câu hỏi:</p>
   <ol>
     <li>5,516 tỉ đồng vào lúc đó có lớn không?
-    <br>Hiện nay với một tỉ đồng bạn có thể mua được 20 ngàn tô phở, nếu mỗi ngày ăn 3 tô phở thì hơn 18 năm bạn mới ăn hết 1 tỉ đồng phở. Do đã tính đến trượt giá nên 5,516 tỉ đồng lúc đó lớn như 1 tỉ đồng vào lúc này, vẫn đủ để ăn phở hơn 18 năm.</li>
+    <br>Hiện nay với một tỉ đồng bạn có thể mua được 20 ngàn tô phở, nếu mỗi ngày ăn ba tô phở thì hơn 18 năm bạn mới ăn hết một tỉ đồng phở. Do đã tính đến trượt giá nên 5,516 tỉ đồng lúc đó lớn như một tỉ đồng vào lúc này, vẫn đủ để ăn phở hơn 18 năm.</li>
     <li>1 tỉ đồng vẫn chưa đủ nhiều.
-    <br>Vậy thì bạn thực hiện ước mơ 2 tỉ hoặc 4 tỉ đồng. Chỉ cần để dành 2,034 triệu hoặc 4,068 triệu đồng mỗi tháng.</li>
+    <br>Vậy thì bạn thực hiện ước mơ hai tỉ hoặc bốn tỉ đồng. Chỉ cần để dành 2,034 triệu hoặc 4,068 triệu đồng mỗi tháng.</li>
     <li>Bây giờ gửi tiết kiệm ở ngân hàng chỉ lời được 6,5%/năm, để tiền vào chỗ nào sinh lợi tới 10%/năm?
     <br><a href="/huu-ich/de-tien-vao-dau">Góp vốn</a> vào các công ty có hàng chục triệu khách hàng ở Việt Nam và các nước khác như là Vinamilk, Kinh Đô, FPT…</li>
     <li>Mỗi tháng để dành có một triệu đồng làm sao góp vốn vào các công ty lớn đó?
@@ -272,9 +272,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -303,6 +304,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
