--- a/huu-ich/dau-tu-co-phieu/maxx-pltv.html
+++ b/huu-ich/dau-tu-co-phieu/maxx-pltv.html
@@ -243,7 +243,7 @@ data-ad-slot="5275186684">
     <li>Tổng số đơn vị của mỗi quỹ trong ba quỹ trên là luôn luôn được xác định, số đơn vị tăng khi khách hàng nộp thêm tiền vào, giảm khi khách hàng rút tiền ra, hoặc tăng giảm khi khách hàng chuyển từ quỹ này sang quỹ khác.</li>
     <li>Thứ Hai hàng tuần, ngân hàng HSBC đóng vai trò giám sát sẽ tính tổng tài sản của từng quỹ từ tổng số cổ phiếu, trái phiếu và giá giao dịch mới nhất của từng cổ phiếu, trái phiếu, các khoản tiền gửi ngân hàng, trừ đi chi phí quản lý quỹ, chia tổng tài sản cho số đơn vị đang có trong quỹ sẽ ra giá Manulife một đơn vị quỹ, giá này tính lẻ đến một phần ngàn đồng Việt Nam. Giá đơn vị quỹ tăng thì tài sản của khách hàng tăng theo.</li>
     <li>Hàng tháng khách hàng trả phí quản lý hợp đồng 25 ngàn đồng, phí này được trả bằng cách trừ vào một số lẻ đơn vị quỹ.</li>
-    <li>Mỗi khách hàng có một tài khoản là số đơn vị quỹ của riêng khách hàng đó trong 3 quỹ trên</li>
+    <li>Mỗi khách hàng có một tài khoản là số đơn vị quỹ của riêng khách hàng đó trong ba quỹ trên</li>
   </ul>
 
 
@@ -257,19 +257,19 @@ data-ad-slot="5275186684">
     <li>quỹ Cân Bằng: đầu tư 40-60% tiền vào cổ phiếu, phần còn lại để vào trái phiếu</li>
   </ul>
   <p><a href="http://vi.wikipedia.org/wiki/Trái_phiếu" target="_blank">Trái phiếu</a> có lợi nhuận ổn định, có thể cao hơn lãi tiết kiệm ở ngân hàng đôi chút. <a href="http://vi.wikipedia.org/wiki/Cổ_phiếu" target="_blank">Cổ phiếu</a> có thể cho lợi nhuận cao nhưng không ổn định.
-  <br>Khách hàng có thể đặt tiền vào 1 đến 3 quỹ trên, theo tỉ lệ tuỳ ý, được chuyển tiền từ quỹ này sang quỹ khác bất kỳ lúc nào.
-  <br>Tiền của khách hàng đóng vào, (sau khi trừ phí ban đầu trong 3 năm đầu tiên) sẽ được đổi thành đơn vị quỹ. Số đơn vị quỹ của mỗi khách hàng được tính lẻ đến một phần mười ngàn.
+  <br>Khách hàng có thể đặt tiền vào một đến ba quỹ trên, theo tỉ lệ tuỳ ý, được chuyển tiền từ quỹ này sang quỹ khác bất kỳ lúc nào.
+  <br>Tiền của khách hàng đóng vào, (sau khi trừ phí ban đầu trong ba năm đầu tiên) sẽ được đổi thành đơn vị quỹ. Số đơn vị quỹ của mỗi khách hàng được tính lẻ đến một phần mười ngàn.
   <br>Khi khách hàng cần tiền thì đổi từ đơn vị quỹ thành tiền theo giá mới nhất. Khách hàng có thể rút tiền ra bất kỳ lúc nào. <a href="https://docs.google.com/spreadsheet/ccc?key=0Av98IPxo40-3dHVkWEtyM0MxRmpobmxmZDBIaFZZQ0E#gid=4" target="_blank">Đồ thị giá đơn vị quỹ</a> của ba quỹ trên cho thấy hiệu quả đầu tư của quỹ Maxx - PLTV tốt hơn chỉ số VN-Index.</p>
 
 
   <h2>Dùng Maxx - PLTV như thế nào?</h2>
   <h3>Để tích luỹ tiền hàng tháng</h3>
   <p>Khách hàng sẽ <a href="../ke-hoach-tai-chinh/">dự tính</a> số tiền mình sẽ đầu tư lâu dài và liên tục hàng tháng là bao nhiêu. Từ con số, đó tư vấn viên sẽ giúp khách hàng chọn một mức cam kết đầu tư tối thiểu hàng tháng, khoảng ⅙ đến ⅓ số trên, không nhỏ hơn một triệu đồng. Khi ký hợp đồng, khách hàng sẽ được bảo hiểm tử vong khoảng 100 lần mức cam kết hàng tháng đó.
-  <br>Hàng tháng khách hàng đóng vào số tiền cam kết đầu tư tối thiểu và đóng thêm (nếu có). Mỗi năm, khách hàng có thể đóng thêm gấp 10 lần số tiền cam kết đầu tư tối thiểu hàng năm, khách hàng nên chia số tiền đóng thêm ra nhiều đợt, đóng cách nhau đều đặn theo phương pháp <a href="../dau-tu-co-phieu/">bình quân giá cổ phiếu</a>. Toàn bộ tiền đóng thêm sẽ được đổi thành đơn vị quỹ. Để lợi nhuận sinh ra bù lại những khoản phí quản lý hợp đồng thì khách hàng nên đóng thêm phí để cho số dư tài khoản trong năm đầu lớn hơn 5 triệu đồng.
+  <br>Hàng tháng khách hàng đóng vào số tiền cam kết đầu tư tối thiểu và đóng thêm (nếu có). Mỗi năm, khách hàng có thể đóng thêm gấp 10 lần số tiền cam kết đầu tư tối thiểu hàng năm, khách hàng nên chia số tiền đóng thêm ra nhiều đợt, đóng cách nhau đều đặn theo phương pháp <a href="../dau-tu-co-phieu/">bình quân giá cổ phiếu</a>. Toàn bộ tiền đóng thêm sẽ được đổi thành đơn vị quỹ. Để lợi nhuận sinh ra bù lại những khoản phí quản lý hợp đồng thì khách hàng nên đóng thêm phí để cho số dư tài khoản trong năm đầu lớn hơn năm triệu đồng.
   <br>Khách hàng có thể yêu cầu tăng/giảm số tiền cam kết đầu tư tối thiểu hàng tháng tuỳ theo tình hình tài chính gia đình, có thể tạm ngưng đóng tiền mà vẫn được bảo hiểm và nhận lợi nhuận.</p>
   <h3>Chuyển <i>một phần</i> tiền từ tiết kiệm ở ngân hàng sang Maxx - PLTV</h3>
-  <p>Số tiền cần chuyển sang Maxx - PLTV được chia làm 15-18 phần bằng nhau; 11 phần được đưa vào quỹ Maxx - PLTV trong 6 tháng liên tiếp theo kiểu <a href="../dau-tu-co-phieu/">DCA</a>, số còn lại được giữ ở ngân hàng để rút dần hàng tháng chuyển vào Maxx - PLTV trong năm thứ hai.</p>
-  <p>Tuỳ theo thời gian đầu tư, khách hàng có thể yêu cầu chuyển tiền giữa 3 quỹ. Khi thời gian nhiều hơn 5 năm thì để tiền vào quỹ Tăng Trưởng, khi thời gian ít hơn 5 năm và giá cổ phiếu không tăng hoặc giảm thì chuyển tiền vào quỹ Cân Bằng.</p>
+  <p>Số tiền cần chuyển sang Maxx - PLTV được chia làm 15-18 phần bằng nhau; 11 phần được đưa vào quỹ Maxx - PLTV trong sáu tháng liên tiếp theo kiểu <a href="../dau-tu-co-phieu/">DCA</a>, số còn lại được giữ ở ngân hàng để rút dần hàng tháng chuyển vào Maxx - PLTV trong năm thứ hai.</p>
+  <p>Tuỳ theo thời gian đầu tư, khách hàng có thể yêu cầu chuyển tiền giữa ba quỹ. Khi thời gian nhiều hơn năm năm thì để tiền vào quỹ Tăng Trưởng, khi thời gian ít hơn năm năm và giá cổ phiếu không tăng hoặc giảm thì chuyển tiền vào quỹ Cân Bằng.</p>
   <p>Mọi giao dịch với quỹ Maxx - Phúc Lộc Thịnh Vượng rất thuận tiện cho khách hàng, phần lớn được thực hiện tại địa điểm và theo thời gian của khách hàng.</p>
 
 
@@ -289,7 +289,7 @@ data-ad-slot="5275186684">
     <li>phí bảo hiểm rủi ro để chia sẻ rủi ro tử vong giữa những người cùng tham gia bảo hiểm</li>
     <li>phí quản lý hợp đồng: 25 ngàn đồng / tháng</li>
     <li>phí quản lý quỹ: 2% giá trị tài khoản / năm (được tính vào giá đơn vị quỹ mỗi tuần)</li>
-    <li>phí ban đầu trong 3 năm đầu tiên (được hoàn lại gấp đôi vào năm thứ 15, tương đương với lãi suất 5%/năm trong suốt 15 năm)</li>
+    <li>phí ban đầu trong ba năm đầu tiên (được hoàn lại gấp đôi vào năm thứ 15, tương đương với lãi suất 5%/năm trong suốt 15 năm)</li>
     <li>phí chuyển đổi quỹ 50 ngàn đồng / lần, từ lần chuyển quỹ thứ ba trong năm, hai lần đầu được miễn phí</li>
 <!-- <li>chênh lệch giá 5% khi mua (khi đóng tiền vào)</li> -->
   </ol>
@@ -329,9 +329,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -360,6 +361,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
