--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -262,14 +262,14 @@ data-ad-slot="5275186684">
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 12 năm.
   <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 04/11/2021 <!-- Chung!A3 -->
  là hơn 12 năm.</p>
-  <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi 4 tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 168 <!-- tiết!B2 -->
+  <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi bốn tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 168 <!-- tiết!B2 -->
  triệu đồng. Vào ngày 04/11/2021 <!-- tiết!A2 -->
  tổng giá trị gốc và lãi là <b> 258,627 <!-- tiết!C2 -->
  triệu đồng</b>, tính ra lợi nhuận trung bình của việc tích luỹ này là <b> 6,49%/năm <!-- tiết!C1 -->
 
-</b>. Mặc dù trong 12 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ 7 năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/1br9PAhnFj5H2_XtqKL-8MjcCWTU3JP4WGf7guHMdcGo/edit#gid=1998350075" target='_blank'>trong bảng tính này</a>.</p>
+</b>. Mặc dù trong 12 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ bảy năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/1br9PAhnFj5H2_XtqKL-8MjcCWTU3JP4WGf7guHMdcGo/edit#gid=1998350075" target='_blank'>trong bảng tính này</a>.</p>
 
-  <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi 4 tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 168 <!-- tiết!B2 -->
+  <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi bốn tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 168 <!-- tiết!B2 -->
  triệu đồng như anh A. Vào ngày 04/11/2021 <!-- Chung!A3 -->
  giá trị tài khoản đầu tư của anh B là <b> 591,921 <!-- DCDS!J4 -->
  triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 18,17%/năm <!-- DCDS!J2 -->
@@ -282,12 +282,12 @@ data-ad-slot="5275186684">
  triệu đồng vì:</p>
   <ol>
     <li>Tiền lãi khi đáo hạn sẽ bị làm tròn xuống đến hàng ngàn, và những tiền lẻ dưới chục ngàn hoặc trăm ngàn sẽ không được nhập vào gốc để sinh lời tiếp vì anh A thấy nó lẻ.</li>
-    <li>Rất khó để đều đặn mỗi 4 tuần mở một sổ tiết kiệm, gần đây có Internet banking thì dễ hơn, nhưng cũng không dễ để nhớ làm việc đó đều đặn. Trong khi đó, đầu tư vào quỹ đầu tư thì có người nhắc.</li>
+    <li>Rất khó để đều đặn mỗi bốn tuần mở một sổ tiết kiệm, gần đây có Internet banking thì dễ hơn, nhưng cũng không dễ để nhớ làm việc đó đều đặn. Trong khi đó, đầu tư vào quỹ đầu tư thì có người nhắc.</li>
     <li>Không dễ để nhớ gửi tiền tiết kiệm đều đặn nhưng lại rất dễ để rút tiền ra dùng khi cần mua sắm iPhone, LED TV, scooter làm cho số tiền bị hao hụt nhiều.</li>
   </ol>
 
   <p>Ngoài ra, khi gửi ngân hàng kiểu đó thì anh A phải giữ từ 14 đến 168 <!-- tiết!B2 -->
- sổ tiết kiệm. Có thời gian tôi cũng làm như vậy (online) và tôi cảm thấy vô cùng lúng túng với hàng loạt con số trên màn hình. Trong khi đó đầu tư vào quỹ đầu tư thì mỗi người chỉ cần biết 1 vài con số.
+ sổ tiết kiệm. Có thời gian tôi cũng làm như vậy (online) và tôi cảm thấy vô cùng lúng túng với hàng loạt con số trên màn hình. Trong khi đó đầu tư vào quỹ đầu tư thì mỗi người chỉ cần biết một vài con số.
   <br>Ngân hàng cũng có một loại tiết kiệm mà không tạo ra nhiều sổ, đó là tiết kiệm gửi góp. Tôi khuyên các bạn đừng dùng các loại tiết kiệm gửi góp của các ngân hàng. Mặc dù nó có vẻ giống như các kế hoạch đầu tư ở chỗ góp tiền vào một tài khoản, nhưng các ngân hàng không chuyên quản lý sổ tiết kiệm dài hạn và họ cũng không thích việc đó nên lãi suất dạng đó thấp hơn lãi suất 12 tháng. Tôi đã có một kinh nghiệm không vui với loại tiết kiệm gửi góp đó, sẽ kể lại trong một trang khác.</p>
 
   <p>Một ưu điểm khác của quỹ đầu tư là nó không có kỳ hạn, nghĩa là anh B hoặc anh C muốn rút tiền ra lúc nào cũng được, không bị mất khoản lãi khi chưa đến hạn như gửi tiết kiệm.
@@ -296,7 +296,7 @@ data-ad-slot="5275186684">
 
 
   <h2>Lợi ích trong tương lai xa</h2>
-  <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi 4 tuần 1 triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
+  <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi bốn tuần một triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
   <span class="red">
   <ul>
     <li>được khoảng 1,009 <!-- So!A4 -->
@@ -307,7 +307,7 @@ data-ad-slot="5275186684">
   </ul>
   </span>
 
-  <p>Nhìn từ một hướng khác, những người thực hành công thức <a href="../chi-tieu">"Thu nhập - Tiết kiệm = Chi tiêu"</a> sẽ thấy dễ sống hơn với mức lợi nhuận cao của quỹ đầu tư. Lợi nhuận cao thì chỉ cần tiết kiệm ít hơn, chi tiêu nhiều hơn mà vẫn đạt kế hoạch tài chính tương lai. Ví dụ, để có 5 tỉ đồng sau 30 năm, người ta phải tiết kiệm:</p>
+  <p>Nhìn từ một hướng khác, những người thực hành công thức <a href="../chi-tieu">"Thu nhập - Tiết kiệm = Chi tiêu"</a> sẽ thấy dễ sống hơn với mức lợi nhuận cao của quỹ đầu tư. Lợi nhuận cao thì chỉ cần tiết kiệm ít hơn, chi tiêu nhiều hơn mà vẫn đạt kế hoạch tài chính tương lai. Ví dụ, để có năm tỉ đồng sau 30 năm, người ta phải tiết kiệm:</p>
   <ul>
     <li>2,532 triệu đồng mỗi tháng và tăng dần 5% sau mỗi năm, nếu lợi nhuận trung bình 7%/năm như gửi tiết kiệm ở ngân hàng</li>
     <li>1,587 triệu đồng mỗi tháng và tăng dần 5% sau mỗi năm, nếu lợi nhuận trung bình 10%/năm như gửi quỹ đầu tư</li>
@@ -317,20 +317,20 @@ data-ad-slot="5275186684">
   <p>Quỹ đầu tư là gì mà nó sinh lời nhiều hơn gửi tiết kiệm ở ngân hàng?
   <br>Mời bạn xem bài giải thích về <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 
-  <p>Gửi mỗi 4 tuần 1 triệu đồng trong hơn 12 năm thì lời như vậy, nhưng nếu chị D có 50 triệu đồng hay 5 tỉ đồng thì gửi vào quỹ đầu tư theo cách nào để có lời?
-  <br>Chị D nên chia số tiền đó ra làm nhiều phần bằng nhau để gửi vào quỹ đầu tư một cách đều đặn (mỗi tháng một phần) trong 3-6 tháng liên tiếp, rồi để yên đó một thời gian đủ dài (hơn 5 năm) để nó sinh lời.</p>
+  <p>Gửi mỗi bốn tuần một triệu đồng trong hơn 12 năm thì lời như vậy, nhưng nếu chị D có 50 triệu đồng hay năm tỉ đồng thì gửi vào quỹ đầu tư theo cách nào để có lời?
+  <br>Chị D nên chia số tiền đó ra làm nhiều phần bằng nhau để gửi vào quỹ đầu tư một cách đều đặn (mỗi tháng một phần) trong 3-6 tháng liên tiếp, rồi để yên đó một thời gian đủ dài (hơn năm năm) để nó sinh lời.</p>
 
-  <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn 3 năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
+  <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn ba năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
 
 
 
   <h2 id="goldusd">Tiết kiệm bằng USD hoặc vàng có tốt hơn không?</h2>
-  <p>Tôi giả định rằng chị U mua 100USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 16.800 <!-- Gold!J3 -->
+  <p>Tôi giả định rằng chị U mua 100 USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 16.800 <!-- Gold!J3 -->
  USD tương đương 379,344 <!-- Gold!L4 -->
  triệu đồng và chị U đã bỏ ra hết 360,892 <!-- Gold!K3 -->
  triệu đồng, tính ra lợi nhuận trung bình của việc tích luỹ này là 0,81%/năm <!-- Gold!L2 -->
 .
-  <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 391,220 <!-- Gold!I4 -->
+  <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100 USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 391,220 <!-- Gold!I4 -->
  gram vàng, trị giá 22.592,96 <!-- Gold!J4 -->
  USD. Như vậy với cùng số tiền bỏ ra như chị U, nhưng chị G thu lại được nhiều hơn 34,48% <!-- Gold!L3 -->
  và  lợi nhuận trung bình của việc tích luỹ này là 5,51%/năm <!-- Gold!K2 -->
@@ -364,7 +364,7 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
 
