--- a/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
+++ b/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
@@ -245,7 +245,7 @@ data-ad-slot="5275186684">
   <p>Chiến lược cái xô gồm <strong>ba cái xô</strong> đựng tài sản tích luỹ cho hưu trí, theo giải thích của <a href="https://www.kiplinger.com/article/retirement/T037-C000-S002-how-to-implement-the-bucket-system-in-retirement.html" target='_blank'>Kiplinger</a>:<br>
 Bạn chia tiền hưu trí của bạn vào ba cái xô: <strong>Một xô</strong> tiền mặt mà bạn sẽ cần dùng trong 1-2 năm tới, gồm cả những chi tiêu lớn như đi du lịch, mua xe hay sửa nhà. <strong>Xô thứ hai</strong> là chứa những món tiền cần dùng trong 10 năm tới. <strong>Xô cuối cùng</strong> đựng tiền cho thời gian xa hơn nữa, cho bạn và gia tài cho con cháu.</p>
   <p>Ở đây chúng ta chú ý đến khoản tiền mặt. Mặc dù tiền mặt sinh lời rất ít, nhưng nó đem lại cảm giác yên tâm và giữ bình tĩnh trong những giai đoạn khó khăn. Có khoản tiền mặt đó, bạn không cần phải rút tiền từ các quỹ đầu tư khi thị trường xuống dốc, và có thời gian để chờ thị trường hồi phục.</p>
-  <p>Một cách khác để chống đỡ trong lúc thị trường suy giảm là tiếp tục đi làm kiếm tiền, có thể đi làm part-time. Như vậy thì bạn sẽ bớt cần rút tiền từ quỹ đầu tư. Tất nhiên là những người muốn nghỉ ngơi, những người có sức khoẻ kém, và những người thất nghiệp sẽ không chọn làm cách này. Nhưng nếu bạn có thể làm việc thêm 6 tháng thì tác dụng của nó rất đáng kể: giữ được quỹ đầu tư, có thể để dành thêm từ tiền lương, tiền lương hưu theo chính sách sẽ nhiều hơn. Lợi tới ba điều.</p>
+  <p>Một cách khác để chống đỡ trong lúc thị trường suy giảm là tiếp tục đi làm kiếm tiền, có thể đi làm part-time. Như vậy thì bạn sẽ bớt cần rút tiền từ quỹ đầu tư. Tất nhiên là những người muốn nghỉ ngơi, những người có sức khoẻ kém, và những người thất nghiệp sẽ không chọn làm cách này. Nhưng nếu bạn có thể làm việc thêm sáu tháng thì tác dụng của nó rất đáng kể: giữ được quỹ đầu tư, có thể để dành thêm từ tiền lương, tiền lương hưu theo chính sách sẽ nhiều hơn. Lợi tới ba điều.</p>
 
 
   <p>Nên chú ý đến tốc độ rút tiền từ quỹ hưu trí của bạn. Các tư vấn viên tài chính khuyên mỗi năm chỉ nên rút 4% quỹ hưu trí ra dùng, nhưng không nhất thiết phải cố định con số đó. (Để kiểm soát tốc độ rút tiền từ quỹ hưu trí, bạn cần có <a href="../ke-hoach-tai-chinh/">kế hoạch tài chính</a> từ sớm.)</p>
@@ -269,9 +269,10 @@ Bạn chia tiền hưu trí của bạn vào ba cái xô: <strong>Một xô</str
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -300,6 +301,7 @@ Bạn chia tiền hưu trí của bạn vào ba cái xô: <strong>Một xô</str
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
