--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -235,13 +235,13 @@ data-ad-slot="5275186684">
     <li>đầu tư vào cổ phiếu theo đúng nguyên tắc thì mới ít rủi ro, các nguyên tắc đó là: phải có kiến thức, không chạy theo đám đông, không dùng vốn vay</li>
     <li><a href="dau-tu-co-phieu/">đầu tư cổ phiếu đều đặn</a>, thường xuyên sẽ cho kết quả tốt hơn đầu tư ngẫu hứng</li>
   </ol>
-  <p>Tôi tin rằng không ai phản đối một nửa của điều 1: <i>trong thời hạn dài thì bất động sản sinh lợi nhiều hơn gửi ngân hàng</i>. Tuy nhiên nhiều người không có khả năng đầu tư bất động sản, và khi cần tiền thì không dễ đưa bất động sản thành tiền mặt đúng lúc và đúng số tiền đang cần (tính thanh khoản thấp).
-  <br>Một nửa còn lại của điều 1, <i>trong thời hạn dài thì cổ phiếu sinh lợi nhiều hơn gửi ngân hàng</i>, chỉ đúng khi phải làm theo điều 2 và 3.</p>
+  <p>Tôi tin rằng không ai phản đối một nửa của điều một: <i>trong thời hạn dài thì bất động sản sinh lợi nhiều hơn gửi ngân hàng</i>. Tuy nhiên nhiều người không có khả năng đầu tư bất động sản, và khi cần tiền thì không dễ đưa bất động sản thành tiền mặt đúng lúc và đúng số tiền đang cần (tính thanh khoản thấp).
+  <br>Một nửa còn lại của điều một, <i>trong thời hạn dài thì cổ phiếu sinh lợi nhiều hơn gửi ngân hàng</i>, chỉ đúng khi phải làm theo điều hai và ba.</p>
   <blockquote>
     <div><i>Vì sao cổ phiếu sinh lời nhiều hơn gửi ngân hàng?</i></div>
     <div>Thông thường thì doanh nghiệp vay tiền từ ngân hàng, doanh nghiệp phải kinh doanh với lợi nhuận cao hơn lãi vay ngân hàng thì mới tồn tại được. Ngân hàng vay tiền của người tiết kiệm để cho doanh nghiệp vay, lãi suất cho doanh nghiệp vay phải cao hơn lãi suất trả cho người tiết kiệm thì ngân hàng mới tồn tại. Như vậy nếu ta đưa tiền thẳng vào doanh nghiệp qua cổ phần thì tiền đó sẽ sinh lời nhiều hơn đưa vào ngân hàng. Đó là những lúc bình thường, còn ở Việt Nam trong những năm 2009-2011 thì không bình thường nên lãi gửi tiết kiệm cao hơn lợi nhuận từ cổ phiếu. Và tình hình tiết kiệm lãi suất cao bất thường đó đã chấm dứt.</div>
     <div><i>Vậy tại sao nhiều người lỗ khi mua cổ phiếu?</i></div>
-    <div>Người ta lỗ vì muốn kiếm lời ngay và không theo hai điều 2 và 3. Nếu công ty hoạt động tốt thì tài sản của công ty sẽ tăng và giá trị của mỗi cổ phần sẽ tăng trong dài hạn, nhưng trong từng giai đoạn sẽ có lúc giá cổ phiếu cao hơn hoặc thấp hơn giá trị của cổ phần như trong hình minh hoạ. Nếu mua và bán cổ phiếu trong thời gian ngắn có thể bị lỗ, tôi cũng đã từng bị lỗ như vậy.</div>
+    <div>Người ta lỗ vì muốn kiếm lời ngay và không theo hai điều hai và ba. Nếu công ty hoạt động tốt thì tài sản của công ty sẽ tăng và giá trị của mỗi cổ phần sẽ tăng trong dài hạn, nhưng trong từng giai đoạn sẽ có lúc giá cổ phiếu cao hơn hoặc thấp hơn giá trị của cổ phần như trong hình minh hoạ. Nếu mua và bán cổ phiếu trong thời gian ngắn có thể bị lỗ, tôi cũng đã từng bị lỗ như vậy.</div>
   </blockquote>
   <p>Khi đã xác định được mục tiêu là đầu tư cổ phiếu lâu dài để có lợi nhuận cao hơn gửi tiết kiệm ngân hàng rồi thì việc phải làm là <a href="tich-luy">tích luỹ</a> thật nhiều <b>cổ phiếu tốt</b> để 10-20-30 năm sau bán đi lấy tiền dùng. Với một số tiền nhất định, muốn có nhiều cổ phiếu hơn thì hãy mua vào khi giá cổ phiếu xuống.
   <br>Nhà đầu tư cần có đủ kiến thức để chọn được các cổ phiếu tốt. Cổ phiếu tốt là cổ phiếu của những công ty tốt nhưng giá chưa quá cao. Công ty tốt là công ty tăng trưởng tốt.</p>
@@ -260,7 +260,7 @@ data-ad-slot="5275186684">
   <br>Kết quả tới nay (2012) tôi lời 114% trên số cổ phiếu Eximbank, lời 79% trên số cổ phiếu Sacombank, lời 94% trên số cổ phiếu Vinamilk.
   <br>Số liệu mới của năm 2016: lợi nhuận trung bình khi đầu tư các cổ phiếu: VNM 36,33%/năm, KDC 12,8%/năm, HAG -22,8%/năm, MSN -6%/năm, CII 32,75%/năm, SAV 4,6%/năm, GMD 50,27%/năm, AGF 17,42%/năm, REE 29,06%/năm, VF1 5,83%/năm, EIB 19,73%/năm, STB 29,26%/năm, MBB 7,85%/năm.
   <br>Mặc dù tỉ lệ lợi nhuận từ các cổ phiếu đó khá cao nhưng do không đủ tự tin nên tôi không dám đưa nhiều tiền vào đó, lợi nhuận tính thành tiền không nhiều. Từ năm 2016 tôi đã bán cổ phiếu dần dần để chuyển vào quỹ đầu tư của VFM. Hiện nay năm 2021, cổ phiếu chỉ chiếm khoảng 0,5% tổng tài sản của tôi, các quỹ đầu tư chiếm gần 40% tổng tài sản, một phần nhỏ nằm trong các hợp đồng bảo hiểm, phần lớn còn lại là căn nhà đang cho thuê.</p>
-  <p>Từ kinh nghiệm của mình, tôi tin rằng những điều 1, 2, 3 ở trên là đúng. Tôi cho rằng mình thật may mắn khi không có đủ kiến thức mà lời từ các cổ phiếu EIB, VNM, STB. Sắp tới tôi sẽ tăng tỉ lệ tiền đặt vào quỹ đầu tư để:</p>
+  <p>Từ kinh nghiệm của mình, tôi tin rằng ba điều ở trên đầu bài là đúng. Tôi cho rằng mình thật may mắn khi không có đủ kiến thức mà lời từ các cổ phiếu EIB, VNM, STB. Sắp tới tôi sẽ tăng tỉ lệ tiền đặt vào quỹ đầu tư để:</p>
   <ul>
     <li>không phụ thuộc nhiều vào yếu tố may mắn nữa</li>
     <li>tận dụng khả năng đầu tư chuyên nghiệp và số vốn lớn của công ty quản lý quỹ để hạn chế khả năng thua lỗ</li>
@@ -315,9 +315,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -346,6 +347,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
