--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -245,9 +245,9 @@ data-ad-slot="5275186684">
   <p>Để tính tốc độ gia tăng tài sản của những vụ đầu tư như vậy, đã có hàm XIRR trong các phần mềm spreadsheet. Cách dùng XIRR rất dễ, xem hướng dẫn trong trang <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">Hàm tài chính</a>. Tôi đã dùng hàm XIRR để tính các vụ đầu tư của tôi: cổ phiếu, quỹ đầu tư, nhà chung cư cho thuê, đất nền trong dự án. Kết quả:</p>
   <ul>
     <li>trong 15 mã cổ phiếu mà tôi đã mua và giữ dài hạn trong khoảng thời gian 2002-2017 thì một mã cổ phiếu lỗ 16,78%/năm, tất cả 14 mã cổ phiếu còn lại lời từ 4,61%/năm đến 50,27%/năm, tính chung tất cả 15 cổ phiếu thì lời trung bình 25,36%/năm.</li>
-    <li>một căn nhà chung cư từ khi bắt đầu đặt tiền mua cuối năm 2004 đến khi hoàn thiện nội thất mất 1 năm, cho thuê được 1 năm rồi bán đi, lời 30,24%/năm</li>
-    <li>một căn chung cư khác kéo dài 6 năm từ lúc mua giữa năm 2006, hoàn thiện nội thất, cho thuê rồi bán đi, lời 13,61%/năm</li>
-    <li>hai nền đất ở Đồng Nai, mua năm 2013, gần 4 năm liền không tăng giá, năm cuối bắt đầu tăng dần, theo giá cuối Tháng Tư 2018 thì lời 28,24%/năm</li>
+    <li>một căn nhà chung cư từ khi bắt đầu đặt tiền mua cuối năm 2004 đến khi hoàn thiện nội thất mất một năm, cho thuê được một năm rồi bán đi, lời 30,24%/năm</li>
+    <li>một căn chung cư khác kéo dài sáu năm từ lúc mua giữa năm 2006, hoàn thiện nội thất, cho thuê rồi bán đi, lời 13,61%/năm</li>
+    <li>hai nền đất ở Đồng Nai, mua năm 2013, gần bốn năm liền không tăng giá, năm cuối bắt đầu tăng dần, theo giá cuối Tháng Tư 2018 thì lời 28,24%/năm</li>
     <li>quỹ đầu tư cổ phiếu: bắt đầu đưa tiền vào năm 2016, theo giá hiện nay thì lời 37,93%/năm</li>
     <li>quỹ đầu tư liên kết với bảo hiểm: bắt đầu đưa tiền vào năm 2008, lời 13,57%/năm và được bảo hiểm sinh mạng</li>
   </ul>
@@ -288,9 +288,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -319,6 +320,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
