--- a/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
+++ b/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
@@ -238,7 +238,7 @@ tổng số tiền cần tiết kiệm mỗi năm được tính trong ô I54.</
 
 <p>Nếu I54 &lt;= 0, bạn không cần phải tiết kiệm thêm, bạn hãy san sẻ số tiền hiện có giữa các kế hoạch (B6 trong Hưu-trí và B4 trong Con-đầu/Con-út) sao cho tất cả các ô H47:H49 đều &lt;= 0. Tiếp theo, bạn giảm dần tuổi về hưu trong trang Hưu-trí xem đến tuổi nào mà I54 bắt đầu &gt; 0, đó là năm làm việc cuối cùng của bạn trước khi về hưu. <b><span class="tblue">Tự do tài chính! Thật tuyệt vời!</span></b></p>
 <p>Nếu tổng số cần phải tiết kiệm I54 lớn hơn số tiền dư hàng năm trong ô G44 nghĩa là kế hoạch của bạn khó thực hiện. Hãy điều chỉnh kế hoạch để cho I54 nhỏ hơn G44.</p>
-<p>Có thể phối hợp 3 cách sau đây để điều chỉnh kế hoạch:</p>
+<p>Có thể phối hợp ba cách sau đây để điều chỉnh kế hoạch:</p>
 <ol><li><b>Giảm chi tiêu</b>. Để giảm các khoản chi, bạn hãy thực hành theo các lời khuyên trong loạt bài <i>Kiến thức tài chính</i> đăng trên báo Sài Gòn Tiếp thị và được sao lại ở <a href="/download/">Download</a></li>
 <li><b>Tăng lợi nhuận của tiền tiết kiệm</b>. Tăng lợi nhuận của tiền tiết kiệm làm cho số tiền để dành nở ra nhanh hơn. Hãy <a href="../de-tien-vao-dau">tìm chỗ cho tiền tiết kiệm</a> sinh lời nhanh hơn.</li>
 <li><b>Kiếm thêm thu nhập</b>. Việc tăng thu nhập từ tiền lương cần có thời gian để đổi việc hoặc để được tăng lương. Việc này khó làm hơn hai việc trên.</li>
@@ -280,9 +280,10 @@ tổng số tiền cần tiết kiệm mỗi năm được tính trong ô I54.</
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -311,6 +312,7 @@ tổng số tiền cần tiết kiệm mỗi năm được tính trong ô I54.</
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
