--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -461,7 +461,7 @@ Tăng dần số tiền đầu tư là bí quyết giúp cho bạn dễ bắt đ
   <br>Bạn cũng có thể ghi khoản học phí dự định cho một khoá học vài năm vào trang này.
   <br>Vì đây là bản kế hoạch nên chúng ta hãy ghi tất cả những dự định xuống, sau đó sẽ tính toán và điều chỉnh cho phù hợp khả năng tài chính. Bạn có thể lập nhiều kế hoạch theo các hướng khác nhau để so sánh: có mua nhà hoặc không mua nhà, có mua xe hoặc không mua xe… Để tính số tiền phải trả góp cho mỗi khoản nợ, bạn có thể dùng <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">các hàm tài chính</a>.
   <br>Bạn có thể ghi ra tối đa 40 khoản trả góp nhiều năm trong trang này.
-Dòng nào để trống hoặc ghi 0₫ trong cột D (Mỗi tháng góp) sẽ không được tính vào kế hoạch.</p>
+Dòng nào để trống hoặc ghi zero trong cột D (Mỗi tháng góp) sẽ không được tính vào kế hoạch.</p>
 
 
 
@@ -470,7 +470,7 @@ Dòng nào để trống hoặc ghi 0₫ trong cột D (Mỗi tháng góp) sẽ 
   <p>Tiếp theo là trang Mục-tiêu để ghi các khoản tiền lớn cần chi trong tương lai như chuẩn bị sinh con, đặt cọc mua nhà, tiền cho con học đại học tốt… Đó là những mục tiêu trong lộ trình tài chính của gia đình.</p>
   <p>Cột C ghi số tiền cần có theo thời giá hiện nay, cột D ghi mức trượt giá của khoản tiền đó, số tiền đã tính đến trượt giá sẽ được tính trong cột E, cột F ghi những tài sản khác (ví dụ bảo hiểm, nữ trang, kim cương…) đã có sẵn và sẽ đổi thành tiền để dùng cho mục tiêu này. 
   <br>Bạn có thể ghi ra tối đa 20 mục tiêu tài chính trong trang này.
-Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) nghĩa là không có mục tiêu đó trong kế hoạch tài chính.</p>
+Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) nghĩa là không có mục tiêu đó trong kế hoạch tài chính.</p>
   <p>Thay vì xem tiền học đại học của con là một mục tiêu tài chính, tiền cho con học đại học cũng có thể được xem như một khoản trả góp trong 3-6 năm tuỳ theo chương trình học. Khi xem tiền học đại học của con là khoản trả góp thì số tiền đầu tư thêm trong giai đoạn con học đại học sẽ giảm xuống, nếu học phí của con quá cao làm cho số tiền đầu tư thêm trong giai đoạn đó âm thì bảng tính này sẽ tự động tăng số tiền đầu tư thêm trong giai đoạn trước để có khoản tích luỹ để đóng học phí. Cả hai cách tính đều cho kết quả tương đương về tỷ lệ giữa chi tiêu trước mắt và tích luỹ. Chú ý: cần tính đến trượt giá khi tính mức học phí trong tương lai.</p>
 
   <amp-accordion>
@@ -537,10 +537,10 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   <p>Tổng tài sản đầu tư của bạn nên được chia vào những nơi khác nhau tuỳ theo thời điểm sắp chi tiền, đó là nguyên tắc ba cái xô:</p>
   <ol>
     <li>Xô tiền trong tài khoản thanh toán và tiền tiết kiệm ngắn hạn đựng số tiền bạn sắp chi trong 1-2 năm tới,</li>
-    <li>Xô tiền quỹ đầu tư trái phiếu đựng số tiền sắp chi trong 5 năm tới,</li>
-    <li>Xô tiền quỹ đầu tư cổ phiếu hoặc bất động sản đựng số tiền cho thời gian xa hơn 5 năm, quỹ đầu tư cổ phiếu cần có thời gian đủ dài để sinh lời ổn định.</li>
+    <li>Xô tiền quỹ đầu tư trái phiếu đựng số tiền sắp chi trong năm năm tới,</li>
+    <li>Xô tiền quỹ đầu tư cổ phiếu hoặc bất động sản đựng số tiền cho thời gian xa hơn năm năm, quỹ đầu tư cổ phiếu cần có thời gian đủ dài để sinh lời ổn định.</li>
   </ol>
-  <p>Các xô tiền đó sinh lời ở các mức khác nhau. Nếu bạn đang tích luỹ tiền cho mục tiêu gần hơn 5 năm thì bạn gửi tiền vào xô thứ hai và bạn không thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>. Nếu bạn đã tích luỹ đủ cho những mục tiêu gần hơn 5 năm thì bạn hãy chuyển số tiền sắp dùng cho những mục tiêu đó vào xô thứ hai và tiếp tục gửi tiền vào xô thứ ba và bạn có thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>.
+  <p>Các xô tiền đó sinh lời ở các mức khác nhau. Nếu bạn đang tích luỹ tiền cho mục tiêu gần hơn năm năm thì bạn gửi tiền vào xô thứ hai và bạn không thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>. Nếu bạn đã tích luỹ đủ cho những mục tiêu gần hơn năm năm thì bạn hãy chuyển số tiền sắp dùng cho những mục tiêu đó vào xô thứ hai và tiếp tục gửi tiền vào xô thứ ba và bạn có thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>.
 
 
 
@@ -548,19 +548,19 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   <h4>Tính lộ trình từ thông tin đã nhập</h4>
   <div><amp-img alt="Lo-trinh" src="/images/KHTCp1-Lo-trinh.png" width="946" height="148" layout="responsive"></amp-img></a></div>
   <p>Sau khi đã nhập hết tất cả các dự định tài chính trong tương lai vào các trang trên, bạn đến trang <b>Lộ-trình</b> và chọn <b>frm1</b> trong ô <b>F1</b> để tính và xem lộ trình tài chính suốt đời. Sau khi tính xong, ô F1 sẽ được xoá trắng.
-  <br>Trang Lộ-trình gồm một bảng 6 cột: năm, tổng tài sản đầu tư vào cuối năm, mức chi tiêu trung bình hàng tháng trong năm, số tiền trả góp (và đóng bảo hiểm) trung bình hàng tháng trong năm, số tiền đầu tư thêm vào tài sản hàng tháng, thu nhập hàng tháng. Tài sản đầu tư là tài sản sinh lời theo thời gian. Số liệu được tính cụ thể từng năm từ năm bắt đầu kế hoạch đến năm tuổi thọ dự kiến của bạn.
+  <br>Trang Lộ-trình gồm một bảng sáu cột: năm, tổng tài sản đầu tư vào cuối năm, mức chi tiêu trung bình hàng tháng trong năm, số tiền trả góp (và đóng bảo hiểm) trung bình hàng tháng trong năm, số tiền đầu tư thêm vào tài sản hàng tháng, thu nhập hàng tháng. Tài sản đầu tư là tài sản sinh lời theo thời gian. Số liệu được tính cụ thể từng năm từ năm bắt đầu kế hoạch đến năm tuổi thọ dự kiến của bạn.
   <br>Dòng chữ in đậm trên đầu trang cho biết tỷ lệ chi tiêu (cột C) trên thu nhập (cột F) của bạn khi thực hiện lộ trình này. Tỷ lệ đó <strong>ổn định</strong> trong suốt lộ trình, bạn có thể duy trì cách sống ổn định, không khi nào phải thắt lưng buộc bụng hơn mức bình thường. Đó là lợi ích của việc lập kế hoạch tài chính cho tương lai.</p>
   <p>Tiếp theo trang Lộ-trình là trang Biểu-đồ gồm hai đường: tổng tài sản đầu tư màu xanh và số tiền đầu tư thêm mỗi tháng màu đỏ.
   <br>Đường tổng tài sản sẽ tăng dần cho đến năm bắt đầu về hưu, sau đó tăng tiếp một thời gian rồi bắt đầu giảm. Trong giai đoạn trước năm về hưu, có những năm tổng tài sản đầu tư giảm, đó là những năm lấy tiền ra thực hiện các mục tiêu trong trang Mục-tiêu. Nếu tổng tài sản đầu tư giảm xuống dưới 0, kế hoạch này không khả thi. Lý do là tiền tổng tài sản đầu tư không đủ cho các mục tiêu dùng tiền quá gần nhau, bạn cần phải giãn các mục tiêu ra hoặc giảm các mục tiêu xuống thấp hơn.
   <br>Điểm cuối cùng bên phải của đường màu xanh là số tiền bạn dự định để lại lúc cuối đời (ô B15 của trang <a href="khtcp1#quy-huu">Quỹ-hưu</a>). Bạn có thể thử tăng/giảm số tiền đó, việc tăng/giảm đó ảnh hưởng rất ít đến kế hoạch tích luỹ vì thời gian để tích luỹ số tiền đó rất dài.
-  <br>Đường đầu tư thêm cũng tăng dần cho đến năm về hưu do thu nhập tăng theo thâm niên và theo lạm phát, và trở về 0 trong những năm về hưu. Đường đầu tư thêm cũng có những điểm gãy, đó là những năm bắt đầu một khoản trả góp. Có vài năm số tiền đầu tư thêm giảm xuống dưới 0 do khoản trả góp lớn. Số tiền đầu tư thêm âm có nghĩa là bạn lấy tiền từ tài sản đầu tư ra để trả góp, việc này là chấp nhận được <span class="tmark">nếu tổng tài sản đầu tư vẫn còn lớn hơn 0</span>.</p>
+  <br>Đường đầu tư thêm cũng tăng dần cho đến năm về hưu do thu nhập tăng theo thâm niên và theo lạm phát, và trở về zero trong những năm về hưu. Đường đầu tư thêm cũng có những điểm gãy, đó là những năm bắt đầu một khoản trả góp. Có vài năm số tiền đầu tư thêm giảm xuống dưới zero do khoản trả góp lớn. Số tiền đầu tư thêm âm có nghĩa là bạn lấy tiền từ tài sản đầu tư ra để trả góp, việc này là chấp nhận được <span class="tmark">nếu tổng tài sản đầu tư vẫn còn lớn hơn zero</span>.</p>
   <div><amp-img alt="Lộ trình tài chính" src="/images/KHTCp1.png" width="600" height="371" layout="responsive"></amp-img></a></div>
   <h4>Điều chỉnh lộ trình</h4>
-  <p>Dòng số 3 trong trang Lộ-trình cho biết con số cụ thể thu nhập và chi tiêu trong năm đầu tiên của lộ trình. Số chi tiêu chính là con số bạn đã nhập vào trong trang TT-chung.
+  <p>Dòng số ba trong trang Lộ-trình cho biết con số cụ thể thu nhập và chi tiêu trong năm đầu tiên của lộ trình. Số chi tiêu chính là con số bạn đã nhập vào trong trang TT-chung.
   <br>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn thấp hơn con số trong ô F3, bạn chưa thể thực hiện lộ trình này. Bạn cần phải: giảm chi tiêu, giảm hoặc dời các khoản <a href="khtcp1#tra-gop">trả góp</a> lại trễ hơn, giảm các mục tiêu để con số hợp với thực tế. Khi nào thu nhập tăng lên, bạn lại điều chỉnh các mục tiêu của mình cho phù hợp. Khi bạn giảm chi tiêu, số tiền tích luỹ trong hiện tại tăng lên, đồng thời quỹ hưu cần có trong tương lai giảm xuống, lộ trình của bạn được cải thiện từ hai phía nên sẽ tốt hơn.
   <br>Khi bạn dời khoản trả góp lại trễ hơn, tiền đầu tư sẽ được sinh lợi nhiều hơn, và hy vọng rằng khoản trả góp có thể rẻ hơn. Nếu khoản trả góp là mua nhà thì việc dời lại trễ hơn có thể làm nó rẻ hơn hoặc đắt hơn tuỳ theo biến động của thị trường bất động sản.</p>
   <p>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn con số trong ô F3, chúc mừng bạn! Bạn có thể chọn trong ba hướng sau: chi tiêu nhiều hơn, tăng các mục tiêu lên cao hơn, <a href="khtcp2">về hưu sớm hơn</a>. Bạn hãy điều chỉnh các con số trong ba hướng đó và xem lại lộ trình mới.</p>
-  <p>Trường hợp thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn con số trong ô F3 nhưng biểu đồ tổng tài sản đầu tư có những lúc xuống dưới 0 và bạn không thể dời các khoản trả góp lại trễ hơn. Trong trường hợp này bạn sẽ không giữ được một tỷ lệ chi tiêu trên thu nhập ổn định suốt đời mà buộc phải giảm chi tiêu trong thời gian đầu (khi có những khoản trả góp không thể dời lại trễ hơn). Để thể hiện việc giảm chi tiêu trong thời gian đầu, bạn hãy giảm Mức tăng khoản đầu tư thêm hàng năm trong ô B8 của trang <a href="khtcp1#tt-chung">TT-chung</a>, giảm dần số đó xuống và tính lại lộ trình cho đến khi ô F3 trong trang Lộ-trình gần sát thu nhập thực tế.</p>
+  <p>Trường hợp thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn con số trong ô F3 nhưng biểu đồ tổng tài sản đầu tư có những lúc xuống dưới zero và bạn không thể dời các khoản trả góp lại trễ hơn. Trong trường hợp này bạn sẽ không giữ được một tỷ lệ chi tiêu trên thu nhập ổn định suốt đời mà buộc phải giảm chi tiêu trong thời gian đầu (khi có những khoản trả góp không thể dời lại trễ hơn). Để thể hiện việc giảm chi tiêu trong thời gian đầu, bạn hãy giảm Mức tăng khoản đầu tư thêm hàng năm trong ô B8 của trang <a href="khtcp1#tt-chung">TT-chung</a>, giảm dần số đó xuống và tính lại lộ trình cho đến khi ô F3 trong trang Lộ-trình gần sát thu nhập thực tế.</p>
   <p>Để giảm chi tiêu, bạn cần liệt kê các khoản chi của mình và chọn giảm khoản nào ít cần thiết nhất. Bạn có thể dùng mẫu trong trang Thu-chi để liệt kê chi tiêu.</p>
   <p>Sau khi điều chỉnh vào các trang, bạn làm lại bước <b>Tính lộ trình</b> ngay trên đây. Bạn lặp đi lặp lại việc này nhiều lần cho đến khi bạn có một lộ trình khả thi.</p>
 
@@ -577,7 +577,7 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
 
   <h2 id="mo-hinh">Các mô hình</h2>
   <h3>Đầy đủ các mục tiêu</h3>
-  <p>Bạn muốn thực hiện đầy đủ công thức 1 vợ/chồng - 2 con - 3 tầng - 4 bánh. Bạn sẽ giữ tất cả các dòng trong file mẫu, chỉ cần thay đổi chi tiết của mỗi dòng.
+  <p>Bạn muốn thực hiện đầy đủ công thức một vợ/chồng - hai con - ba tầng - bốn bánh. Bạn sẽ giữ tất cả các dòng trong file mẫu, chỉ cần thay đổi chi tiết của mỗi dòng.
   <br>Sau khi mua căn nhà đầu tiên, bạn có thể đổi sang căn nhà lớn hơn. Bạn sẽ cập nhật lại file kế hoạch trước và sau mỗi lần đổi nhà.
   <br>Thời điểm về hưu của hai vợ chồng theo luật có thể khác nhau, nhưng chúng ta chọn một thời điểm chung để cả hai cùng nghỉ khi tính toán.</p>
 
@@ -594,16 +594,16 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   <section>
   <h3 class="accordion-header">Về hưu sớm (bấm vào đây để xem chi tiết)</h3>
   <div>
-  <p>Khi về hưu sớm bạn chưa nhận được lương hưu BHXH ngay mà còn phải tiếp tục đóng BHXH đến khi đúng tuổi nhận lương hưu. Như vậy lộ trình tài chính sẽ có 3 giai đoạn:</p>
+  <p>Khi về hưu sớm bạn chưa nhận được lương hưu BHXH ngay mà còn phải tiếp tục đóng BHXH đến khi đúng tuổi nhận lương hưu. Như vậy lộ trình tài chính sẽ có ba giai đoạn:</p>
   <ol>
     <li>Làm việc kiếm tiền, đóng BHXH, tích luỹ</li>
     <li>Nghỉ làm, đóng BHXH, tiêu tiền</li>
     <li>Nhận lương hưu, tiêu tiền</li>
   </ol>
-  <p><b>Việc chia làm 3 giai đoạn rắc rối ở trên chỉ cần thiết với những người may mắn được đóng BHXH mức cao và sẽ có lương hưu cao. Nếu bạn không được đóng BHXH ở mức cao thì bạn vẫn có thể về hưu sớm và chỉ cần tính lộ trình đơn giản hơn bằng cách tạm cho là không có lương hưu, và không cần làm theo các bước dưới đây.</b></p>
-  Để tính ra lộ trình tích luỹ trong giai đoạn 1, chúng ta làm nhiều bước: tính số tiền cần có ở đầu giai đoạn 3 tức là cuối giai đoạn 2, tính số tiền cần có ở đầu giai đoạn 2 tức là số tiền cần tích luỹ trong giai đoạn 1.
-  Những bước đó được làm với 4 file như sau.
-  <h4>Tính mức chi tiêu ở đầu giai đoạn 2 và đầu giai đoạn 3</h4>
+  <p><b>Việc chia làm ba giai đoạn rắc rối ở trên chỉ cần thiết với những người may mắn được đóng BHXH mức cao và sẽ có lương hưu cao. Nếu bạn không được đóng BHXH ở mức cao thì bạn vẫn có thể về hưu sớm và chỉ cần tính lộ trình đơn giản hơn bằng cách tạm cho là không có lương hưu, và không cần làm theo các bước dưới đây.</b></p>
+  Để tính ra lộ trình tích luỹ trong giai đoạn một, chúng ta làm nhiều bước: tính số tiền cần có ở đầu giai đoạn ba tức là cuối giai đoạn hai, tính số tiền cần có ở đầu giai đoạn hai tức là số tiền cần tích luỹ trong giai đoạn một.
+  Những bước đó được làm với bốn file như sau.
+  <h4>Tính mức chi tiêu ở đầu giai đoạn hai và đầu giai đoạn ba</h4>
   <p>Chép bảng tính KHTCp1 thành file KHTC1. Nhập vào:</p>
   <ul>
     <li>'Quỹ-hưu'!B4 (tuổi về hưu) tuổi dự định về hưu sớm và</li>
@@ -611,13 +611,13 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
     <li>'TT-chung'!B10 (chi tiêu hiện nay)</li>
   </ul>
   <p>Chú ý các mục tiêu và các khoản trả góp đều hoàn thành trước hoặc cùng năm về hưu sớm.
-  <br>Trang Quỹ-hưu sẽ tính ra mức chi tiêu ở đầu giai đoạn 2 và đầu giai đoạn 3. Chúng ta sẽ dùng hai con số đó ở các bước tiếp theo.</p>
-  <h4>Tính số tiền cần có ở đầu giai đoạn 3</h4>
+  <br>Trang Quỹ-hưu sẽ tính ra mức chi tiêu ở đầu giai đoạn hai và đầu giai đoạn ba. Chúng ta sẽ dùng hai con số đó ở các bước tiếp theo.</p>
+  <h4>Tính số tiền cần có ở đầu giai đoạn ba</h4>
   <p>Chép bảng KHTCp2 thành file KHTC3. Nhập vào:</p>
   <ul>
     <li>'TT-chung'!B3 (năm bắt đầu kế hoạch) là năm về hưu đúng tuổi,</li>
     <li>'Quỹ-hưu'!B4 (tuổi cuối kế hoạch) là tuổi thọ dự kiến,</li>
-    <li>'TT-chung'!B8 (chi tiêu hàng tháng) là kết quả ở ô 'Quỹ-hưu'!B10 trong file KHTC1 ở bước 1.
+    <li>'TT-chung'!B8 (chi tiêu hàng tháng) là kết quả ở ô 'Quỹ-hưu'!B10 trong file KHTC1 ở bước một.
   </ul>
   <p>Chọn menu <strong>Lộ trình Tài chính→Tính giai đoạn 2</strong> để tính số tiền cần có trong ô 'Quỹ-hưu'!B10.</p>
   <h4>Tính số tiền cần có ở đầu giai đoạn 2</h4>
@@ -625,18 +625,18 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   <ul>
     <li>'TT-chung'!B3 (năm bắt đầu kế hoạch) là năm về hưu sớm,</li>
     <li>'Quỹ-hưu'!B4 (tuổi cuối kế hoạch) là tuổi về hưu đúng luật,</li>
-    <li>'TT-chung'!B8 (chi tiêu hàng tháng) là kết quả ở ô 'Quỹ-hưu'!B9 trong file KHTC1 ở bước 1 cộng thêm tiền đóng BHXH,
-    <li>'Quỹ-hưu'!B15 (số tiền để lại khi hết giai đoạn về hưu) là kết quả trong ô 'Quỹ-hưu'!B10 trong file KHTC3 ở bước 2.
+    <li>'TT-chung'!B8 (chi tiêu hàng tháng) là kết quả ở ô 'Quỹ-hưu'!B9 trong file KHTC1 ở bước một cộng thêm tiền đóng BHXH,
+    <li>'Quỹ-hưu'!B15 (số tiền để lại khi hết giai đoạn về hưu) là kết quả trong ô 'Quỹ-hưu'!B10 trong file KHTC3 ở bước hai.
   </ul>
   <p>Chọn menu <strong>Lộ trình Tài chính→Tính giai đoạn 2</strong> để tính số tiền cần có trong ô 'Quỹ-hưu'!B10.</p>
 
-  <h4>Tính lộ trình trong giai đoạn 1</h4>
+  <h4>Tính lộ trình trong giai đoạn một</h4>
   <p>Chép file KHTCp1 thành file KHTC4. Nhập vào:</p>
   <ul>
     <li>'TT-chung'!B3 (năm bắt đầu kế hoạch) là năm nay,</li>
     <li>'Quỹ-hưu'!B4 (tuổi về hưu) là tuổi về hưu sớm,</li>
     <li>'Quỹ-hưu'!B6 (tuổi cuối kế hoạch) là tuổi về hưu sớm cộng 1,</li>
-    <li>'Quỹ-hưu'!B15 (số tiền để lại khi hết giai đoạn về hưu) là kết quả trong ô 'Quỹ-hưu'!B10 trong file KHTC2 ở bước 3.
+    <li>'Quỹ-hưu'!B15 (số tiền để lại khi hết giai đoạn về hưu) là kết quả trong ô 'Quỹ-hưu'!B10 trong file KHTC2 ở bước ba.
   </ul>
   <p>Chọn menu <strong>Lộ trình Tài chính→Tính giai đoạn 1</strong> để tính lộ trình tích luỹ.</p>
   <p>Để đi theo lộ trình về hưu sớm, bạn nên giảm các mục tiêu muốn thực hiện như là mua nhà, sinh nhiều con để có tiền tích luỹ.</p>
@@ -670,7 +670,7 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
 
