--- a/huu-ich/lam-giau-khong-kho.html
+++ b/huu-ich/lam-giau-khong-kho.html
@@ -233,8 +233,8 @@ data-ad-slot="5275186684">
   <br>Có rất nhiều mức độ của sự giàu: hơi giàu, giàu, rất giàu, vô cùng giàu. Hoặc nếu quy ra đơn vị tiền thì có mức tỉ phú tiền Việt, triệu phú đô-la, tỉ phú đô-la.
   <br>Giả sử anh A 45 tuổi bán vé số trúng được giải 1,5 tỉ đồng. Vậy anh A có giàu không? Có thể có, có thể không, còn tuỳ anh A dùng 1,5 tỉ đồng như thế nào. Nếu sau khi trúng số, anh A trở nên chi tiêu thoải mái, mỗi ngày xài hết một triệu đồng thì chưa tới 50 tuổi anh A đã hết tiền. (Chuyện tương tự đã từng xảy ra ở tpHCM, trúng số tới vài tỉ chứ không phải 1,5 tỉ mà hết sạch sau vài năm.)</p>
   <p>Từ ví dụ trên, có thể thấy rằng <i>có nhiều tiền để tiêu không phải là giàu</i>, kiếm được nhiều tiền cũng chưa chắc là giàu bền vững. Vậy nếu có tiền của đủ để sống đến 100 tuổi thì gọi là giàu được không? Đọc đến đây sẽ có bạn phản đối: đâu phải ai sống lâu cũng đều giàu! Đúng vậy, sống lâu một cách tự chủ, không cần tiền trợ cấp của ai hết mới gọi là giàu mức độ đầu tiên. Các mức độ cao hơn nữa là dư tiền cho con cháu sống thêm 500 năm, 1000 năm, mãi mãi.
-  <br>Chúng ta thử tính xem sống lâu và tự chủ thì cần bao nhiêu tiền. Giả sử hiện nay bạn đang 25 tuổi, xài mỗi tháng trung bình 4 triệu đồng gồm cả ăn, ở, giải trí… Vậy là ít phải không? 35 năm sau bạn bắt đầu nghỉ làm việc ở tuổi 60. Để sống đến 100 tuổi thì bạn cần một khối tiền khổng lồ để xài suốt 40 năm. Giả sử mức trượt giá giữ nguyên 6%/năm thì lúc 60 tuổi bạn sẽ tiêu gần 31 triệu đồng mỗi tháng và cần khối tiền 9,8 tỉ đồng, hơn 2.440 lần mức chi tiêu hàng tháng hiện nay.</p>
-  <p>Với mức chi tiêu 4 triệu đồng mỗi tháng, ráng tiết kiệm lắm thì mỗi tháng dư ra được 1 triệu đồng là giỏi lắm rồi. Để bao lâu mới được 9,8 tỉ đồng? 9.800 tháng tức là hơn 800 năm à? Vậy thì quá khó để đạt đến mức độ đầu tiên của sự giàu!</p>
+  <br>Chúng ta thử tính xem sống lâu và tự chủ thì cần bao nhiêu tiền. Giả sử hiện nay bạn đang 25 tuổi, xài mỗi tháng trung bình bốn triệu đồng gồm cả ăn, ở, giải trí… Vậy là ít phải không? 35 năm sau bạn bắt đầu nghỉ làm việc ở tuổi 60. Để sống đến 100 tuổi thì bạn cần một khối tiền khổng lồ để xài suốt 40 năm. Giả sử mức trượt giá giữ nguyên 6%/năm thì lúc 60 tuổi bạn sẽ tiêu gần 31 triệu đồng mỗi tháng và cần khối tiền 9,8 tỉ đồng, hơn 2.440 lần mức chi tiêu hàng tháng hiện nay.</p>
+  <p>Với mức chi tiêu bốn triệu đồng mỗi tháng, ráng tiết kiệm lắm thì mỗi tháng dư ra được một triệu đồng là giỏi lắm rồi. Để bao lâu mới được 9,8 tỉ đồng? 9.800 tháng tức là hơn 800 năm à? Vậy thì quá khó để đạt đến mức độ đầu tiên của sự giàu!</p>
 
 
   <p>Không quá khó đâu! Chỉ cần gửi tiền một cách đều đặn vào nơi sinh lợi an toàn là bạn chắc chắn có 9,8 tỉ đồng đúng lúc. Mỗi tháng gửi một triệu đồng, với lợi nhuận 12,4%/năm thì bạn sẽ có 9,8 tỉ đồng sau 35 năm chứ không phải 800 năm. Nếu lợi nhuận 15%/năm thì bạn chỉ cần gửi 600 ngàn đồng mỗi tháng.</p>
@@ -272,9 +272,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -303,6 +304,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
