--- a/huu-ich/lam-phat-loi-song.html
+++ b/huu-ich/lam-phat-loi-song.html
@@ -226,7 +226,7 @@ data-ad-slot="5275186684">
 
 <!-- body here -->
   <h1>Lạm phát lối sống</h1>
-  <p>Nhiều người vẫn thường nói những câu tương tự như "5 năm trước, lương 5 triệu xài cũng hết, giờ lương 9 triệu xài cũng hết", và giải thích rằng tại trượt giá/lạm phát nên như vậy.</p>
+  <p>Nhiều người vẫn thường nói những câu tương tự như "năm năm trước, lương năm triệu xài cũng hết, giờ lương chín triệu xài cũng hết", và giải thích rằng tại trượt giá/lạm phát nên như vậy.</p>
   <p>Thật ra lạm phát tiền VND chỉ là <i>một phần nhỏ</i> gây ra chuyện đó, phần còn lại của nguyên nhân là <b>'lạm phát lối sống'</b> (dịch từ 'Lifestyle Inflation'.)</p>
   <p>Tại sao lại như vậy?</p>
   <p>Thông thường thì tiền lương của người lao động được điều chỉnh tăng theo lạm phát để giữ ổn định cuộc sống, ngoài ra người lao động còn được tăng lương do thâm niên, do thăng tiến lên vị trí cao hơn, do đổi sang công ty khác… Vậy khoản lương được tăng ngoài lý do lạm phát đã đi đâu mất? Nó mất vì <b>lạm phát lối sống</b>.</p>
@@ -270,9 +270,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -301,6 +302,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
