--- a/huu-ich/nghi-luc.html
+++ b/huu-ich/nghi-luc.html
@@ -239,9 +239,9 @@ data-ad-slot="5275186684">
 
     <h2>Nghị lực để giảm chi tiêu</h2>
     <p>Khi đã lập kế hoạch ngân sách xong, bạn phải thực hiện nó. Việc này đòi hỏi bạn phải có nghị lực để từ chối những cám dỗ chi tiêu. Đây là một mẹo cho bạn. Sự cám dỗ hưởng thụ tức thời thì mạnh nhất khi nó mới vừa xuất hiện. Bạn đi ngang tiệm cafe Starbucks, và đột nhiên bạn muốn mua một ly cafe 6$. Nhưng nếu bạn đi tiếp thì chỉ vài phút sau là bạn sẽ không còn bị cám dỗ.</p>
-    <p>Hãy tự cố gắng hạn chế những sự cám dỗ chi tiêu đó. Hãy ngừng nhận những email giới thiệu hàng hoá, giảm thời gian đi la cà trong cửa tiệm, tập một thú vui thu hút như đọc sách hay làm vườn. Bạn cũng có thể đặt ra một <u>thời gian chờ</u> cho mọi quyết định chi tiêu. Mỗi khi muốn mua món gì đó, bạn hãy đợi thêm một thời gian rồi mới quyết định mua. Đối với những món ít tiền thì thời gian chờ từ 7 đến 10 ngày là đủ, đối với món nhiều tiền thì thời gian chờ nên là 30 ngày. Thời gian chờ sẽ làm cho sự cám dỗ nguội bớt và bạn có thời gian cân nhắc lại mục đích của việc mua món đó.</p>
+    <p>Hãy tự cố gắng hạn chế những sự cám dỗ chi tiêu đó. Hãy ngừng nhận những email giới thiệu hàng hoá, giảm thời gian đi la cà trong cửa tiệm, tập một thú vui thu hút như đọc sách hay làm vườn. Bạn cũng có thể đặt ra một <u>thời gian chờ</u> cho mọi quyết định chi tiêu. Mỗi khi muốn mua món gì đó, bạn hãy đợi thêm một thời gian rồi mới quyết định mua. Đối với những món ít tiền thì thời gian chờ từ bảy đến mười ngày là đủ, đối với món nhiều tiền thì thời gian chờ nên là 30 ngày. Thời gian chờ sẽ làm cho sự cám dỗ nguội bớt và bạn có thời gian cân nhắc lại mục đích của việc mua món đó.</p>
     <h2>Nghị lực để tiết kiệm và đầu tư</h2>
-    <p>Khi đã có kế hoạch ngân sách và giảm chi tiêu, bạn sẽ có tiền dư. Bạn hãy dùng tiền dư đó vào quỹ dự phòng khẩn cấp và quỹ cho tuổi già. Trong hai quỹ đó, quỹ cho tuổi già dễ tham gia hơn, nhất là khi bạn có quỹ hưu trí tự nguyện 401(k). Bạn chỉ cần một lần đặt lệnh tự động hàng tháng chuyển tiền vào quỹ, sau đó bạn không cần nghị lực nữa. Mỗi tháng chuyển 500$ vào quỹ với lợi nhuận 7% mỗi năm thì sau 30 năm bạn sẽ có 600.000$, thật dễ dàng.</p>
+    <p>Khi đã có kế hoạch ngân sách và giảm chi tiêu, bạn sẽ có tiền dư. Bạn hãy dùng tiền dư đó vào quỹ dự phòng khẩn cấp và quỹ cho tuổi già. Trong hai quỹ đó, quỹ cho tuổi già dễ tham gia hơn, nhất là khi bạn có quỹ hưu trí tự nguyện 401(k). Bạn chỉ cần một lần đặt lệnh tự động hàng tháng chuyển tiền vào quỹ, sau đó bạn không cần nghị lực nữa. Mỗi tháng chuyển 500 USD vào quỹ với lợi nhuận 7% mỗi năm thì sau 30 năm bạn sẽ có 600.000 USD, thật dễ dàng.</p>
     <p>Duy trì một quỹ dự phòng khẩn cấp thì hơi khó hơn. Bạn phải tự kiềm chế không đụng đến số tiền trong quỹ dự phòng khẩn cấp. Bạn nên gửi nó vào các sổ tiết kiệm có kỳ hạn để khó đụng đến nó hơn là để trong tài khoản giao dịch.</p>
     <h2>Hoãn sự hưởng thụ lại để trở nên giàu</h2>
     <p>Hãy xem nghị lực như là sức mạnh cơ thể, bắt đầu rèn luyện nghị lực từ những điều nhỏ như chọn làm kế hoạch thay vì ngồi xem phim, bớt mua cafe. Nghị lực của bạn sẽ lớn dần lên đến một lúc bạn sẽ thấy vui khi từ chối hưởng thụ tức thời. Đó là lúc bạn có thể đặt ra những mục tiêu tài chính lớn và thực hiện được, đó là làm giàu.</p>
@@ -263,9 +263,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -294,6 +295,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
