--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -241,8 +241,8 @@ data-ad-slot="5275186684">
   <h3>Gửi ngân hàng</h3>
   <p>Tóm lại, vàng vẫn chưa đủ tốt để tích luỹ dài hạn. Thứ gì có thể tốt hơn vàng trong việc tích luỹ dài hạn? Thứ đó phải tăng giá trị nhanh hơn tốc độ trượt giá. Thứ đó chính là thứ rất bình thường: <i>sổ tiết kiệm</i> kỳ hạn dài ở các ngân hàng!
   <br>Ngân hàng nhà nước luôn luôn điều chỉnh chính sách sao cho lãi suất huy động tiết kiệm có kỳ hạn 12 tháng trở lên sẽ hơi cao hơn mức trượt giá, khi nhiều khi ít. Khi muốn kiềm chế lạm phát thì lãi suất huy động tiết kiệm sẽ cao hơn nhiều để dân chúng đem tiền gửi vào ngân hàng, tiền mặt trở nên có giá hơn, giảm trượt giá.</p>
-  <p>Ví dụ hôm nay chị A gửi vào ngân hàng 5 triệu đồng (tương đương 500kg gạo loại 10.000₫/kg) sau một năm chị A có được 5,5 triệu đồng, giả sử gạo tăng giá 8% thì chị A vẫn có thể mua được 500kg gạo và dư ra 100.000₫. Số tiền dư ra sau một năm không nhiều nhưng sau 30 năm thì con số sẽ khác một cách đáng kể. Giả sử trượt giá giữ nguyên 8%/năm và lãi suất huy động giữ nguyên 10%/năm, chị A không cần phải để dành đến 50% thu nhập của mình mua vàng để dùng sau 30 năm mà chỉ cần gửi tiết kiệm 41% thu nhập mỗi tháng.</p>
-  <p>Lãi suất tiết kiệm cao hơn mức trượt giá có 2% mỗi năm (10% - 8%), số tiền chị A cần phải tiết kiệm đã giảm xuống gần một phần năm (41% / 50%). Nếu chị A có cách làm cho tiền sinh lợi cao hơn so với trượt giá nhiều hơn nữa thì có thể để dành ít hơn, chi tiêu nhiều hơn trong hiện tại, việc tiết kiệm sẽ dễ dàng hơn.
+  <p>Ví dụ hôm nay chị A gửi vào ngân hàng năm triệu đồng (tương đương 500 kg gạo loại 10.000 ₫/kg) sau một năm chị A có được 5,5 triệu đồng, giả sử gạo tăng giá 8% thì chị A vẫn có thể mua được 500 kg gạo và dư ra 100.000 ₫. Số tiền dư ra sau một năm không nhiều nhưng sau 30 năm thì con số sẽ khác một cách đáng kể. Giả sử trượt giá giữ nguyên 8%/năm và lãi suất huy động giữ nguyên 10%/năm, chị A không cần phải để dành đến 50% thu nhập của mình mua vàng để dùng sau 30 năm mà chỉ cần gửi tiết kiệm 41% thu nhập mỗi tháng.</p>
+  <p>Lãi suất tiết kiệm cao hơn mức trượt giá có 2% mỗi năm (10% - 8%), số tiền chị A cần phải tiết kiệm đã giảm xuống gần một phần năm (41% so với 50%). Nếu chị A có cách làm cho tiền sinh lợi cao hơn so với trượt giá nhiều hơn nữa thì có thể để dành ít hơn, chi tiêu nhiều hơn trong hiện tại, việc tiết kiệm sẽ dễ dàng hơn.
   <br><i>Tính toán này có vẻ không giống với thực tế là những người gửi tiền tiết kiệm VND cứ thấy số tiền của mình nhỏ dần đi. Nguyên nhân của sự khác nhau giữa tính toán và thực tế là người gửi tiền tiết kiệm VND thường lấy tiền lãi ra dùng vì thấy nó lẻ, số tiền gốc gửi lại đương nhiên sẽ kém giá trị hơn năm ngoái vì đã bị trượt giá!</i></p>
 
 
@@ -251,7 +251,7 @@ data-ad-slot="5275186684">
   <p>Làm sao chị A có thể hùn vốn vào các doanh nghiệp làm ăn tốt? Để hùn vốn vào các doanh nghiệp gia đình làm ăn tốt thì phải là người thân quen. Để hùn vốn vào Vinamilk, Vietcombank dễ hơn nhiều, chỉ cần mua cổ phiếu.
   <br>Chị A không biết gì về cổ phiếu, không có thời gian làm thủ tục mua cổ phiếu, lại còn phải mua nhiều loại cổ phiếu khác nhau nữa, rồi những lúc cổ phiếu xuống giá thì sao?
   <br>Không sao cả. Không biết về cổ phiếu thì bỏ chút thời gian tìm hiểu những khái niệm và nguyên tắc chung, trẻ con các nước công nghiệp hoá còn chơi <a href="/kinh-nghiem/may-tinh/cashflow">trò chơi đầu tư cổ phiếu</a> được mà không lẽ chị A không hiểu được. Điều quan trọng là tìm hiểu từ những người hiểu biết, đừng nghe những người không biết nói là <i>để tiền vào cổ phiếu chỉ có nước bán nhà, nhảy lầu tự tử</i>. Những người không biết rõ về cổ phiếu mà cũng tham gia thị trường chứng khoán thì rất dễ bán nhà, nhảy lầu. Những người đã từng bán nhà vì cổ phiếu vẫn chưa chắc là đã biết rõ về thị trường chứng khoán. Do đó đừng nghe những người từng bán nhà vì cổ phiếu, và tất nhiên là không thể nghe những người đã nhảy lầu vì cổ phiếu (vì có thể họ không nói được nữa).
-  <br>Chị A cũng không cần phải làm thủ tục mua cổ phiếu, đã có các tổ chức <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> làm giùm và họ luôn luôn chọn mua những cổ phiếu tốt nhất cho chị A. Hàng tháng, chị A chỉ cần lãnh lương ra và gọi ngay cho quỹ đầu tư bảo “Tháng này tôi có 1.200.000₫, hãy đầu tư vào những công ty tốt nhất cho tôi”, quỹ đầu tư cử người đến gặp chị A nhận tiền để đầu tư.
+  <br>Chị A cũng không cần phải làm thủ tục mua cổ phiếu, đã có các tổ chức <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> làm giùm và họ luôn luôn chọn mua những cổ phiếu tốt nhất cho chị A. Hàng tháng, chị A chỉ cần lãnh lương ra và gọi ngay cho quỹ đầu tư bảo “Tháng này tôi có 1.200.000 đồng, hãy đầu tư vào những công ty tốt nhất cho tôi”, quỹ đầu tư cử người đến gặp chị A nhận tiền để đầu tư.
   <br>Khi giá cổ phiếu xuống thì sao? Giá cổ phiếu lên xuống là chuyện bình thường, cũng giống như giá vàng. Khi giá vàng xuống thì chị A không có gì phải lo khi biết rằng 30 năm nữa một lượng vàng vẫn đổi được 1.000 tô phở như hôm nay. Giá cổ phiếu xuống rồi sẽ lên lại và giá nó vẫn tăng dần theo thời gian.
   <br>Lỡ công ty đó thua lỗ, phá sản thì tiền mua cổ phiếu ra sao? Quỹ đầu tư với nhiều kinh nghiệm và xử lý thông tin chuyên nghiệp sẽ tránh bỏ tiền vào các công ty quản lý kém, và sẽ kịp thời rút tiền ra trước khi công ty thua lỗ, ngoài ra quỹ đầu tư để tiền vào hàng chục công ty thì một công ty tạm thời thua lỗ cũng không làm lỗ nguyên cả quỹ.
   <br>Chú ý: quỹ đầu tư không phải là các kiểu đầu cơ vàng và ngoại tệ trên mạng hay rủ rê người ta gửi tiền với lãi suất 3%/tháng, xem thêm bài <a href="cach-dau-tu">Những cách đầu tư</a> để phân biệt.</p>
@@ -320,9 +320,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -351,6 +352,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
