--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -261,7 +261,7 @@ data-ad-slot="5275186684">
   <p>Giải pháp không tốn kém sau đây sẽ đem lại nhiều lợi ích cùng lúc cho doanh nghiệp và người lao động.
   <br>Mỗi người chắc chắn có một khoản lương hưu của riêng mình ngoài lương hưu từ BHXH. Mỗi người tự kiểm soát quỹ lương hưu của riêng mình.
   <br>Để tập cho người lao động quen với việc tự chuẩn bị lương hưu cho mình, doanh nghiệp bắt đầu tạo cho mỗi người lao động một tài khoản hưu trí tự nguyện nhỏ và khuyến khích người lao động tự để dành thêm vào tài khoản bằng hình thức thưởng. Tất cả chi phí cho việc này chỉ chiếm một phần ngân sách khen thưởng của doanh nghiệp.
-  <br>Tiền doanh nghiệp thưởng cho nhân viên hàng năm được chia làm 3 phần:</p>
+  <br>Tiền doanh nghiệp thưởng cho nhân viên hàng năm được chia làm ba phần:</p>
   <ol>
     <li>phần cơ bản đóng vào quỹ hưu trí tự nguyện hàng tháng hoặc hàng năm</li>
     <li>phần thưởng tiền mặt trước Tết</li>
@@ -400,7 +400,7 @@ data-ad-slot="5275186684">
 
 
   <p>Công thức trên khuyến khích người lao động tự chuẩn bị lương hưu cho mình một cách công bằng: người cố gắng tiết kiệm nhiều được thưởng nhiều, trong khi khoản thưởng Tết vẫn tỉ lệ với mức lương. Giả sử mỗi người đều tự đóng vào quỹ hưu trí tự nguyện một khoản bằng lương tháng thì tổng khoản thưởng vào tài khoản hưu trí và khoản thưởng Tết nhận ngay của mỗi người đều là Hệ-số-thưởng * (1 + Hệ-số-tương-lai) * Lương-tháng.
-  <br>Người nào có tỉ lệ Tổng-tiền-tự-đóng-trong-năm / Lương-tháng cao hơn thì sẽ nhận vào tài khoản hưu trí nhiều hơn. Trong bảng ví dụ trên chị A lương 4 triệu đồng / tháng, trong suốt năm tự đóng thêm 5 triệu đồng, chị D lương 5 triệu đồng / tháng, trong suốt năm tự đóng thêm 4 triệu đồng, Hệ-số-thưởng cuối năm là 0,1853, Hệ-số-tương-lai là 4 thì chị A được thưởng 4,6325 triệu đồng vào tài khoản hưu trí, chị D được thưởng 2,3718 triệu đồng vào tài khoản hưu trí.
+  <br>Người nào có tỉ lệ Tổng-tiền-tự-đóng-trong-năm chia cho Lương-tháng cao hơn thì sẽ nhận vào tài khoản hưu trí nhiều hơn. Trong bảng ví dụ trên chị A lương bốn triệu đồng mỗi tháng, trong suốt năm tự đóng thêm năm triệu đồng, chị D lương năm triệu đồng mỗi tháng, trong suốt năm tự đóng thêm bốn triệu đồng, Hệ-số-thưởng cuối năm là 0,1853, Hệ-số-tương-lai là 4 thì chị A được thưởng 4,6325 triệu đồng vào tài khoản hưu trí, chị D được thưởng 2,3718 triệu đồng vào tài khoản hưu trí.
   <br>Để khuyến khích nhân viên làm việc lâu với doanh nghiệp thì khoản cơ bản mỗi năm có thể tăng dần theo thâm niên, mỗi năm thâm niên được thêm 2% Lương-tháng.
   <br>Điều đặc biệt là doanh nghiệp có thể thoả thuận với nhân viên về thời điểm trao quyền sở hữu những khoản doanh nghiệp đóng và thưởng vào tài khoản hưu trí. Ví dụ sau mỗi năm chỉ trao quyền sở hữu 10% số tiền, đến cuối năm thứ năm sẽ trao hết số tiền đã đóng và thưởng, từ năm thứ sáu trở đi mọi khoản doanh nghiệp đưa vào tài khoản đều thuộc về nhân viên ngay. Người lao động rời doanh nghiệp trước khi hết thời gian thoả thuận sẽ không nhận được những khoản chưa được trao quyền sở hữu, khoản đó trả lại cho doanh nghiệp.
   Tiền trong tài khoản hưu trí tự nguyện sẽ sinh lợi và lãi nhập gốc hàng tháng. Nhân viên chỉ được rút tiền ra khi đến tuổi về hưu hoặc trong những trường hợp đặc biệt như tử vong, mất sức lao động. Do quỹ hưu trí tự nguyện chuyên đầu tư dài hạn và phí quản lý quỹ thấp nên lợi nhuận của quỹ hưu trí tự nguyện tốt hơn lãi tiết kiệm ở một số ngân hàng thương mại lớn.</p>
@@ -455,7 +455,7 @@ data-ad-slot="5275186684">
   </tr>
   <tr>
     <td>Ngưng đóng thì tiền đã đóng vẫn sinh lời, đến tuổi hưu vẫn nhận được.</td>
-    <td>Phải đóng đủ 20 năm mới được lương hưu. Nếu chưa đóng đủ 20 năm thì chỉ được trợ cấp 1 lần.</td>
+    <td>Phải đóng đủ 20 năm mới được lương hưu. Nếu chưa đóng đủ 20 năm thì chỉ được trợ cấp một lần.</td>
   </tr>
   <tr>
     <td>Có trợ cấp tử vong, mất sức lao động</td>
@@ -493,9 +493,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -524,6 +525,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
