--- a/kinh-nghiem/linh-tinh/nutrition.html
+++ b/kinh-nghiem/linh-tinh/nutrition.html
@@ -256,9 +256,10 @@ data-ad-slot="5275186684">
 Bạn có thể download <a href="http://chuyentrang.viendinhduong.vn/FileUpload/Documents/Nam%202021/(Y2021%20M09%20D09)%206%20Thap%20DD%20Tieng%20Viet.pdf" target='_blank'>file pdf trên</a>.
 
 <h2>Cách kiểm soát trong thực tế</h2>
+<div class="flright"><amp-img alt="cân điện tử" src="/images/tanita.jpg" width="567" height="466" layout="responsive"></amp-img></div>
 <p>Tuy nhiên, rất khó để đo đếm chính xác calorie tiêu hao và thức ăn đưa vào miệng, cho nên cách đúng nhất để kiểm soát là dùng cái cân!
-<br>Mỗi tháng cân một lần và ghi vào sổ, nếu thấy tăng cân thì vận động nhiều hơn hoặc bóp bớt cái miệng lại! Cố gắng giữ cho cân nặng hợp lý so với chiều cao cơ thể để có chỉ số <a href="https://en.wikipedia.org/wiki/Body_mass_index" target='_blank'>BMI</a> trong khoảng tối ưu. Tình trạng thừa cân nặng gây ra rất nhiều bệnh cho cơ thể người: bệnh xương khớp do bộ xương không chịu nổi trọng lượng, bệnh tim mạch, bệnh tiểu đường…</p>
-<p>Hiện nay có những loại cân điện tử với giá vài trăm ngàn đồng có thể đo được tỷ lệ mỡ và nước trong cơ thể, chúng ta có thêm một thông tin để kiểm soát sức khoẻ. Ngoài việc kiểm soát cân nặng, mỗi người còn phải giữ cho tỷ lệ mỡ không quá mức cho phép. Tỷ lệ mỡ tăng tức là tỷ lệ bắp thịt giảm, là hậu quả của việc giảm vận động. Trang web sau cho biết <a href="https://www.tanita.asia/?_page=understanding&_para%5b0%5d=1" target='_blank'>tỷ lệ mỡ trong cơ thể người khoẻ mạnh</a>.</p>
+<br>Mỗi tháng cân một lần và ghi vào sổ, nếu thấy tăng cân thì vận động nhiều hơn hoặc bóp bớt cái miệng lại! Cố gắng giữ cho cân nặng hợp lý so với chiều cao cơ thể để có chỉ số <a href="https://en.wikipedia.org/wiki/Body_mass_index" target='_blank'>BMI</a> trong khoảng tối ưu. Tình trạng thừa cân nặng gây ra rất nhiều bệnh cho cơ thể người: bệnh xương khớp do bộ xương không chịu nổi trọng lượng, bệnh tim mạch, bệnh tiểu đường…
+<br>Hiện nay có những loại cân điện tử với giá vài trăm ngàn đồng có thể đo được tỷ lệ mỡ và nước trong cơ thể, chúng ta có thêm một thông tin để kiểm soát sức khoẻ. Ngoài việc kiểm soát cân nặng, mỗi người còn phải giữ cho tỷ lệ mỡ không quá mức cho phép. Tỷ lệ mỡ tăng tức là tỷ lệ bắp thịt giảm, là hậu quả của việc giảm vận động. Trang web sau cho biết <a href="https://www.tanita.asia/?_page=understanding&_para%5b0%5d=1" target='_blank'>tỷ lệ mỡ trong cơ thể người khoẻ mạnh</a>.</p>
 <!--
 http://viendinhduong.vn/FileUpload/Documents/TLTT%20BKLN/(16)%20Banh%20hap%20luoc.PDF
 http://viendinhduong.vn/FileUpload/Documents/TLTT%20BKLN/(21)%20Xoi.PDF
