--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -230,7 +230,7 @@ data-ad-slot="5275186684">
   <h2>Backup</h2>
   <p>Từ vài chục năm trước, những người dùng máy tính cẩn thận đều định kỳ làm một việc quan trọng là backup, chép các file cần giữ sang một hoặc nhiều vật chứa khác, giữ nhiều bản sao ở các ngày khác nhau, thậm chí những bản sao đó còn được đem đi cất ở toà nhà khác hoặc địa phương khác để lỡ khi hoả hoạn hay thiên tai xảy ra thì không bị mất tất cả các bản sao. Ban đầu, dân máy tính chuyên nghiệp sao chép các file ra băng từ. Chép file vào băng từ và đọc từ băng ra chậm hơn đọc từ đĩa cứng rất nhiều nhưng băng từ rẻ hơn đĩa cứng nhiều lần nên có thể dùng để sao chép nhiều bản mà không quá tốn kém. Dân không chuyên thì không có ổ đọc/ghi băng và cũng không cần chép file ra nhiều bản nên đã chép ra đĩa mềm, rồi CD-Recordable, CD-Rewritable, DVD-Recordable, DVD-Rewritable rồi USB drive hoặc portable hard drive.</p>
   <p>Khoảng 30 năm trước, do ở Việt Nam không có đủ phương tiện, nhiều người dùng máy tính dù là chuyên nghiệp cũng không làm việc backup quan trọng đó và không ít người phải chịu hậu quả của việc mất file.
-  Tôi cũng đã hơn một lần bị như vậy. Lần đầu tiên tôi bị mất file là khi làm đồ án tốt nghiệp ngành máy tính ở trường Đại học Bách Khoa năm 1987. Hồi đó các thầy cấp cho hai sinh viên dùng chung một đĩa mềm 360KB. Máy tính của trường thì chỉ có một ổ đĩa mềm, máy sẽ nhắc người dùng khi thì cho đĩa chứa compiler vào ổ đĩa, khi thì cho đĩa chứa program đang soạn vào ổ đĩa.
+  Tôi cũng đã hơn một lần bị như vậy. Lần đầu tiên tôi bị mất file là khi làm đồ án tốt nghiệp ngành máy tính ở trường Đại học Bách Khoa năm 1987. Hồi đó các thầy cấp cho hai sinh viên dùng chung một đĩa mềm 360 KB. Máy tính của trường thì chỉ có một ổ đĩa mềm, máy sẽ nhắc người dùng khi thì cho đĩa chứa compiler vào ổ đĩa, khi thì cho đĩa chứa program đang soạn vào ổ đĩa.
   Trường cũng không có nhiều máy nên sinh viên thường phải chia giờ làm việc qua đêm, mà làm việc đêm thì mệt và dễ làm lộn. Một đêm nọ, người bạn dùng chung đĩa mềm với tôi đưa lộn đĩa vào ổ khi máy tính yêu cầu, thế là tất cả file trong đó bị ghi đè lên, bao nhiêu công lao soạn program biến mất không còn một chút dấu vết.</p>
   <p>Bắt đầu phổ biến từ vài năm nay là dịch vụ sao chép lên mây, cloud storage. Hiện nay, có rất nhiều nhà cung cấp dịch vụ cloud storage. Nhà cung cấp nào cũng cho người dùng được dùng miễn phí một mức nào đó. Khi cần dùng nhiều hơn thì người dùng phải trả tiền, trả theo tháng, theo năm hoặc trả một lần để dùng 99 năm. Mức dùng miễn phí nhiều hay ít khác nhau tùy theo nhà cung cấp. Có nhà cung cấp chỉ cho dùng vài GB miễn phí, cũng có những nhà cung cấp cho đến vài chục GB.</p>
   <p>Dùng những dịch vụ cloud storage rất tiện: có thể lấy file của mình ra dùng mọi lúc, mọi nơi miễn là có nối Internet, mà bây giờ thì quá dễ để được nối vào Internet với sóng di động 3G/4G. Càng tiện hơn nữa khi file được tạo ra trong máy của người dùng được tự động synchronize vào cloud và ngược lại, tiện hơn so với việc phải định kỳ chép từ bản chính sang bản sao. Một số cloud storage còn tạo ra một ổ đĩa cloud trong máy tính để các phần mềm trong máy làm việc thẳng với file trong cloud như file đang nằm trong máy (nhưng chậm hơn một chút, chỉ một chút thôi vì phần mềm cloud có cách cache rất tốt).
@@ -286,9 +286,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -317,6 +318,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
