--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -251,7 +251,7 @@ Wallet có thể được đặt trong
 <li>trong thiết bị USB đặc biệt, gồm có một bộ xử lý và bộ nhớ riêng như một <a href="https://en.wikipedia.org/wiki/Smart_card" target='_blank'>Smartcard</a> để chứa wallet và ký các lệnh chuyển tiền. Lệnh chuyển tiền được ký trong thiết bị nên không lo private key bị ăn cắp bởi các malware trong máy tính.</li>
 <li>web server trong Internet</li>
 </ol>
-Có loại wallet còn giữ luôn tất cả các block dữ liệu giao dịch của toàn hệ thống, đó là full node. Cho tới năm 2021 thì toàn bộ các block Bitcoin chiếm 350GB.
+Có loại wallet còn giữ luôn tất cả các block dữ liệu giao dịch của toàn hệ thống, đó là full node. Cho tới năm 2021 thì toàn bộ các block Bitcoin chiếm 350 GB.
 <p>Ở hệ thống ngân hàng thường, tiền nằm trong các file trong hệ thống máy tính còn chữ ký thì nằm trên tay chủ tài khoản hoặc private key của chữ ký điện tử nằm trong máy hay USB do chủ tài khoản giữ. Tiền và chữ ký ở hai nơi khác nhau. Hacker phải biết được địa chỉ của tiền (số tài khoản) và chữ ký thì mới chuyển tiền đi nơi khác được.
 <br>Trong hệ thống Bitcoin, wallet chứa cả địa chỉ các Bitcoin lẫn private key. Hacker chép được file wallet là trở thành chủ của số Bitcoin trong wallet; hacker sẽ nhanh chóng chuyển hết Bitcoin trong wallet sang chỗ khác trước khi chủ wallet kịp biết.</p>
 <h2>Mua bán Bitcoin như thế nào?</h2>
@@ -281,7 +281,7 @@ Giao dịch trên sàn thì tốn phí giao dịch, phí chuyển Bitcoin vào v
 
 
 <h3>Hao tốn năng lượng</h3>
-<p>Các máy tính miner tranh nhau xử lý các giao dịch để cuối cùng chỉ có một miner được thưởng Bitcoin mới, việc tranh giành làm hao tốn rất nhiều điện năng. Có người tính rằng hiện nay để xử lý một giao dịch Bitcoin thì hao mất 200kWh điện. Và lượng điện đó ngày càng tăng vì càng có nhiều miner mới tham gia.</p>
+<p>Các máy tính miner tranh nhau xử lý các giao dịch để cuối cùng chỉ có một miner được thưởng Bitcoin mới, việc tranh giành làm hao tốn rất nhiều điện năng. Có người tính rằng hiện nay để xử lý một giao dịch Bitcoin thì hao mất 200 kWh điện. Và lượng điện đó ngày càng tăng vì càng có nhiều miner mới tham gia.</p>
 <h2>Một loại tiền mật mã cho mọi người</h2>
 <p>Tôi vừa được biết một đồng tiền mật mã mới gọi là <b>π</b> (Pi). <a href="pi-network">Pi Network</a> là một dự án thí nghiệm phát triển một đồng tiền được sử dụng hàng ngày cho hàng tỷ người trên khắp thế giới. Mọi người đều có thể dễ dàng sử dụng π và tham gia làm dịch vụ trong Pi Network.</p>
 <p>Ý tưởng của Pi Network là tạo ra một cộng đồng vô cùng đông người sở hữu π và công nhận giá trị của π.</p>
@@ -305,9 +305,10 @@ Các bài liên quan:
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -336,6 +337,7 @@ Các bài liên quan:
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
