--- a/kinh-nghiem/may-tinh/ham-tai-chinh.html
+++ b/kinh-nghiem/may-tinh/ham-tai-chinh.html
@@ -231,14 +231,14 @@ data-ad-slot="5275186684">
 <h2>PV Present Value</h2>
 <p>PV tính số tiền cần đầu tư để có thể rút ra một số tiền bằng nhau ở các thời điểm cách đều nhau khi biết trước lãi suất không đổi trong suốt thời gian đầu tư.</p>
 <p>Ví dụ: tính số tiền cần có khi con bạn bắt đầu học đại học sao cho có thể rút ra 120 triệu đồng mỗi năm trong 5 năm, phần còn lại gửi tiết kiệm lãi suất 7%/năm, sau 5 năm đó vẫn còn lại 50 triệu đồng để mua sắm cho con chuẩn bị bắt đầu đi làm.
-<br>Kết quả PV(7%;5;120.000.000;50.000.000;1)=-562.114.659,75₫.
-<br>Kết quả này khác xa con số 650.000.000₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu">đầu tư</a> không?
+<br>Kết quả PV(7%;5;120.000.000;50.000.000;1)=-562.114.659,75 ₫.
+<br>Kết quả này khác xa con số 650.000.000 ₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu">đầu tư</a> không?
 <br>Dấu trừ trong kết quả có nghĩa là ta phải xuất số tiền đó ra vào đầu năm thứ 1.</p>
  
 <h2>PMT Payment</h2>
 <p>PMT tính số tiền phải trả đều đặn để sau một số chu kỳ, với một lãi suất cố định sẽ nhận được một số tiền trong tương lai.</p>
 <p>Ví dụ: tính số tiền cần góp hàng tháng sao cho sau 18 năm, từ 10 triệu đồng ban đầu, với lãi suất 7%/năm sẽ có được số tiền tính ra ở ví dụ trên.
-<br>Kết quả PMT(7%/12;18*12;-10.000.000;562.114.659,75;1)=-1.216.409,13₫
+<br>Kết quả PMT(7%/12;18*12;-10.000.000;562.114.659,75;1)=-1.216.409,13 ₫
 <br>Dấu trừ ở số 10 triệu và kết quả có nghĩa là ta phải xuất số tiền đó ra.</p>
 <p>Mỗi ngày <a href="/huu-ich/chi-tieu">tiết kiệm</a> khoảng 40 ngàn đồng, sau 18 năm sẽ có được một số tiền hơn nửa tỉ đồng cho con học đại học tốt. Có thể tiết kiệm được 40 ngàn đồng mỗi ngày bằng cách nấu đồ ăn sáng ở nhà thay vì cả gia đình đi ăn tiệm. Nếu nấu đồ ăn đem theo ăn trưa ở chỗ làm thì sẽ <a href="/huu-ich/tich-luy">tích luỹ</a> được nhiều hơn nữa.</p>
 
@@ -300,9 +300,10 @@ Các bài liên quan:
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -331,6 +332,7 @@ Các bài liên quan:
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
