--- a/kinh-nghiem/may-tinh/in-phun.html
+++ b/kinh-nghiem/may-tinh/in-phun.html
@@ -226,9 +226,9 @@ data-ad-slot="5275186684">
 
   <h1>In phun</h1>
 <h2>Bơm mực</h2>
-<p>Trong mỗi cartridge mực của máy in phun Epson có một IC đếm số mực đã phun ra. Khi phun <em>gần hết</em> mực thì IC đó báo là hết mực rồi, không dùng cartridge này nữa. Driver của máy in này trong Windows luôn luôn hiện lượng mực còn trong cartridge để người dùng biết mà chuẩn bị tiền mua cartridge mới. Giá một cartridge mực đen T038 là 8USD và một cartridge mực 3 màu T039 là 12USD.</p>
+<p>Trong mỗi cartridge mực của máy in phun Epson có một IC đếm số mực đã phun ra. Khi phun <em>gần hết</em> mực thì IC đó báo là hết mực rồi, không dùng cartridge này nữa. Driver của máy in này trong Windows luôn luôn hiện lượng mực còn trong cartridge để người dùng biết mà chuẩn bị tiền mua cartridge mới. Giá một cartridge mực đen T038 là tám USD và một cartridge ba màu mực T039 là 12 USD.</p>
 <p>Để <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a> thì đừng mua cartridge mới mà hãy dùng một dụng cụ do Trung Quốc làm để reset IC của cartridge đó, in tiếp cho đến khi không ra chữ (được chừng 10-20 trang), rồi mua mực bơm vào. Thế là có một cartridge đầy mực để in tiếp.</p>
-<p>Một ống 20ml mực giá 20.000₫ (có sẵn kim tiêm, đen hay màu cũng đồng giá). Mỗi lần bơm 10ml mực vào cartridge. In thử file pdf 150 trang chữ xong, driver báo đã xài hết nửa cartridge mực đen. Tính ra tốn hết 5.000₫ mực và chừng 6.000₫ giấy! Thứ hao nhất là thời gian đứng xếp giấy vào máy in và lấy giấy từ máy in ra! Nếu mua mực trong lọ 150ml thì rẻ hơn nữa.</p>
+<p>Một ống 20 ml mực giá 20.000 ₫ (có sẵn kim tiêm, đen hay màu cũng đồng giá). Mỗi lần bơm 10 ml mực vào cartridge. In thử file pdf 150 trang chữ xong, driver báo đã xài hết nửa cartridge mực đen. Tính ra tốn hết 5.000 ₫ mực và chừng 6.000 ₫ giấy! Thứ hao nhất là thời gian đứng xếp giấy vào máy in và lấy giấy từ máy in ra! Nếu mua mực trong lọ 150 ml thì rẻ hơn nữa.</p>
 <p>Nghe (Epson) đồn rằng dùng mực bơm như vậy thì máy in sẽ mau hư. Cartridge mực tôi đang xài được bơm nhiều lần rồi, vẫn chưa thấy dấu hiệu chất lượng in bị kém, in ảnh vẫn đẹp như ảnh rọi ở tiệm.</p>
 
 
@@ -240,30 +240,30 @@ data-ad-slot="5275186684">
 
 <h2>Rửa đầu phun</h2>
 <p>Máy in phun để lâu không dùng sẽ khô mực ở đầu phun, in không ra đủ nét nữa. Epson khuyên nên in đều đặn mỗi tháng ít nhất một trang. <br />
-Có lần tôi để lâu không in nên đầu phun màu đen bị nghẹt 2 điểm, dùng chức năng làm sạch đầu phun của máy in vài lần cũng không hết nghẹt. Tìm trong Internet thấy có người chỉ cách dùng nước lau kính để làm sạch. Họ dùng nước lau kính hiệu Windex của Mỹ, tôi dùng nước lau kính Việt Nam cũng tốt.</p>
+Có lần tôi để lâu không in nên đầu phun màu đen bị nghẹt hai điểm, dùng chức năng làm sạch đầu phun của máy in vài lần cũng không hết nghẹt. Tìm trong Internet thấy có người chỉ cách dùng nước lau kính để làm sạch. Họ dùng nước lau kính hiệu Windex của Mỹ, tôi dùng nước lau kính Việt Nam cũng tốt.</p>
 <p>Cách dùng:</p>
 <ol><li>dùng nút bấm chức năng thay cartridge để cụm đầu in chạy ra giữa máy,</li>
 <li>tắt máy in bằng cách rút dây điện để cụm đầu in không chạy về gốc,</li>
 <li>tháo các cartridge mực ra khỏi đầu in,</li>
 <li>lót nhiều giấy vệ sinh để thấm dưới cụm đầu in</li>
-<li>dùng ống chích bơm 2ml nước lau kính vào vòi hút mực ngay chỗ cartridge vừa rút ra, mỗi màu mực có một vòi hút, màu mực nào bị nghẹt thì bơm vào vòi hút của màu đó, kê đầu ống chích không gắn kim vào ngay vòi hút và bơm từ từ,<br />
+<li>dùng ống chích bơm hai ml nước lau kính vào vòi hút mực ngay chỗ cartridge vừa rút ra, mỗi màu mực có một vòi hút, màu mực nào bị nghẹt thì bơm vào vòi hút của màu đó, kê đầu ống chích không gắn kim vào ngay vòi hút và bơm từ từ,<br />
 đừng đè quá mạnh, có thể làm gãy vòi hút, nhưng nếu để không sát thì nước lau kính chảy ra ngoài, không vào vòi hút</li>
-<li>sau khi bơm vào thì gắn cartridge lại, để yên khoảng 1 giờ cho nước lau kính hoà tan những chỗ mực khô</li>
+<li>sau khi bơm vào thì gắn cartridge lại, để yên khoảng một giờ cho nước lau kính hoà tan những chỗ mực khô</li>
 <li>sau đó kéo đầu in qua một bên để lấy giấy vệ sinh ở dưới ra và lau sạch mực lẫn nước lau kính ở phía dưới</li>
 </ol>
 Nếu làm một lần mà vẫn chưa hết nghẹt thì làm lại lần nữa. Nếu làm hai lần mà vẫn còn nghẹt thì kể như bỏ máy này.
 
 
-<p>Nên nhớ in đều đặn để tránh bị khô đầu phun mực. Mỗi lần dùng đến chức năng lau đầu phun của máy in rất hao mực, chỉ cần lau chừng 10 lần là cạn 1 cartridge mực.</p>
+<p>Nên nhớ in đều đặn để tránh bị khô đầu phun mực. Mỗi lần dùng đến chức năng lau đầu phun của máy in rất hao mực, chỉ cần lau chừng mười lần là cạn một cartridge mực.</p>
 <p>Mới đây máy in của tôi không chịu in nữa mà báo một câu rất nghiêm trọng là "Parts inside your printer are at the end of their service life. See your printer documentation." Lần đầu tiên thấy câu đó tôi tìm trong soft document của máy in chẳng thấy ghi gì cả, hard document thì không có kèm theo máy in. Tìm trong Google thì thấy đã có nhiều người bị như vậy. Nguyên nhân là Epson đếm số lần lau đầu phun gọi là Protection Counter, đến một con số nào đó thì nó coi như miếng mút hút mực thải ra đã đầy, cần phải thay. Mà tiền công thay mấy miếng mút đó gần bằng tiền mua máy mới. <br />
-Trong Internet có người chỉ là phải dùng software đặc biệt để xoá Protection Counter. Download software đó về thử thì nó không biết máy Stylus CX1500! Tìm tiếp thì thấy có một người làm cho Epson Mỹ đã thông cảm với nỗi khó khăn của đồng loại mà gửi software bí mật của Epson ra cho bên ngoài dùng. Dùng thử software của Epson, nó báo máy của tôi đã đếm đến 4020 sau 2 năm dùng. <br />
+Trong Internet có người chỉ là phải dùng software đặc biệt để xoá Protection Counter. Download software đó về thử thì nó không biết máy Stylus CX1500! Tìm tiếp thì thấy có một người làm cho Epson Mỹ đã thông cảm với nỗi khó khăn của đồng loại mà gửi software bí mật của Epson ra cho bên ngoài dùng. Dùng thử software của Epson, nó báo máy của tôi đã đếm đến 4020 sau hai năm dùng. <br />
 Sau khi xoá Protection Counter về số không, còn phải mở máy in ra, tháo miếng mút đó ra khỏi máy để rửa sạch, phơi khô.</p>
-<p>Tôi đã cố tháo cái máy in-scan Epson Stylus CX1500. Vì không có hướng dẫn nên tháo ra rất khó khăn, không thể tháo rời hết được, chỉ có thể lấy được miếng mút hút mực thải ra rồi ráp lại (bị gãy mất vài móc nhựa). Trong Internet có vài chỗ bán tài liệu Service Manual cho máy in này với giá khoảng 10USD, trong đó có chỉ cách tháo máy.</p>
+<p>Tôi đã cố tháo cái máy in-scan Epson Stylus CX1500. Vì không có hướng dẫn nên tháo ra rất khó khăn, không thể tháo rời hết được, chỉ có thể lấy được miếng mút hút mực thải ra rồi ráp lại (bị gãy mất vài móc nhựa). Trong Internet có vài chỗ bán tài liệu Service Manual cho máy in này với giá khoảng mười USD, trong đó có chỉ cách tháo máy.</p>
 <p>Vậy là ngoài việc hao mực khi lau đầu phun, còn một rắc rối khác nữa. Tốt hơn là hãy in mỗi tuần hoặc mỗi ngày một vài trang, mực bơm quá rẻ mà!</p>
 
 
 <h2>Mực liên tục</h2>
-<p>Hệ thống mực liên tục gồm có những cartridge giả gắn trong máy và những ống dẫn mực từ những bình mực bên cạnh máy vào những cartridge giả. Những ống dẫn bằng nhựa mềm trong mờ, đường kính chừng 2mm. Khi đầu phun mang cartridge chạy trong máy, ống dẫn sẽ di chuyển theo. Lúc ống còn mới thì nó còn đàn hồi, không bị rũ xuống và vướng vào bên dưới đầu phun. Theo thời gian, ống giảm độ đàn hồi và sẽ thường bị vướng dưới đầu phun. Do đầu phun chạy rất nhanh nên tiếng ồn khi bị vướng nghe rất đáng sợ. Tôi có một máy Epson T11 bị như vậy.</p>
+<p>Hệ thống mực liên tục gồm có những cartridge giả gắn trong máy và những ống dẫn mực từ những bình mực bên cạnh máy vào những cartridge giả. Những ống dẫn bằng nhựa mềm trong mờ, đường kính chừng hai mm. Khi đầu phun mang cartridge chạy trong máy, ống dẫn sẽ di chuyển theo. Lúc ống còn mới thì nó còn đàn hồi, không bị rũ xuống và vướng vào bên dưới đầu phun. Theo thời gian, ống giảm độ đàn hồi và sẽ thường bị vướng dưới đầu phun. Do đầu phun chạy rất nhanh nên tiếng ồn khi bị vướng nghe rất đáng sợ. Tôi có một máy Epson T11 bị như vậy.</p>
 <p>Một lần vào tiệm bán máy tính có trưng bày máy in phun dùng mực liên tục của chính Epson, tôi mở nắp máy lên xem Epson dẫn mực vào như thế nào. Các ống dẫn mực trong máy này không khác gì ở hệ thống mực liên tục thường gặp. Tuy nhiên, Epson có cách chống vướng ống mực dưới đầu phun bằng cách cho một dải nhựa kẹp theo các ống mực, dải nhựa này sẽ giúp tăng độ đàn hồi.
 <br>Áp dụng cách đó vào máy in T11 ở nhà, tôi cắt lấy một dải từ miếng bìa hồ sơ bằng nhựa và dán kèm vào các ống dẫn mực. Thế là hết vướng!</p>
   <div class="todiscuss">
@@ -284,9 +284,10 @@ Sau khi xoá Protection Counter về số không, còn phải mở máy in ra, t
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -315,6 +316,7 @@ Sau khi xoá Protection Counter về số không, còn phải mở máy in ra, t
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
