--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -271,7 +271,7 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
     <li>quay trở lại màn hình App Info, chọn Force Stop,</li>
     <li>quay trở lại màn hình Home, chạy Truecaller. Nếu Truecaller hỏi bạn có muốn restore data từ đám mây thì hãy chọn Skip. Truecaller sẽ đọc thông tin các cuộc gọi đang lưu trong máy và tìm tên của từng số từ đám mây để tạo lại một Identified Contacts list và Block list mới, nhỏ hơn trước khi bị xoá.
   </ol>
-  <p>Tôi vừa xoá data của Truecaller trong máy theo cách trên. Trước khi xoá, Truecaller có hơn 20MB data. Sau khi xoá, Truecaller tạo lại khoảng 5MB data, Block list chứa 250 số, mọi việc tìm và sửa được làm nhanh như chớp.
+  <p>Tôi vừa xoá data của Truecaller trong máy theo cách trên. Trước khi xoá, Truecaller có hơn 20 MB data. Sau khi xoá, Truecaller tạo lại khoảng 5 MB data, Block list chứa 250 số, mọi việc tìm và sửa được làm nhanh như chớp.
   <br>P.S. Tôi đã chuyển sang dùng <a href="https://www.show-caller.com/" target='_blank'>Showcaller</a> vì nó gọn nhẹ hơn Truecaller.</p>
   </div>
 </section>
@@ -296,9 +296,10 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -327,6 +328,7 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
