--- a/kinh-nghiem/may-tinh/tien-ich-di-dong.html
+++ b/kinh-nghiem/may-tinh/tien-ich-di-dong.html
@@ -234,39 +234,39 @@ data-ad-slot="5275186684">
 <li>Vinaphone Call Me Back: bấm USSD <b>*110*Sđt#</b></li></ul>
 </li>
 <li>Chuyển tiền tài khoản chính
-<ul><li>Mobifone <b>M2U</b>, mỗi lần chuyển tối đa 30.000₫, mỗi ngày chuyển tối đa 500.000₫ (phí 15%, tối thiểu 1.000₫), USSD <b>*119*Sđt_nhận*Số_tiền*Mật_khẩu#</b>
+<ul><li>Mobifone <b>M2U</b>, mỗi lần chuyển tối đa 30.000 ₫, mỗi ngày chuyển tối đa 500.000 ₫ (phí 15%, tối thiểu 1.000 ₫), USSD <b>*119*Sđt_nhận*Số_tiền*Mật_khẩu#</b>
 </li>
-<li>Viettel <b>i-Share</b>, mỗi lần chuyển tối đa 30.000₫, mỗi ngày chuyển tối đa 30.000₫ (phí mỗi lần chuyển 2.000₫), USSD <b>*136*Mật_khẩu*Sđt_nhận*Số_tiền#
+<li>Viettel <b>i-Share</b>, mỗi lần chuyển tối đa 30.000 ₫, mỗi ngày chuyển tối đa 30.000 ₫ (phí mỗi lần chuyển 2.000 ₫), USSD <b>*136*Mật_khẩu*Sđt_nhận*Số_tiền#
 </b></li>
-<li>Vinaphone <b>2Friends</b>, mỗi lần chuyển tối đa 50.000₫, mỗi ngày chuyển tối đa 300.000₫ (phí mỗi lần chuyển 2.000₫), USSD <b>*999*Mật_khẩu*Sđt_nhận*Số_tiền#</b> hoặc<br />
+<li>Vinaphone <b>2Friends</b>, mỗi lần chuyển tối đa 50.000 ₫, mỗi ngày chuyển tối đa 300.000 ₫ (phí mỗi lần chuyển 2.000 ₫), USSD <b>*999*Mật_khẩu*Sđt_nhận*Số_tiền#</b> hoặc<br />
 nhắn tin "<b>CT Mật_khẩu Sđt_nhận Số_tiền</b>" tới 999</li></ul>
 </li>
-<li>Ứng tiền khi tài khoản trả trước hết tiền, được ứng 3.000₫ (phí 300₫)
+<li>Ứng tiền khi tài khoản trả trước hết tiền, được ứng 3.000 ₫ (phí 300 ₫)
 <ul><li>Mobifone: nhắn UT tới 900
 </li>
 <li>Vinaphone và Viettel: USSD <b>*911#</b></li></ul>
 </li>
-<li>Ứng tiền tự động: tự động được ứng 5.000₫-50.000₫
+<li>Ứng tiền tự động: tự động được ứng 5.000-50.000 ₫
 <ul><li>Mobifone gọi là <b>Fast Credit</b>,
 </li>
 <li>Viettel gọi là Ứng tiền tự động</li></ul>
 </li>
 <li>Thêm ngày gọi, khi sắp đến hạn khoá chiều gọi đi mà tài khoản còn nhiều tiền thì dùng tiền trong tài khoản mua thêm số ngày gọi
-<ul><li>Mobifone <b>M2D</b>, 500₫/ngày cộng với phí 1.000₫ mỗi lần giao dịch
+<ul><li>Mobifone <b>M2D</b>, 500 ₫/ngày cộng với phí 1.000 ₫ mỗi lần giao dịch
 </li>
-<li>Vinaphone 3.000₫ được thêm 10 ngày, nhắn tin Y hoặc DK tới 1575</li>
-<li>Viettel 1000₫/ngày, nhắn tin N &lt;số ngày&gt; đến 5225</li></ul>
+<li>Vinaphone 3.000 ₫ được thêm 10 ngày, nhắn tin Y hoặc DK tới 1575</li>
+<li>Viettel 1.000 ₫/ngày, nhắn tin N &lt;số ngày&gt; đến 5225</li></ul>
 </li>
 
 
 <li>Gửi một tin nhắn lên màn hình máy kia khi gọi đi hoặc được gọi, rất tiện để xưng danh khi gọi đến một người chưa biết số của mình. Chỉ dùng được khi gọi nội mạng.
-<ul><li>Mobifone gọi là <b><a href="https://m.mstatus.vn/" target="_blank">mStatus</a></b> (3000₫/tuần, 9000₫/tháng)</li>
-<li>Viettel gọi là <b><a href="https://viettel.vn/di-dong/chi-tiet-dich-vu/QXJ0aWNs15a80f62019d6a" target="_blank">iSign</a></b> (6000₫/tháng)</li>
-<li>Vinaphone gọi là <b><a href="https://vsign.vinaphone.com.vn/" target="_blank">vSign</a></b> (3000₫/tuần)</li></ul>
+<ul><li>Mobifone gọi là <b><a href="https://m.mstatus.vn/" target="_blank">mStatus</a></b> (3.000 ₫/tuần, 9.000 ₫/tháng)</li>
+<li>Viettel gọi là <b><a href="https://viettel.vn/di-dong/chi-tiet-dich-vu/QXJ0aWNs15a80f62019d6a" target="_blank">iSign</a></b> (6.000 ₫/tháng)</li>
+<li>Vinaphone gọi là <b><a href="https://vsign.vinaphone.com.vn/" target="_blank">vSign</a></b> (3.000 ₫/tuần)</li></ul>
 </li>
 <li>Gọi điện thoại hội nghị nhiều bên (conference call)<br />
 Viettel, Mobifone và Vinaphone cung cấp dịch vụ <a href="conferencecall">conference call</a>. Máy điện thoại phải có khả năng giữ cuộc gọi và conference call. Từ một máy có thể gọi đến 5 máy khác, và những máy được gọi có thể gọi thêm 4 máy khác nữa, lên tới hơn 50 máy tham gia vào một cuộc nói chuyện. Tính cước từng cuộc gọi đi. Nếu chỉ gọi các máy nội mạng thì có thể dùng <a href="goi-cuoc-di-dong-noi-mang">các gói nội mạng giá rẻ</a> để gọi.</li>
-<li>Hộp thư thoại, rất tiện để tránh trả lời những cuộc gọi tiếp thị: <a href="https://mobifone.vn/wps/portal/public/dich-vu/tien-ich/tien-ich-list/loi-nhan-thoai" target="_blank">Mobifone</a>, <a href="https://www.vnpt.vn/Products/ProductDetail/tabid/115/catid/0/pid/522/Default.aspx" target="_blank">Vinaphone</a>, <a href="https://vietteltelecom.vn/di-dong/chi-tiet-dich-vu/QXJ0aWNs157f38085c1c9f" target="_blank">Viettel</a> (5000₫/tháng, miễn cước khi gọi 193 để nghe tin nhắn và nhắn vào hộp thư thoại Viettel khác)
+<li>Hộp thư thoại, rất tiện để tránh trả lời những cuộc gọi tiếp thị: <a href="https://mobifone.vn/wps/portal/public/dich-vu/tien-ich/tien-ich-list/loi-nhan-thoai" target="_blank">Mobifone</a>, <a href="https://www.vnpt.vn/Products/ProductDetail/tabid/115/catid/0/pid/522/Default.aspx" target="_blank">Vinaphone</a>, <a href="https://vietteltelecom.vn/di-dong/chi-tiet-dich-vu/QXJ0aWNs157f38085c1c9f" target="_blank">Viettel</a> (5.000 ₫/tháng, miễn cước khi gọi 193 để nghe tin nhắn và nhắn vào hộp thư thoại Viettel khác)
 </li>
 <li>
 Đổi số điện thoại không cần đổi SIM: <a href="https://doiso.mobifone.vn/" target='_blank'>Mobifone</a>, <a href="https://vinaphone.com.vn/services/doiso#gioithieu-tab" target="_blank">Vinaphone</a>, <a href="https://shop.viettel.vn/dich-vu-doi-so-giu-sim/danh-sach-doi-so" target="_blank">Viettel</a></li>
@@ -276,26 +276,26 @@ Viettel, Mobifone và Vinaphone cung cấp dịch vụ <a href="conferencecall">
 <ul>
 <li>Viettel <b>ANYBOOK</b>, có 2 dạng:</li>
 <ul>
-<li>MEMBER 9.000₫/tháng đọc miễn phí vô số sách bằng smartphone app hoặc trên web browser</li>
+<li>MEMBER 9.000 ₫/tháng đọc miễn phí vô số sách bằng smartphone app hoặc trên web browser</li>
 <li>DEFAULT không tốn tiền hàng tháng nhưng phải trả tiền từng cuốn sách</li>
 </ul>
 <li>Mobifone <a href="https://mbookstore.vn/" target='_blank'>https://mbookstore.vn</a> <a href="https://bibibook.vn/" target='_blank'>https://bibibook.vn</a></li></ul>
 </li>
 <li>Học:
-<ul><li>Mobifone 5.000₫/tuần <a href="https://menglish.vn/" target='_blank'>https://menglish.vn</a></li>
+<ul><li>Mobifone 5.000 ₫/tuần <a href="https://menglish.vn/" target='_blank'>https://menglish.vn</a></li>
 <li>Vinaphone <a href="https://lophocvui.vinaphone.com.vn/" target='_blank'>https://lophocvui.vinaphone.com.vn</a></li>
 <li>Viettel <a href="https://viettelstudy.vn/" target='_blank'>https://viettelstudy.vn</a> học tiếng Anh, học chương trình phổ thông</li>
 </ul>
 </li>
 
 
-<li>Nghe Radio và chat (nói chuyện với một người dùng  <a href="https://mobiradio.vn/" target='_blank'>Mobifone</a> hoặc <a href="https://vnptmedia.vn/san-pham-dich-vu/linh-vuc-gia-tri-gia-tang/201812/dich-vu-radiovn-622585/" target='_blank'>Vinaphone</a> khác với giá rẻ đến 40₫/phút), gọi 9899<br />
-Dùng dịch vụ này rất tiết kiệm cước gọi nội mạng Mobifone hoặc Vinaphone, chỉ còn 100₫-67₫-40₫/phút. Cách gọi hơi mất công một chút, ví dụ để gọi số 0901234567 thì phải bấm 98996w1w0901234567#
+<li>Nghe Radio và chat (nói chuyện với một người dùng  <a href="https://mobiradio.vn/" target='_blank'>Mobifone</a> hoặc <a href="https://vnptmedia.vn/san-pham-dich-vu/linh-vuc-gia-tri-gia-tang/201812/dich-vu-radiovn-622585/" target='_blank'>Vinaphone</a> khác với giá rẻ đến 40 ₫/phút), gọi 9899<br />
+Dùng dịch vụ này rất tiết kiệm cước gọi nội mạng Mobifone hoặc Vinaphone, chỉ còn 100|67|40 ₫/phút. Cách gọi hơi mất công một chút, ví dụ để gọi số 0901234567 thì phải bấm 98996w1w0901234567#
 trong đó w là ký hiệu ngừng, máy sẽ gửi đi số 98996 rồi ngừng chờ, khi người gọi nghe tổng đài Mobifone trả lời sẽ bấm một nút để máy gửi tiếp số 1 rồi ngừng chờ nữa, khi người gọi nghe tổng đài Mobifone bảo bấm số nội mạng thì bấm một nút để máy gửi tiếp số 0901234567#, tổng đài sẽ nối với máy đó để hai bên nói chuyện.
 Có thể ghi luôn dãy số có ký hiệu ngừng trong phone book. Ký hiệu ngừng trong máy Nokia Symbian 4 là 'w', trong máy Android là ';', không biết các máy khác là gì.
 </li>
 <li>Gửi tin nhắn miễn phí đến các số Viettel bằng <a href="https://mocha.com.vn/km.html" target="_blank">Mocha</a> với smartphone, có thể gửi 30 giây giọng nói.</li>
-<li>Nói chuyện và nhắn tin miễn phí qua <a href="https://viettalk.vn/index.html" target="_blank">Viettalk</a> bằng smartphone, gọi điện thoại nhắn tin giá rẻ đến các máy điện thoại không Viettalk. Tất cả các thuê bao điện thoại di động ở Việt Nam đều có thể dùng Viettalk. Đặc biệt là mỗi người đăng ký Viettalk đều được cấp một số di động thuộc mạng Vinaphone mà không cần SIM. Từ bất kỳ máy điện thoại nào ở Việt Nam gọi/nhắn tin đến số Viettalk đó đều tính mức cước trong nước dù cho người dùng Viettalk đó đang ở nước ngoài (nếu gọi từ máy Viettalk thì miễn phí). Từ Viettalk có thể gọi đến bất kỳ số điện thoại nào ở Việt Nam với mức cước 200|720|800₫/phút, dù cho gọi từ nước ngoài (nếu gọi đến một số Viettalk khác thì miễn phí).
+<li>Nói chuyện và nhắn tin miễn phí qua <a href="https://viettalk.vn/index.html" target="_blank">Viettalk</a> bằng smartphone, gọi điện thoại nhắn tin giá rẻ đến các máy điện thoại không Viettalk. Tất cả các thuê bao điện thoại di động ở Việt Nam đều có thể dùng Viettalk. Đặc biệt là mỗi người đăng ký Viettalk đều được cấp một số di động thuộc mạng Vinaphone mà không cần SIM. Từ bất kỳ máy điện thoại nào ở Việt Nam gọi/nhắn tin đến số Viettalk đó đều tính mức cước trong nước dù cho người dùng Viettalk đó đang ở nước ngoài (nếu gọi từ máy Viettalk thì miễn phí). Từ Viettalk có thể gọi đến bất kỳ số điện thoại nào ở Việt Nam với mức cước 200|720|800 ₫/phút, dù cho gọi từ nước ngoài (nếu gọi đến một số Viettalk khác thì miễn phí).
 </li>
 <li>Gửi và nhận tin qua USSD, tin không lưu trong máy như SMS nên rất bí mật. Mobifone <a href="https://safetext.vn/" target='_blank'>https://safetext.vn</a></li>
 <li>Các <a href="goi-cuoc-di-dong-noi-mang">gói cước nội mạng</a> hàng ngày, hàng tháng. Cả ba công ty điện thoại di động lớn đều có các gói cước gọi hay nhắn tin nội mạng giá rẻ bằng 1/10 cước bình thường, chỉ dùng trong một ngày hay một tháng. Dùng các gói này để <a href="../../huu-ich/chi-tieu">tiết kiệm</a> tiền điện thoại.</li>
@@ -327,9 +327,10 @@ Có thể ghi luôn dãy số có ký hiệu ngừng trong phone book. Ký hiệ
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -358,6 +359,7 @@ Có thể ghi luôn dãy số có ký hiệu ngừng trong phone book. Ký hiệ
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
