--- a/huu-ich/cach-dau-tu.html
+++ b/huu-ich/cach-dau-tu.html
@@ -225,7 +225,7 @@ data-ad-slot="5275186684">
   </div>
 
   <h1>Phân-biệt những cách đầu-tư</h1>
-  <div class="right">Viết lần đầu trong Tháng Sáu, 2013</div>
+  <div class="right">Viết lần đầu trong Tháng Sáu, 2013.</div>
   <p>Đầu tư là một cách gia tăng tài sản. Mọi người đều phải biết đầu tư. Người giàu có dư tiền thì đầu tư để duy trì sự giàu có. Người chưa giàu cần phải tiết kiệm để có tiền đầu tư sao cho có đủ tiền dùng cho những <a href="cau-chuyen/nhung-hon-da">kế hoạch tương lai</a>. Tuy nhiên chữ đầu tư được dùng trong rất nhiều cách, có những cách dùng sai gây hiểu lầm, làm cho nhiều người sợ đầu tư. Hãy cùng tìm hiểu các cách đó: <a href="#dau_tu">đầu tư</a>, <a href="#dau_co">đầu cơ</a>, <a href="#lua_dao">lừa đảo</a>.</p>
 
   <h2 id="dau_tu">Đầu tư</h2>
@@ -254,7 +254,7 @@ data-ad-slot="5275186684">
 
   <p>Phần lớn những người tôi đã tiếp xúc đều chỉ nghĩ đến một loại đầu tư là đầu tư trực tiếp và luôn luôn lo ngại đưa tiền cho một tổ chức khác sinh lợi (trừ ngân hàng). Đó là một quan niệm khá cũ, không còn thích hợp với xã hội hiện đại. Thật ra mọi người đều có thể bắt đầu đầu tư gián tiếp một cách dễ dàng như được giải thích trong bài <a href="dung-so-dau-tu">Đừng sợ chữ đầu tư</a>.
   <br>Trước khi đưa tiền cho tổ chức nào đó thì nên tìm hiểu về mức độ ổn định tài chính của tổ chức đó. Để biết được mức độ ổn định tài chính của một tổ chức (ngân hàng hay công ty quản lý quỹ) thì phải tìm xem tổ chức đó được đánh giá như thế nào bởi các cơ quan độc lập như là Fitch, Moody's, Standard and Poor. Điều quan trọng nhất không phải là lời cam kết của tổ chức tài chính mà là tổ chức tài chính đó có thực hiện được lời cam kết đó hay không.
-  <br>Trong bốn cách đầu tư trên thì cần phải có một số vốn đáng kể để làm theo cách thứ nhất và cách thứ ba, để làm theo cách thứ hai và cách thứ tư thì chỉ cần <a href="cau-chuyen/uoc-mo-thanh-ti-phu">tiết kiệm mỗi ngày từ 33.000₫ trở lên</a>. Các bạn thử dùng Google để tìm những <a rel="nofollow" href="https://www.google.com/search?hl=en&site=imghp&tbm=isch&source=hp&biw=1920&bih=946&q=investment&oq=investment&gs_l=img.3..0l10.1649.3878.0.4785.10.6.0.4.4.0.100.396.5j1.6.0....0...1ac.1.64.img..0.10.413.pkAFd_i0gA0" target='_blank'>hình về đầu tư</a> sẽ thấy phần lớn các hình đều chỉ có tiền lẻ.</p>
+  <br>Trong bốn cách đầu tư trên thì cần phải có một số vốn đáng kể để làm theo cách thứ nhất và cách thứ ba, để làm theo cách thứ hai và cách thứ tư thì chỉ cần <a href="cau-chuyen/uoc-mo-thanh-ti-phu">tiết kiệm mỗi ngày từ 33.000 đồng trở lên</a>. Các bạn thử dùng Google để tìm những <a rel="nofollow" href="https://www.google.com/search?hl=en&site=imghp&tbm=isch&source=hp&biw=1920&bih=946&q=investment&oq=investment&gs_l=img.3..0l10.1649.3878.0.4785.10.6.0.4.4.0.100.396.5j1.6.0....0...1ac.1.64.img..0.10.413.pkAFd_i0gA0" target='_blank'>hình về đầu tư</a> sẽ thấy phần lớn các hình đều chỉ có tiền lẻ.</p>
 
 
 
@@ -315,9 +315,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -346,6 +347,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
