--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -233,7 +233,7 @@ data-ad-slot="5275186684">
   </ol>
   <p>(Mua cổ phiếu rồi bán lại sau một thời gian ngắn để kiếm lời không phải là đầu tư cổ phiếu mà là đầu cơ, <a href="../cach-dau-tu">đầu tư khác với đầu cơ</a>)
   <br>Khi mua cổ phiếu, ai cũng muốn mua lúc giá thấp nhất. Nhưng làm sao biết được lúc nào giá thấp nhất, chẳng may mua xong rồi mà giá lại giảm tiếp thì sao?
-  <br>Có một phương pháp để giảm nguy cơ thua lỗ trong đầu tư cổ phiếu, gọi là phương pháp <i>bình quân giá cổ phiếu</i> (Dollar Cost Averaging, DCA). DCA nghĩa là dùng một lượng tiền bằng nhau mua cổ phiếu vào những thời điểm cách nhau đều đặn. Trường hợp 1 ở trên là <i>DCA một cách bắt buộc</i> vì mỗi tháng chỉ có một số ít tiền.
+  <br>Có một phương pháp để giảm nguy cơ thua lỗ trong đầu tư cổ phiếu, gọi là phương pháp <i>bình quân giá cổ phiếu</i> (Dollar Cost Averaging, DCA). DCA nghĩa là dùng một lượng tiền bằng nhau mua cổ phiếu vào những thời điểm cách nhau đều đặn. Trường hợp một ở trên là <i>DCA một cách bắt buộc</i> vì mỗi tháng chỉ có một số ít tiền.
   <br>Trong bài <a href="http://www.efficientfrontier.com/ef/997/dca.htm" target='_blank'>DCA</a>, tác giả Bill Jones đã so sánh hiệu quả của cách đầu tư DCA với cách đưa hết tiền vào cổ phiếu một lượt (lump-sum). Dưới đây là bản dịch của bài đó.
   <br>Phương pháp bình quân giá cổ phiếu chỉ là một phần trong quyết định đầu tư cổ phiếu, một phần quan trọng và khó khăn khác là chọn <b>cổ phiếu tốt</b>. Để tránh rủi ro khi chọn sai cổ phiếu thì những người không chuyên sẽ thuê những chuyên viên tài chính bằng cách đầu tư qua các <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 
@@ -242,12 +242,12 @@ data-ad-slot="5275186684">
   <div class="title">Đừng DCA quá 12 tháng</div>
   <div class="center">Bill Jones</div>
   <p>Tôi là người rất tin tưởng vào ưu điểm của DCA. Tôi thường khuyên những người muốn chuyển tài sản từ tiền sang quỹ đầu tư hãy dùng DCA (trừ khi họ tự tin rằng mình nắm rõ được thị trường). Đặc biệt, nếu bạn vừa nhận được một khoản thừa kế làm tăng tài sản của bạn thêm 50%, bạn nên dùng DCA thay vì đưa hết tất cả vào quỹ đầu tư một lần. Nếu bạn có một số tiền lớn và bạn thật sự muốn đưa vào thị trường cổ phiếu nhưng bạn cảm thấy e ngại vì giá đang quá cao thì bạn nên dùng DCA trong 12 tháng thay vì chờ giá xuống.
-  <br>Tuy nhiên tôi thấy rằng dùng DCA dài hơn 12 tháng lại là một chiến lược dở. DCA trong một giai đoạn ngắn như là 6 tháng có thể tốt; việc lựa chọn độ dài tuỳ theo mức độ chấp nhận rủi ro và mong muốn lợi nhuận của từng người (6 tháng thì có hơi rủi ro hơn và cũng có thể mang lại lợi nhuận cao hơn về sau).
+  <br>Tuy nhiên tôi thấy rằng dùng DCA dài hơn 12 tháng lại là một chiến lược dở. DCA trong một giai đoạn ngắn như là sáu tháng có thể tốt; việc lựa chọn độ dài tuỳ theo mức độ chấp nhận rủi ro và mong muốn lợi nhuận của từng người (sáu tháng thì có hơi rủi ro hơn và cũng có thể mang lại lợi nhuận cao hơn về sau).
   <br>Tôi so sánh hai chiến lược: LUMP-SUM, bạn đưa ngay một số tiền lớn vào quỹ đầu tư cổ phiếu và DCA-N, bạn đưa 1/N của số tiền vào đầu mỗi tháng vào thị trường cổ phiếu trong N tháng. Tôi dùng số liệu thực trong lịch sử để kiểm chứng kết luận và tôi trình bày bản phân tích đầy đủ về DCA-6, DCA-12, DCA-18, DCA-24 và DCA-36 trong phần phụ lục.</p>
   <h2>Lý luận</h2>
   <p>DCA không dành cho những người tự tin là biết chọn thời điểm đầu tư. Người biết chọn thời điểm sẽ đưa ngay một số tiền lớn vào thị trường cổ phiếu vào lúc mà họ đánh giá rằng thị trường sắp đi lên. Và họ rút tiền ra khi họ đánh giá thị trường có vẻ sắp đi xuống. DCA dành cho những người sợ rằng thị trường sẽ sụt xuống bất kỳ lúc nào, nhưng không cảm thấy chắc chắn về sự đánh giá của mình.
-  <br>Tôi cảm thấy mục đích của DCA là để tránh thiệt hại vì sự sụt giảm mạnh xảy ra sau khi đưa một đống tiền vào. DCA 6 tháng sẽ tốt nếu thị trường đi xuống trong 2-3 tháng đầu, bởi vì một nửa số tiền sẽ được dùng đầu tư khi giá thấp. Nhưng DCA-6 sẽ không hiệu quả khi giá xuống vào khoảng tháng thứ 5-6. DCA-12 cho kết quả tốt khi giá xuống vào khoảng tháng thứ 7-8. Cảm giác của tôi là, ngoại trừ điều trên, thì không có vấn đề gì lớn với DCA vì giả sử giá không xuống trong 8 tháng thì thị trường tăng giá đủ để cho kết quả cuối cùng là lời.
-  <br>Thêm một điểm nữa là, nếu bạn dùng DCA-24 vào một thời điểm nào đó và thành công, nghĩa là thị trường xuống đáng kể trong 6 tháng đầu, thì khoản lỗ khó được bù lại trong 6 tháng kế. Nhưng như vậy thì một nửa sau của số tiền được đưa vào khi thị trường đã lên cao. Nghĩa là cuộc giải phẫu thành công nhưng bệnh nhân lại chết. Sự thận trọng của bạn là đúng nhưng bạn vẫn lỗ. Như vậy, một cách hợp lý thì DCA không nên dài đến 2-3 năm, thậm chí không nên đến 18 tháng. Thời gian DCA 6-12 tháng có vẻ tốt nhất.</p>
+  <br>Tôi cảm thấy mục đích của DCA là để tránh thiệt hại vì sự sụt giảm mạnh xảy ra sau khi đưa một đống tiền vào. DCA sáu tháng sẽ tốt nếu thị trường đi xuống trong 2-3 tháng đầu, bởi vì một nửa số tiền sẽ được dùng đầu tư khi giá thấp. Nhưng DCA-6 sẽ không hiệu quả khi giá xuống vào khoảng tháng thứ 5-6. DCA-12 cho kết quả tốt khi giá xuống vào khoảng tháng thứ 7-8. Cảm giác của tôi là, ngoại trừ điều trên, thì không có vấn đề gì lớn với DCA vì giả sử giá không xuống trong tám tháng thì thị trường tăng giá đủ để cho kết quả cuối cùng là lời.
+  <br>Thêm một điểm nữa là, nếu bạn dùng DCA-24 vào một thời điểm nào đó và thành công, nghĩa là thị trường xuống đáng kể trong sáu tháng đầu, thì khoản lỗ khó được bù lại trong sáu tháng kế. Nhưng như vậy thì một nửa sau của số tiền được đưa vào khi thị trường đã lên cao. Nghĩa là cuộc giải phẫu thành công nhưng bệnh nhân lại chết. Sự thận trọng của bạn là đúng nhưng bạn vẫn lỗ. Như vậy, một cách hợp lý thì DCA không nên dài đến 2-3 năm, thậm chí không nên đến 18 tháng. Thời gian DCA 6-12 tháng có vẻ tốt nhất.</p>
   <h2>Lịch sử ủng hộ DCA-6 hơn DCA-36</h2>
   <p>Tất cả những điều trên chỉ là lý thuyết, ý kiến chủ quan dựa trên khái niệm mơ hồ về thị trường cổ phiếu. Cần dùng số liệu lịch sử để thấy các khoảng thời gian khác nhau sẽ cho kết quả như thế nào. Để làm như vậy, tôi định nghĩa một quy trình đầu tư rõ ràng. Ví dụ tôi thực hiện DCA-12 như sau: đưa 1/12 số tiền vào thị trường cổ phiếu trong ngày đầu tiên của tháng đầu tiên, phần còn lại để trong thị trường tiền tệ. Một tháng sau, đưa 1/11 số tiền trong thị trường tiền tệ vào thị trường cổ phiếu, cứ như vậy suốt 12 tháng.
   <br>Một cách tương tự: Chia số tiền ban đầu thành N phần bằng nhau. Đưa phần đầu tiên vào thị trường cổ phiếu. Để phần thứ hai trong thị trường tiền tệ một tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu. Để phần thứ ba trong thị trường tiền tệ hai tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu… Như vậy lượng tiền được đưa vào thị trường cổ phiếu tăng đều về số tiền, nhưng chúng bằng nhau khi quy về thời điểm ban đầu (time-value-adjusted).
@@ -255,31 +255,31 @@ data-ad-slot="5275186684">
 
 
   <p>Với DCA-36, tôi đã xem lại 493 chu kỳ 36 tháng trong 44 năm (1953-1996). Tôi đã tính được rằng dùng DCA-36 sẽ tốn 7,4% số tiền so với cách đưa ngay một cục tiền.
-  <br>Nhưng sự tốn kém không phải là yếu tố cần xem xét duy nhất. Chúng ta phải xem xét nguy cơ lỗ. Chú ý: Lợi nhuận TTCK tính ở đây dựa trên lợi nhuận của cac công ty S&amp;P500 với cổ tức được đầu tư trở lại. Lợi nhuận thị trường tiền tệ được tính theo lãi suất kỳ hạn 3 tháng. TTCK tăng khoảng hơn 5% mỗi năm trong 44 năm đó; cách đầu tư DCA-36 làm cho tiền nằm ngoài thị trường chứng khoán trung bình khoảng 17,5 tháng, tức là khoảng 1,5 năm, như vậy cách đầu tư theo kiểu đưa ngay một cục tiền sẽ lợi hơn DCA-36 khoảng 1,5 lần 5%.
+  <br>Nhưng sự tốn kém không phải là yếu tố cần xem xét duy nhất. Chúng ta phải xem xét nguy cơ lỗ. Chú ý: Lợi nhuận TTCK tính ở đây dựa trên lợi nhuận của cac công ty S&amp;P500 với cổ tức được đầu tư trở lại. Lợi nhuận thị trường tiền tệ được tính theo lãi suất kỳ hạn ba tháng. TTCK tăng khoảng hơn 5% mỗi năm trong 44 năm đó; cách đầu tư DCA-36 làm cho tiền nằm ngoài thị trường chứng khoán trung bình khoảng 17,5 tháng, tức là khoảng 1,5 năm, như vậy cách đầu tư theo kiểu đưa ngay một cục tiền sẽ lợi hơn DCA-36 khoảng 1,5 lần 5%.
   <br>Thật không may, không có một con số thật sự tốt để đo độ rủi ro. Tất cả chúng ta đều biết rằng dùng độ lệch chuẩn để đo độ rủi ro khi đầu tư cổ phiếu thì không thật thoả mãn. Vậy cách sau đây cung cấp số liệu thống kê để bạn tự rút ra kết luận về rủi ro và lợi nhuận và chi phí khi dùng DCA.
   <br>Chỉ có 30 trong số 493 chu kỳ DCA-36 mà cách đầu tư ngay một cục dẫn đến lỗ. Chúng ta muốn có cách đầu tư tốt hơn trong 30 trường hợp đó. DCA phải cho được kết quả tốt hơn thì mới đáng dùng. Tôi đặt ra một tiêu chuẩn cho hiệu quả của DCA là phải đem lại kết quả cao hơn 5% so với cách đầu tư ngay một cục.
   <br>Trong 30 trường hợp trên, chỉ có 16 lần DCA cho kết quả tốt hơn 5%. Đi vào chi tiết thì trong 30 trường hợp trên:</p>
   <ul>
     <li>7 trường hợp bắt đầu trong khoảng 1/5/1967 tới 1/11/1967,</li>
     <li>1 bắt đầu vào 1/12/1968,</li>
-    <li>22 bắt đầu trong khoảng 1/5/1971 tới 1/2/1973. Chú ý rằng S&amp;P500 lỗ 25,2% trong 3 tháng 7-9 1974.</li>
+    <li>22 bắt đầu trong khoảng 1/5/1971 tới 1/2/1973. Chú ý rằng S&amp;P500 lỗ 25,2% trong ba tháng 7-9 1974.</li>
   </ul>
   <p>Trong 22 trường hợp có dính đến 1974 mà cách đầu tư ngay một cục bị lỗ, DCA-36:</p>
   <ul>
-    <li>không giúp nhiều trong 8 trường hợp đầu (lỗ nhiều hơn trong 6 trường hợp, lời hơn 0,2% và 2,1% trong 2 trường hợp),</li>
-    <li>lời hơn 7,7% tới 18,4% trong 8 trường hợp tiếp theo,</li>
-    <li>lời hơn 20,8% tới 27,5% trong 6 trường hợp cuối.</li>
+    <li>không giúp nhiều trong tám trường hợp đầu (lỗ nhiều hơn trong sáu trường hợp, lời hơn 0,2% và 2,1% trong hai trường hợp),</li>
+    <li>lời hơn 7,7% tới 18,4% trong tám trường hợp tiếp theo,</li>
+    <li>lời hơn 20,8% tới 27,5% trong sáu trường hợp cuối.</li>
   </ul>
   <p>Vậy đây không phải là một cách bảo vệ hiệu quả, xét rằng phải tốn 7,4% số tiền, 14 trong 16 trường hợp lời hơn có liên quan đến mùa hè 1974, hai trường hợp kia thì cách đưa ngay một cục tiền chỉ lỗ có 3,33% và 3,97%. Nói cách khác hiệu quả của DCA-36 để bảo vệ trường hợp lỗ như mùa hè 1974 thì thấp, và không có ích trong những trường hợp khác.
-  <br>Vấn đề chính còn là DCA-36 không làm tốt điều mà người ta mong muốn: nếu bạn dùng DCA-36 và thị trường đột ngột giảm sâu trong 3 hoặc 6 tháng đầu, bạn hả hê nhìn những người đã đưa hết cục tiền vào bị lỗ 15% trong khi bạn không lỗ. Trong 30 tháng kế, bạn từ từ đưa từng khoản tiền nhỏ vào trong khi những người đã đưa ngay một cục tiền vào bắt đầu lời. Rồi khi bạn vừa đưa hết tiền vào, thị trường lại đi xuống. Như vậy có tốt không?</p>
-  <p>Sự việc hoàn toàn khác khi dùng DCA-6. Tôi xem xét 523 chu kỳ 6 tháng trong 44 năm đó. Cách đưa ngay một cục tiền chỉ tốt hơn có 1,11% so với DCA-6. DCA-6 tốt hơn cách đưa ngay một cục tiền trong 199/523 trường hợp. Còn nữa, ta xét đến rủi ro lỗ lớn.
+  <br>Vấn đề chính còn là DCA-36 không làm tốt điều mà người ta mong muốn: nếu bạn dùng DCA-36 và thị trường đột ngột giảm sâu trong ba hoặc sáu tháng đầu, bạn hả hê nhìn những người đã đưa hết cục tiền vào bị lỗ 15% trong khi bạn không lỗ. Trong 30 tháng kế, bạn từ từ đưa từng khoản tiền nhỏ vào trong khi những người đã đưa ngay một cục tiền vào bắt đầu lời. Rồi khi bạn vừa đưa hết tiền vào, thị trường lại đi xuống. Như vậy có tốt không?</p>
+  <p>Sự việc hoàn toàn khác khi dùng DCA-6. Tôi xem xét 523 chu kỳ sáu tháng trong 44 năm đó. Cách đưa ngay một cục tiền chỉ tốt hơn có 1,11% so với DCA-6. DCA-6 tốt hơn cách đưa ngay một cục tiền trong 199/523 trường hợp. Còn nữa, ta xét đến rủi ro lỗ lớn.
   <br>Có 143 trường hợp cách đưa ngay một cục tiền bị lỗ. Chúng ta muốn có cách đầu tư tốt hơn trong 143 trường hợp đó. Trong 122/143 trường hợp DCA-6 cho kết quả tốt hơn. Chỉ có 56/523 trường hợp DCA cho kết quả tốt hơn 5% so với cách đưa ngay một cục tiền, nhưng 55 trong số đó thì cách đưa ngay một cục tiền bị lỗ. Như vậy DCA-6 giúp ích nhất ở những chỗ người ta cần nhất.
   <br>Trong 32 trường hợp mà cách đưa ngay một cục tiền bị lỗ hơn 10%, DCA-6 cho kết quả tốt hơn trong 30 trường hợp, 26 lần tốt nhiều hơn 5%.
-  <br>Trong 3 trường hợp mà cách đưa ngay một cục tiền lỗ hơn 20% thì DCA-6 tốt hơn 6% tới 11%.</p>
+  <br>Trong ba trường hợp mà cách đưa ngay một cục tiền lỗ hơn 20% thì DCA-6 tốt hơn 6% tới 11%.</p>
 
 
   <h2>Kết luận</h2>
-  <p>DCA-6 giúp đáng kể trong việc tránh lỗ khi đưa ngay một cục tiền vào TTCK rồi lỗ mất hơn 10% trong 6 tháng, có một chi phí nhỏ là 1,11%. Tuy nhiên chỉ có 15 trường hợp DCA-6 tốt hơn từ 10% trở lên so với cách đưa ngay một cục tiền, và trường hợp tốt nhất chỉ hơn 19,9%, bạn đã phải trả 1,11% chi phí để bảo vệ trong 3% số trường hợp. Kết quả không thật xuất sắc.</p>
+  <p>DCA-6 giúp đáng kể trong việc tránh lỗ khi đưa ngay một cục tiền vào TTCK rồi lỗ mất hơn 10% trong sáu tháng, có một chi phí nhỏ là 1,11%. Tuy nhiên chỉ có 15 trường hợp DCA-6 tốt hơn từ 10% trở lên so với cách đưa ngay một cục tiền, và trường hợp tốt nhất chỉ hơn 19,9%, bạn đã phải trả 1,11% chi phí để bảo vệ trong 3% số trường hợp. Kết quả không thật xuất sắc.</p>
   <p>Trong trường hợp DCA-12 thì khá hơn. Cách đưa ngay một cục tiền lỗ trong 114 trường hợp và DCA-12 khá hơn cách đưa ngay một cục tiền trong 100/114 trường hợp, 64 lần khá hơn 5%, một số lần còn hơn 20%.
   <br>Có 40 lần cách đưa ngay một cục tiền lỗ hơn 10%, DCA-12 khá hơn 39/40 trường hợp. Một nhược điểm là dùng DCA-12 tốn trung bình 2,5%, nghĩa là bạn sẽ bớt lỗ khi cách đưa ngay một cục tiền bị lỗ và bớt lời khi cách đưa ngay một cục tiền được lời. Đó chính là mục đích của DCA.</p>
   <p>Vì tôi đã định nghĩa hiệu quả là khi DCA hơn cách đưa ngay một cục tiền tối thiểu 5% trong những trường hợp mà cách đó lỗ, chúng ta thấy:</p>
@@ -292,9 +292,9 @@ data-ad-slot="5275186684">
   </ul>
   <p>Như vậy DCA-12 cho số trường hợp hiệu quả cao nhất, DCA-6 thì ít tốn kém hơn và cho số trường hợp hiệu quả cao thứ hai.</p>
   <p><u>Chú ý 1</u>: Những kết quả này dẫn đến một điều rằng thời điểm tốt nhất cho những người DCA theo quý là lần chuyển tiền cuối cùng nên làm sau lần đầu 6-12 tháng. Như vậy sẽ có 3-5 lần chuyển tiền cách nhau một quý.
-  <br><u>Chú ý 2</u>: Nếu bạn đưa tiền vào TTCK vài trăm đô la mỗi tháng, theo kiểu DCA bắt buộc, thì không trong phạm vi của bài này. Tôi thì thích gửi tiết kiệm ngắn hạn rồi mỗi 6 tháng chuyển hết sang TTCK, như vậy sẽ đỡ tốn công ghi sổ, nhưng cũng làm giảm lợi nhuận một chút.
+  <br><u>Chú ý 2</u>: Nếu bạn đưa tiền vào TTCK vài trăm đô la mỗi tháng, theo kiểu DCA bắt buộc, thì không trong phạm vi của bài này. Tôi thì thích gửi tiết kiệm ngắn hạn rồi mỗi sáu tháng chuyển hết sang TTCK, như vậy sẽ đỡ tốn công ghi sổ, nhưng cũng làm giảm lợi nhuận một chút.
   <br><u>Chú ý 3</u>: DCA chỉ có ích khi chuyển từ tiền hay trái phiếu sang cổ phiếu. Nếu bạn chuyển từ cổ phiếu này sang cổ phiếu khác thì DCA không ích gì.</p>
-  <p>Kết luận của tôi là DCA trong 6 tới 12 tháng là tốt nhất, và nếu chỉ chuyển không quá 5% tài sản (vì trong trường hợp xấu nhất chỉ lỗ chừng 1%). Nếu bạn chuyển 30% tài sản hay hơn từ tiền sang cổ phiếu, bạn có thể làm dài hơn nhưng đừng dài hơn 18 tháng.</p>
+  <p>Kết luận của tôi là DCA trong sáu tới 12 tháng là tốt nhất, và nếu chỉ chuyển không quá 5% tài sản (vì trong trường hợp xấu nhất chỉ lỗ chừng 1%). Nếu bạn chuyển 30% tài sản hay hơn từ tiền sang cổ phiếu, bạn có thể làm dài hơn nhưng đừng dài hơn 18 tháng.</p>
 
   <div class="todiscuss">
   Các bài liên quan:
@@ -320,9 +320,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -351,6 +352,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
