--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -228,7 +228,7 @@ data-ad-slot="5275186684">
   <h2>Quỹ đầu tư là gì?</h2>
   <p>Để trả lời cho câu hỏi đó thì phải tìm hiểu một vài khái niệm kinh tế tài chính là <i>trái phiếu, cổ phiếu, thị trường chứng khoán</i>.</p>
   <p><a href="http://vi.wikipedia.org/wiki/Trái_phiếu" target="_blank">Trái phiếu</a> là giấy xác nhận nợ. Khi ta sở hữu trái phiếu thì ta có quyền nhận lại tiền vốn và lãi từ bên vay nợ. Lãi suất của trái phiếu được qui định rõ, có thể là lãi suất cố định suốt thời hạn trái phiếu, hoặc thay đổi theo một số tham chiếu nào đó.
-  <br>Bên vay nợ hay là bên phát hành trái phiếu có thể là chính phủ trung ương, chính quyền địa phương, doanh nghiệp. Thời hạn của trái phiếu từ 1 năm đến hơn 5 năm.
+  <br>Bên vay nợ hay là bên phát hành trái phiếu có thể là chính phủ trung ương, chính quyền địa phương, doanh nghiệp. Thời hạn của trái phiếu từ một năm đến hơn năm năm.
   <br>Người sở hữu trái phiếu có thể đem bán trái phiếu khi nó chưa đến hạn để lấy tiền, giá bán có thể cao hơn hay thấp hơn số vốn gốc ghi trên trái phiếu.
   <br>Về mặt nào đó thì trái phiếu có những điểm tương tự như sổ tiết kiệm có kỳ hạn. Sổ tiết kiệm có kỳ hạn là giấy xác nhận ngân hàng nợ khách hàng một món tiền với lãi suất đã ghi.</p>
   <p><a href="http://vi.wikipedia.org/wiki/Cổ_phiếu" target="_blank">Cổ phiếu</a> là giấy xác nhận quyền sở hữu một phần công ty, cũng có nghĩa là góp vốn vào công ty.
@@ -242,7 +242,7 @@ data-ad-slot="5275186684">
   <p><b>Quỹ đầu tư</b> là một cách <a href="../cach-dau-tu">đầu tư gián tiếp</a>. Quỹ đầu tư là một tổ chức sinh lợi bằng cách đầu tư vào trái phiếu và các doanh nghiệp (đã niêm yết trên thị trường chứng khoán hoặc chưa). Việc chọn đầu tư vào ngành nào, công ty nào phải tuân theo điều lệ của quỹ. Vốn của quỹ đầu tư được các nhà đầu tư góp vào. Vốn được chia thành các đơn vị gọi là đơn vị quỹ, giá ban đầu của một đơn vị quỹ ở Việt Nam là 10.000VND, giá đơn vị quỹ sẽ tăng giảm trong thời gian hoạt động của quỹ.
   <br>Nói theo một cách khác thì quỹ đầu tư là một hình thức đưa tiền cho công ty quản lý quỹ sinh lời giùm cho mình, đổi lại thì công ty quản lý quỹ được trả công trên số tiền họ quản lý (khoảng 1-2%/năm). Công ty quản lý quỹ không cam kết sẽ lời được bao nhiêu, họ chỉ cố gắng làm tốt nhất. Khi công ty quản lý quỹ làm tốt, sinh lời nhiều thì nhiều người gửi tiền vào thì tiền công họ được nhiều hơn. Nhưng công ty quản lý quỹ không thể tránh khỏi có những lúc giá trị của quỹ giảm trong ngắn hạn.</p>
   <p>Mua một đơn vị quỹ cũng giống như mua một ít vàng cất vào trong tủ. Trong khi gửi tiền vào ngân hàng thì nó đẻ ra tiền lời, một lượng vàng để trong tủ không sinh ra thêm chỉ vàng nào cả, đơn vị quỹ cũng không sinh ra đơn vị quỹ khác. Mua vàng có lợi nhờ giá vàng có thể tăng sau một thời gian (nhưng cũng có thể giảm). Mua đơn vị quỹ cũng vậy, trong dài hạn giá đơn vị quỹ có thể tăng nhanh hơn mức lạm phát.
-  <br>Quỹ đầu tư chuyên vào trái phiếu thì rất ổn định về giá: giá tăng đều. Quỹ đầu tư vào cổ phiếu thì có giá tăng nhanh nhưng không ổn định, có lúc tăng có lúc giảm. Với đặc tính của hai mục tiêu đầu tư như vậy, nhà đầu tư nên chọn quỹ đầu tư trái phiếu cho những khoản tiền sắp dùng đến trong vòng 6 đến 60 tháng tới, và chọn quỹ đầu tư cổ phiếu cho những khoản tiền để lâu hơn 5 năm.</p>
+  <br>Quỹ đầu tư chuyên vào trái phiếu thì rất ổn định về giá: giá tăng đều. Quỹ đầu tư vào cổ phiếu thì có giá tăng nhanh nhưng không ổn định, có lúc tăng có lúc giảm. Với đặc tính của hai mục tiêu đầu tư như vậy, nhà đầu tư nên chọn quỹ đầu tư trái phiếu cho những khoản tiền sắp dùng đến trong vòng nửa năm đến năm năm tới, và chọn quỹ đầu tư cổ phiếu cho những khoản tiền để lâu hơn năm năm.</p>
 
 
   <h2>Phân loại</h2>
@@ -297,21 +297,24 @@ data-ad-slot="5275186684">
     <li>quỹ đầu tư vào cổ phiếu,</li>
     <li>quỹ cân bằng: đầu tư vào cả trái phiếu và cổ phiếu theo một tỉ lệ định trước.</li>
   </ul>
-  <p>Giá của đơn vị quỹ đầu tư trái phiếu tăng ổn định, hơi cao hơn lãi suất tiết kiệm dài hạn ở các ngân hàng. Ưu điểm của quỹ đầu tư trái phiếu so với ngân hàng là được lợi nhuận cao hơn và không cần chờ đến hạn để rút tiền. Quỹ đầu tư trái phiếu có thể đem lại lợi nhuận cao hơn gửi tiết kiệm ở ngân hàng nhờ ưu thế về số vốn lớn: với số vốn hàng trăm tỉ đồng có thể mua trái phiếu kỳ hạn dài đến 10 năm với lãi suất cao hơn kỳ hạn 1 năm. Quỹ mua trái phiếu kỳ hạn dài nhưng luôn luôn có sẵn một phần tiền để mua lại đơn vị quỹ từ nhà đầu tư, nên nhà đầu tư có thể được hưởng lãi cao mà không phải để tiền kỳ hạn dài.
+  <p>Giá của đơn vị quỹ đầu tư trái phiếu tăng ổn định, hơi cao hơn lãi suất tiết kiệm dài hạn ở các ngân hàng. Ưu điểm của quỹ đầu tư trái phiếu so với ngân hàng là được lợi nhuận cao hơn và không cần chờ đến hạn để rút tiền. Quỹ đầu tư trái phiếu có thể đem lại lợi nhuận cao hơn gửi tiết kiệm ở ngân hàng nhờ ưu thế về số vốn lớn: với số vốn hàng trăm tỉ đồng có thể mua trái phiếu kỳ hạn dài đến 10 năm với lãi suất cao hơn kỳ hạn một năm. Quỹ mua trái phiếu kỳ hạn dài nhưng luôn luôn có sẵn một phần tiền để mua lại đơn vị quỹ từ nhà đầu tư, nên nhà đầu tư có thể được hưởng lãi cao mà không phải để tiền kỳ hạn dài.
   <br>Giá của đơn vị quỹ đầu tư cổ phiếu tăng giảm không ổn định nhưng lợi nhuận trong dài hạn sẽ tốt hơn quỹ đầu tư trái phiếu. Giá đơn vị quỹ cân bằng cũng tăng giảm nhưng với biên độ nhỏ hơn giá đơn vị quỹ đầu tư cổ phiếu. Đây là bài so sánh lợi nhuận giữa <a href="so-tk-hay-dau-tu">các phương tiện đầu tư khác nhau</a>.
   <br>Do tính chất trên, chúng ta tối đa hoá lợi nhuận của tiền để dành như sau:</p>
   <ol>
-    <li>những khoản chưa dùng đến trong dài hạn, trên 5 năm, để vào quỹ đầu tư cổ phiếu hoặc quỹ cân bằng</li>
-    <li>những khoản sẽ dùng đến trong khoảng từ 6 tháng đến 5 năm, để vào quỹ đầu tư trái phiếu</li>
-    <li>những khoản sắp dùng đến trong vòng 6 tháng, gửi tiết kiệm kỳ hạn ngắn ở ngân hàng</li>
+    <li>những khoản chưa dùng đến trong dài hạn, trên năm năm, để vào quỹ đầu tư cổ phiếu hoặc quỹ cân bằng</li>
+    <li>những khoản sẽ dùng đến trong khoảng từ nửa năm đến năm năm, để vào quỹ đầu tư trái phiếu</li>
+    <li>những khoản sắp dùng đến trong vòng nửa năm, gửi tiết kiệm kỳ hạn ngắn ở ngân hàng</li>
     <li>khi số tiền trong ngân hàng giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư trái phiếu cho vào ngân hàng</li>
     <li>khi số tiền trong quỹ đầu tư trái phiếu giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư cổ phiếu sang quỹ đầu tư trái phiếu, nên chuyển vào thời điểm giá cổ phiếu đang cao sẽ có lợi hơn</a>
   </ol>
   <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
   <p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu">lợi nhuận thường cao hơn gửi tiết kiệm ở ngân hàng</a>, lại không tốn thời giờ tìm hiểu, phân tích số liệu tài chính của các doanh nghiệp vì đã có nhóm chuyên gia được thuê để làm việc chuyên môn đó.
-  <br>Quỹ mở rất thích hợp cho những người không có nhiều thời gian giao dịch: giáo viên, bác sĩ, kỹ sư, công nhân… Không cần lên sàn đặt lệnh mua, chỉ cần mỗi tháng dành ra một ít tiền, gọi người đến chuyển vào quỹ một cách an toàn và tiện lợi. Mua đơn vị quỹ tiện hơn mua vàng nhiều, chỉ cần 1 triệu đồng là có thể mua được, trong khi mua vàng SJC cần vài chục triệu đồng. Như vậy mỗi tháng đều có thể chuyển tiền thành đơn vị quỹ, không phải để tiền nằm chờ gom đủ số mới chuyển thành vàng.
+  <br>Quỹ mở rất thích hợp cho những người không có nhiều thời gian giao dịch: giáo viên, bác sĩ, kỹ sư, công nhân… Không cần lên sàn đặt lệnh mua, chỉ cần mỗi tháng dành ra một ít tiền, gọi người đến chuyển vào quỹ một cách an toàn và tiện lợi. Mua đơn vị quỹ tiện hơn mua vàng nhiều, chỉ cần một trăm ngàn đồng là có thể mua được, trong khi mua vàng SJC cần vài chục triệu đồng. Như vậy mỗi tháng đều có thể chuyển tiền thành đơn vị quỹ, không phải để tiền nằm chờ gom đủ số mới chuyển thành vàng.
   <br>Dịch vụ quỹ đầu tư mở rất được nhiều người ở các nước công nghiệp hoá dùng để <a href="../tich-luy">tích luỹ</a> tiền thay vì gửi tiết kiệm ở ngân hàng, xem <a href="http://en.wikipedia.org/wiki/Mutual_fund" target='_blank'>Mutual fund</a>.
-  <br>Cho tới cuối năm 2012, ở Việt Nam có hai bộ quỹ mở là Maxx - Phúc Lộc Thịnh Vượng của Manulife và PRUlink của Prudential. Trong năm 2013, một số quỹ đóng đã chuyển thành quỹ mở như VFMVFA, VFMVF1, và một số quỹ mở mới được thành lập. Tháng 10 năm 2017, Manulife đã cải tiến bộ quỹ mở Maxx - Phúc Lộc Thịnh Vượng thành Điểm Tựa Đầu Tư với nhiều ưu điểm.</p>
+<!--  
+  <br>Cho tới cuối năm 2012, ở Việt Nam có hai bộ quỹ mở là Maxx - Phúc Lộc Thịnh Vượng của Manulife và PRUlink của Prudential. Trong năm 2013, một số quỹ đóng đã chuyển thành quỹ mở như VFMVFA, VFMVF1, và một số quỹ mở mới được thành lập. Tháng 10 năm 2017, Manulife đã cải tiến bộ quỹ mở Maxx - Phúc Lộc Thịnh Vượng thành Điểm Tựa Đầu Tư với nhiều ưu điểm.
+-->
+  </p>
   <p>Tiền của nhà đầu tư trong quỹ đầu tư được kiểm soát rất chặt chẽ:</p>
   <ol>
     <li>Công ty quản lý quỹ chỉ phân tích thị trường và ra quyết định mua bán cổ phiếu hay trái phiếu vào lúc thích hợp</li>
@@ -329,7 +332,7 @@ data-ad-slot="5275186684">
   <br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>.</p>
   <p>Quỹ đầu tư không dùng vốn vay nên không bị rơi vào vòng xoáy lỗ sạch vốn như đầu cơ cổ phiếu (xem <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
   <p>Quỹ đầu tư sẽ tăng giá và cho kết quả lời cao trong dài hạn, nhưng có vài giai đoạn ngắn giảm giá. Do đó rủi ro duy nhất của quỹ đầu tư là rủi ro ngắn hạn, cách đối phó với rủi ro đó là để tiền trong quỹ đủ lâu như đã ghi ở trên.
-  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 17,64%/năm
+  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 18,17%/năm <!-- DCDS!J2 -->
 .</p>
 
   <p><span class="red"><b>Chú ý</b></span>: trong những năm 2013-2014, rất nhiều người hay công ty chuyên đầu cơ ngoại tệ và vàng đã lừa gạt người khác bằng cách xưng là quỹ đầu tư, công ty vàng bạc đá quý, đầu tư uỷ thác… Hãy xem thêm bài viết về <a href="../cach-dau-tu">các cách đầu tư</a>.</p>
@@ -358,9 +361,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -389,6 +393,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
