--- a/huu-ich/ke-hoach-tai-chinh/huu-tri.html
+++ b/huu-ich/ke-hoach-tai-chinh/huu-tri.html
@@ -229,13 +229,13 @@ data-ad-slot="5275186684">
   </div>
 
   <h1>Tính Quỹ Hưu trí</h1>
-<p><a href="thu-chi">Bước 1 ở trên</a> đã tính được chi
+<p><a href="thu-chi">Bước một ở trên</a> đã tính được chi
 tiêu hàng năm hiện nay trong ô H31 trang Thu-chi, bây giờ mở trang Hưu-trí của <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">bảng tính</a>. Mục đích của phép tính này là tính số tiền cần có khi về hưu để bạn có một mức sống tương đương với mức sống hiện nay, vì lý do trượt giá nên số tiền dùng hàng tháng khi về hưu sẽ lớn hơn số tiền bạn dùng hiện nay.<br />
 Khi về hưu, sẽ có những khoản chi ít hơn hiện nay (ví dụ như bớt khoản chăm sóc con) và có thể phát sinh những khoản chi mới (ví dụ như chi tiêu chữa bệnh), hãy chọn một hệ số, ghi vào ô B2 làm tỉ lệ giữa chi tiêu lúc về hưu và chi tiêu hiện nay. Tỉ lệ B2 này phụ thuộc vào việc bạn đang ở trong <a href="../cac-giai-doan">giai đoạn nào của cuộc đời</a>. Ô B3 là chi tiêu hàng năm hiện nay nhân với hệ số đã chọn, chia cho 12, đây là mức chi tiêu hàng tháng dự kiến khi về hưu nhưng tính theo mức giá hiện nay.</p>
 <blockquote>
 <u>Gợi ý</u>: nếu bạn chưa lập gia đình hoặc mới lập gia đình thì B2 khoảng 1,5, nếu bạn đang nuôi con thì B2 khoảng 0,7, nếu con bạn đã trưởng thành thì B2 khoảng 1,1.
 </blockquote>
-<p>Nếu bạn đã bỏ qua bước 1 trong trang Thu-chi thì bạn nhập con số chi tiêu hàng tháng gần đúng hiện nay nhân với B2 vào ô B3.</p>
+<p>Nếu bạn đã bỏ qua bước một trong trang Thu-chi thì bạn nhập con số chi tiêu hàng tháng gần đúng hiện nay nhân với B2 vào ô B3.</p>
 <p>Ghi tuổi hiện nay, lãi suất hiện nay, trượt giá ước tính từ
 năm nay cho đến khi về hưu, số tiền/tài sản hiện đã để dành được cho quỹ hưu trí vào các ô B4,
 B5, B6, B7 trang Hưu trí. Nếu bạn <a href="../de-tien-vao-dau">để quỹ hưu trí dưới nhiều dạng khác nhau</a> thì lãi suất là trung bình có hệ số của tất cả các lãi suất. Lựa chọn <a href="../dau-tu-co-phieu/quy-dau-tu">công cụ để tiền dài hạn</a> tốt bạn sẽ có được <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">lãi suất cao hơn gửi tiết kiệm ở ngân hàng</a>.</p>
@@ -292,9 +292,10 @@ Hai ô B27 và B28 để ghi số tháng <b>đã</b> đóng BHXH và tổng số
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -323,6 +324,7 @@ Hai ô B27 và B28 để ghi số tháng <b>đã</b> đóng BHXH và tổng số
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
