--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -257,8 +257,8 @@ data-ad-slot="5275186684">
   <p>Trong cuộc đời mỗi người, mỗi gia đình đều có những lúc dùng đến một món tiền lớn. Những món tiền cần có đó lớn đến mức bất ngờ nhưng ít người để ý đến nó, như là tiền cho con học đại học tốt để bước vững chắc vào đời, tiền để sống khi về già… Nếu không có kế hoạch chuẩn bị những món tiền đó, gia đình sẽ lâm vào cảnh thiếu hụt, cuộc sống không ổn định.
   <br style="clear:both">Rất nhiều người chưa hề nghĩ đến việc tiết kiệm đều đặn; có bao nhiêu tiền dùng hết bấy nhiêu; thậm chí dùng nhiều hơn số tiền có trong túi nên thường xuyên túng thiếu trước ngày lãnh lương.
   <br>Một số ít người có khá hơn: có tháng dư tiền, có tháng hết tiền; số tiền dư đó không biết để làm gì nên thỉnh thoảng đổi điện thoại, đổi xe cho hết tiền. Sống như vậy tuy trước mắt không túng thiếu như trên nhưng sẽ gặp khó khăn khi về già sau 25-30 năm.
-  <br>Rất ít người có kế hoạch để dành tiền ngắn hạn, ví dụ như năm nay phải để dành được 50 triệu, hoặc 5 năm nữa có 300 triệu để đặt tiền mua nhà trả góp…
-  <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để 1 tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi. Người ta thường bối rối trước những kế hoạch dài hạn như vậy vì thời gian quá dài, lạm phát, lãi suất thay đổi…
+  <br>Rất ít người có kế hoạch để dành tiền ngắn hạn, ví dụ như năm nay phải để dành được 50 triệu, hoặc năm năm nữa có 300 triệu để đặt tiền mua nhà trả góp…
+  <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để một tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi. Người ta thường bối rối trước những kế hoạch dài hạn như vậy vì thời gian quá dài, lạm phát, lãi suất thay đổi…
   <br>Không có kế hoạch tài chính dài hạn thì người ta sẽ không biết bao giờ sẽ dùng số tiền đang có, và sẽ không dám đem số tiền đó <a href="../tich-luy-dai-han">đầu tư dài hạn để được lợi nhuận cao</a>.</p>
   <p>Trang web này giúp mọi người giải quyết những khó khăn đó, tính ra một kế hoạch để biến những món tiền nhỏ mỗi ngày thành những món tiền rất lớn.
   <br>Lập kế hoạch tài chính từ sớm để <b>chắc chắn</b> có đủ tiền sống đến hết đời.</p>
@@ -297,9 +297,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -328,6 +329,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
