--- a/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
@@ -190,8 +190,8 @@ khi bạn cần biết phải để dành bao lâu để có đủ số
 tiền cần thiết cho việc mua TV, xe, nhà hay thứ gì khác.
 Ví dụ như bạn muốn mua xe hơi giá 500 triệu đồng, và
 bạn đã có 100 triệu đồng, mỗi tháng bạn để dành
-được 5 triệu đồng, với lãi suất tiết kiệm hiện
-nay 14%/năm thì sau 4 năm bạn sẽ có đủ 500 triệu đồng.</p>
+được năm triệu đồng, với lãi suất tiết kiệm hiện
+nay 14%/năm thì sau bốn năm bạn sẽ có đủ 500 triệu đồng.</p>
 <p>Gõ số tiền bạn đã có vào ô
 B3, số tiền cần có vào ô B4, số tiền để dành được
 mỗi tháng vào ô B5, lãi suất tiết kiệm vào ô B6. Chương
@@ -217,9 +217,10 @@ tháng bạn phải trả góp bao nhiêu tiền nợ.</p>
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -248,6 +249,7 @@ tháng bạn phải trả góp bao nhiêu tiền nợ.</p>
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
