--- a/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html
+++ b/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html
@@ -225,11 +225,11 @@ data-ad-slot="5275186684">
   </div>
 
   <h1>Ghi dấu thanh trong chữ Việt</h1>
-  <p>Trong chữ viết Việt, dấu thanh được đặt trên nguyên âm. Nếu một từ có nhiều hơn 1 nguyên âm thì phải đặt dấu thanh ở nguyên âm nào?</p>
+  <p>Trong chữ viết Việt, dấu thanh được đặt trên nguyên âm. Nếu một từ có nhiều hơn một nguyên âm thì phải đặt dấu thanh ở nguyên âm nào?</p>
   <p><b><u>Quy tắc</u></b>:</p>
   <ol>
     <li>Nếu nguyên âm cuối là nguyên âm thuần Việt (<b>Ă, Â, Ê, Ô, Ơ</b>) đặt dấu trên nguyên âm cuối.</li>
-    <li>Nếu 2 nguyên âm cuối là OA, OE, UY đặt dấu trên nguyên âm cuối. Sự khác nhau giữa 3 cặp nguyên âm này với các bộ nguyên âm trong trường hợp dưới đây là ở chỗ: có thể đặt thêm một phụ âm sau 3 cặp nguyên âm này.</li>
+    <li>Nếu hai nguyên âm cuối là OA, OE, UY đặt dấu trên nguyên âm cuối. Sự khác nhau giữa ba cặp nguyên âm này với các bộ nguyên âm trong trường hợp dưới đây là ở chỗ: có thể đặt thêm một phụ âm sau ba cặp nguyên âm này.</li>
     <li>Các trường hợp khác: đặt dấu trên nguyên âm kề cuối.</li>
     <li>Chú ý: không kể nguyên âm <b>i</b> trong <b>gi</b>, và <b>u</b> trong <b>qu</b>.</li>
   </ol>
@@ -258,9 +258,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -289,6 +290,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
