--- a/kinh-nghiem/chu-viet/utf-8.html
+++ b/kinh-nghiem/chu-viet/utf-8.html
@@ -227,7 +227,7 @@ data-ad-slot="5275186684">
   <h1>Chữ Việt và UTF-8</h1>
   <div class="right">Soạn lần đầu năm 2005</div>
   <p>Các trang web ở đây được viết theo bộ chữ Unicode với cách mã hoá UTF-8. <u>Chú ý</u>: Rất nhiều trang web Việt Nam cũng xưng là dùng bộ chữ Unicode và UTF-8 nhưng lại dùng bộ chữ 8-bit Windows-1252 (cho các nước Tây Âu), hoặc bộ chữ 8-bit Windows-1258 (bộ chữ Việt nam trên các máy MS Windows). Lý do là vì web được soạn bằng các chương trình chạy trên Windows.
-  <br>Tất nhiên là đã dùng 1 trong 2 bộ chữ 8-bit đó thì không thể dùng cách mã hoá UTF-8, mà cách mã hoá trong các trang web trên thường là <strong>HTML entities</strong> (ví dụ: <em>c&amp;aacute;ch thi&amp;#7871;t k&amp;#7871; ph&amp;#7847;n m&amp;#7873;m h&amp;#432;&amp;#7899;ng</em>). Ngoài ra, cũng có những trang web được viết theo bộ chữ Unicode nhưng mã hoá theo HTML entities.
+  <br>Tất nhiên là đã dùng một trong hai bộ chữ 8-bit đó thì không thể dùng cách mã hoá UTF-8, mà cách mã hoá trong các trang web trên thường là <strong>HTML entities</strong> (ví dụ: <em>c&amp;aacute;ch thi&amp;#7871;t k&amp;#7871; ph&amp;#7847;n m&amp;#7873;m h&amp;#432;&amp;#7899;ng</em>). Ngoài ra, cũng có những trang web được viết theo bộ chữ Unicode nhưng mã hoá theo HTML entities.
   <br>Với cách mã hoá HTML entities này, hầu như chúng ta không thể đọc-hiểu được file html gốc. Trong khi đó với cách mã hoá UTF-8, chúng ta đọc-hiểu được dễ dàng file html gốc, và khi cần có thể sửa file html bằng <strong>vi</strong> hoặc Windows' notepad.</p>
   <span class="tblue">Các web site chữ Việt dùng đúng UTF-8: lhboi.homelinux.net, mail.google.com, mail.yahoo.com, vnoss.org, eab.com.vn, www.bidv.com.vn, www.baoviet.com.vn, www.manulife.com.vn, vietnamnet.vn, www.nld.com.vn, www.thanhnien.com.vn, tuoitre.com.vn…</span>
   <p>Các web site chữ Việt dùng HTML entities: google.com, acb.com.vn, vnexpress.net, www.htv.com.vn</p>
@@ -249,9 +249,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -280,6 +281,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
