--- a/kinh-nghiem/may-tinh/cashflow.html
+++ b/kinh-nghiem/may-tinh/cashflow.html
@@ -227,7 +227,7 @@ data-ad-slot="5275186684">
   <h1>Trò chơi Cashflow</h1>
 <div class="inlineleft"><amp-img alt="Cashflow game set" height="110" src="/images/cashflowgamesg-board-101c509.jpg" width="200" height="110" layout="fixed"></amp-img></div>
 <p>Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau <a href="/huu-ich/chi-tieu">tự do tài chính</a>. Có thể chơi Cashflow với bộ trò chơi gồm xúc xắc, bảng in sẵn hoặc có thể chơi qua web. Chơi qua web thì đỡ tốn công ghi chép và cộng trừ.
-<br>Mỗi ván Cashflow trên web gồm 1 tới 6 bên, mỗi bên dùng một máy tính. Từ 10 tuổi trở lên là có thể chơi được. Nếu muốn vừa chơi vừa chat với nhau thì hẹn nhau cùng chơi online, người đầu tiên create game với password. những người tiếp theo join vào game để chơi. Nếu không thể hẹn được với bạn thì chơi một mình.</p>
+<br>Mỗi ván Cashflow trên web gồm một tới sáu bên, mỗi bên dùng một máy tính. Từ mười tuổi trở lên là có thể chơi được. Nếu muốn vừa chơi vừa chat với nhau thì hẹn nhau cùng chơi online, người đầu tiên create game với password. những người tiếp theo join vào game để chơi. Nếu không thể hẹn được với bạn thì chơi một mình.</p>
 
 
 <p>Mục tiêu của mỗi bên trong ván Cashflow là từ một người đi làm lãnh lương cố định trở nên có thu nhập thụ động cao để không phải đi làm mà có thể thực hiện ước mơ như đi du thuyền, mở trang trại… Thu nhập thụ động có được nhờ đầu tư vào bất động sản hay doanh nghiệp. Chú ý rằng không phải bất động sản nào cũng sinh ra thu nhập thụ động, có một số bất động sản còn sinh ra chi phí. Người chơi sẽ làm quen với các khái niệm thu nhập, chi tiêu, tài sản, nợ, dòng tiền, quỹ tiền mặt… <a href="/y-kien/su-giau-co">Sự giàu có</a> không phải là có một đống tiền để trong nhà mà là có một khoản thu nhập thụ động lớn hơn nhu cầu chi tiêu của gia đình. Để có thu nhập thụ động thì phải <a href="/huu-ich/cach-dau-tu">đầu tư</a>. Muốn có tiền đầu tư thì phải <a href="/y-kien/thanh-ngu-ve-tien">tiết kiệm</a>.</p>
@@ -266,9 +266,10 @@ Các bài liên quan:
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -297,6 +298,7 @@ Các bài liên quan:
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
