--- a/kinh-nghiem/may-tinh/conferencecall.html
+++ b/kinh-nghiem/may-tinh/conferencecall.html
@@ -227,12 +227,12 @@ data-ad-slot="5275186684">
   <h1>Conference Call</h1>
 
 <p>Điện thoại di động có một dịch vụ cộng thêm rất tiện cho cuộc sống và rất dễ dùng là điện thoại hội nghị (conference call).
-<p>Ví dụ khi A đang nói chuyện qua điện thoại với B và cả 2 cần nghe ý kiến của C, khi đó A hoặc B nói "chờ một chút để tui kêu C tới đây", rồi bấm Hold trên điện thoại (trên màn hình cảm ứng hoặc các nút điều khiển), và bấm nút New call rồi gọi số điện thoại của C (lấy từ sổ điện thoại trong máy hoặc bấm thẳng dãy số), khi C đã trả lời rồi thì bấm Conference hoặc Merge, thế là cả ba đều nói và nghe lẫn nhau.
+<p>Ví dụ khi A đang nói chuyện qua điện thoại với B và cả hai cần nghe ý kiến của C, khi đó A hoặc B nói "chờ một chút để tui kêu C tới đây", rồi bấm Hold trên điện thoại (trên màn hình cảm ứng hoặc các nút điều khiển), và bấm nút New call rồi gọi số điện thoại của C (lấy từ sổ điện thoại trong máy hoặc bấm thẳng dãy số), khi C đã trả lời rồi thì bấm Conference hoặc Merge, thế là cả ba đều nói và nghe lẫn nhau.
 <br>A, B, C có thể là người trong gia đình, bạn bè, đồng nghiệp, đối tác…
-<p>Hiện nay Viettel, Mobifone và Vinaphone đều có dịch vụ conference call, không cần đăng ký trước, chỉ trả cước cho mỗi cuộc gọi đi như cuộc gọi bình thường (ai gọi người đó trả). Có thể mở hội nghị cho 50 người cùng dự, trong đó mỗi người gọi đến tối đa 5 người.
+<p>Hiện nay Viettel, Mobifone và Vinaphone đều có dịch vụ conference call, không cần đăng ký trước, chỉ trả cước cho mỗi cuộc gọi đi như cuộc gọi bình thường (ai gọi người đó trả). Có thể mở hội nghị cho 50 người cùng dự, trong đó mỗi người gọi đến tối đa năm người.
 
 
-<p>Nếu có không quá 6 người dự hội nghị thì có thể để lần lượt người được gọi xong sẽ gọi thêm người nữa thành hình một chuỗi, hoặc để người gọi đầu tiên lần lượt gọi thêm mọi người vào thành hình cây một tầng. Nếu có nhiều hơn 6 người dự hội nghị thì phải định trước thứ tự gọi để lập thành hình cây nhiều tầng.
+<p>Nếu có không quá sáu người dự hội nghị thì có thể để lần lượt người được gọi xong sẽ gọi thêm người nữa thành hình một chuỗi, hoặc để người gọi đầu tiên lần lượt gọi thêm mọi người vào thành hình rẽ quạt. Nếu có nhiều hơn sáu người dự hội nghị thì phải định trước thứ tự gọi để lập thành hình cây nhiều tầng.
 <div><amp-img alt="Điện thoại hội nghị" src="/images/conferencecall.png" width="610" height="200" layout="responsive"></amp-img></div>
 <p>Người dùng số điện thoại cố định hoặc của hãng di động khác (không có dịch vụ conference call) cũng có thể được gọi vào hội nghị nhưng không thể gọi thêm người vào.
 <p>Nếu không dùng conference call khi cần nói chuyện nhiều bên thì phải lặp lại lời người này đến người khác, sẽ tốn nhiều thời giờ và tốn nhiều tiền cước điện thoại hơn và còn bị tam sao thất bổn nữa. Sẽ còn lợi hơn nữa khi sắp xếp để trong hội nghị dùng nhiều cuộc gọi nội mạng nhất, ít cuộc gọi liên mạng, và đăng ký trước các gói cước di động nội mạng.
@@ -258,9 +258,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -289,6 +290,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
