--- a/kinh-nghiem/may-tinh/roaming.html
+++ b/kinh-nghiem/may-tinh/roaming.html
@@ -236,7 +236,7 @@ Dịch vụ roaming quốc tế đó khá đắt tiền nên giới bình dân t
 </p>
 <blockquote>
 Vinaphone đã có các gói cước Roaming Data quốc tế giá rẻ <b>Rx</b>.
-Gói tiết kiệm nhất là R500: 500K₫/2GB không giới hạn thời gian. Nếu dùng không quá nhiều data trong chuyến đi trên 4 ngày thì R500 rẻ hơn thuê Wi-Fi du lịch với giá 130K₫/ngày.
+Gói tiết kiệm nhất là R500: 500K đồng được dùng hai GB không giới hạn thời gian. Nếu dùng không quá nhiều data trong chuyến đi trên bốn ngày thì R500 rẻ hơn thuê Wi-Fi du lịch với giá 130K đồng mỗi ngày.
 <br>Giá cước Roaming Data U125/U350 và Asean của Viettel còn rẻ hơn Vinaphone nữa.
 </blockquote>
 <p>
@@ -326,9 +326,10 @@ Tuy nhiên, có nhiều trường hợp chúng ta không thể nối dây Ethern
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -357,6 +358,7 @@ Tuy nhiên, có nhiều trường hợp chúng ta không thể nối dây Ethern
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
