--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -226,7 +226,7 @@ data-ad-slot="5275186684">
 
   <h1>Tạo tài khoản Google</h1>
 <p>Google là một phần quan trọng trong Internet hiện nay. Google cung cấp rất nhiều dịch vụ miễn phí trên Internet, như là: tìm, thư, chat, soạn-giữ-chia sẻ tài liệu-hình-âm thanh-video, sổ địa chỉ, lịch làm việc… Đặc biệt là với thiết bị di động Android thì hầu như bạn có mọi thông tin bên mình ở mọi nơi.</p>
-<p>Một dịch vụ miễn phí rất tốt của Google là Google Drive. Google Drive cho phép tạo ra, upload, sửa, chia sẻ tới 15GB các loại file văn bản, bảng tính, trình bày, pdf, hình, âm thanh… Thay vì gửi file cho đối tác xem, bạn có thể để file trong Google Drive và gửi link cho đối tác. Bạn cũng có thể cho phép đối tác sửa vào file, có thể xem lại các bản cũ hơn của file… Công cụ <a href="/huu-ich/ke-hoach-tai-chinh/" target="_blank">Kế hoạch tài chính</a> được soạn để dùng với Google Drive.
+<p>Một dịch vụ miễn phí rất tốt của Google là Google Drive. Google Drive cho phép tạo ra, upload, sửa, chia sẻ tới 15 GB các loại file văn bản, bảng tính, trình bày, pdf, hình, âm thanh… Thay vì gửi file cho đối tác xem, bạn có thể để file trong Google Drive và gửi link cho đối tác. Bạn cũng có thể cho phép đối tác sửa vào file, có thể xem lại các bản cũ hơn của file… Công cụ <a href="/huu-ich/ke-hoach-tai-chinh/" target="_blank">Kế hoạch tài chính</a> được soạn để dùng với Google Drive.
 <br>Để dùng Google Drive và nhiều dịch vụ khác của Google, bạn cần một tài khoản Google. Thông thường tài khoản Google được tạo ra khi bạn dùng GMail lần đầu. Nếu bạn đang dùng và hài lòng với một dịch vụ thư khác, ví dụ như Yahoo, bạn không muốn có thêm một hộp thư trong GMail, bạn vẫn có thể có một tài khoản Google gắn với hộp thư điện tử đang dùng. Sau đây là cách tạo tài khoản Google gắn với hộp thư Yahoo.</p>
 <h2>Bước 1: Đăng ký</h2>
 <p>Mở trang web www.google.com trong web browser (Chrome, Firefox, Internet Explorer, Safari), bạn sẽ thấy tương tự như hình 1</p>
@@ -273,9 +273,10 @@ data-ad-slot="5275186684">
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -304,6 +305,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
