--- a/sitemap.html
+++ b/sitemap.html
@@ -235,6 +235,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
       <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a><br>
       <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a><br>
+      <a href='/kinh-nghiem/linh-tinh/nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a><br>
       <a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a><br>
       <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
       <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
